--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/03.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/03.md
@@ -3,71 +3,206 @@ title = "03 सर्गः-3"
 
 +++
 अथ जगन्ति बभूवुरनाविलान्यतिमिरा हरितः प्रचकाशिरे।   
-अभजदेव निशा दिवसश्रियं जननभाजिनि देवदिवाकरे ।।ननृतुरप्सरसो दिवि नन्दिताः किमपि गीतमगीयत किन्नरैः ।   
-श्रुतिसुखैः समतोषयत स्वनैरमरदुन्दुभिरानकदुन्दुभिम् ।।दशसु तत्र दिशास्वशरीरिणी जयजयेति बभूव सरस्वती ।   
-अजितमेकमगोचरयत् स्वयं स्वरसवृत्तिरसावसुरान्तकम् ।।अनतिवेलसमीरणचोदितैः शिशिरशीकरशीभरिताम्बरैः।   
-जलधरैरभितो दिवि दध्वने सुरगजैरिव सूचितमङ्गलैः ।।ववुरथो मरुतस्त्रिदशाङ्गनावदनसौरभसारभृतः शुभाः ।   
-मुदितनिर्जरमुक्तसुरद्रुमप्रसववृष्टिमधुद्रवमेदुराः ।।मधुरिपोरवतारमहोत्सवे मुमुदिरे मधुरापुरदेवताः।   
-यदभिगन्तरि भक्तजने वरं ददुरशेषमतन्द्रितचेतसः।।अवदधीनधियो मुनयस्तदा यदनधीतमधीतवदञ्जसा।   
-निगमजातमशेषमवेक्ष्य तन्निरविशन्निव मुक्तिमयीं दशाम् ।।प्रसदनं शरदागमसंभवं नभसि मासि मदीभिरुपाददे ।   
-महितयोगविदां मतिभिः समं श्रुतिभिरग्यनुपप्लवनीतिभिः ।।निखिलचेतनमानसनिःसृताः कलुषताः समुदे (पे) त्य किल क्षणात्।   
-विविशुरम्भ इव स्वयमापगाः जलनिधेरिव भोजपतेर्मनः ।।असुरवीरगृहाणि पृथग्विधैरशुभशंसिभिरानशिरे मुहुः।   
-अमरराजपुरेषु जजृम्भिरे शुभनिमित्तशतानि पुनः पुनः ।।चरमतश्च ऋणादिव देवकीपतिरमुच्यत शृङ्खलतः स्थिरात् ।   
-निखिलबन्धनिवर्तकसंनिधौ विगलनं निगलस्य किमद्भुतम् ।।उदितमात्मनि देवकसंभवा दनुजभेदनमङ्कगतं दधौ ।   
-कमपि काञ्चनभूभृदधित्यका हरिहयोपलशृङ्गमिवाद्भुतम् ।।विधृतशङ्खरथाङ्गगदाम्बुजः शबलितः शुभया वनमालया ।   
-पितुरसूत मुदं पृथुकस्तदा जलधिडिम्भनिभो जननीधृतः ।।पितरमब्जभुवामनपायिनं प्रियतमाङ्कगतं परिपश्यता ।   
-स विभुरानकदुन्दुभिना महान् अवितथैः स्वगुणैरभितुष्टुवे ।।प्रणिपतामि भवन्तमनन्यधीरखिलकारणमाश्रिततारणम् ।   
-अनुगमादनिदम्प्रथमा गिरः किमपि यत्पदमेकमधीयते ।।विषमकर्मविपाकपरम्पराविवशवृत्तिषु देहिषु दुस्तरम्।   
-करुणया तव देव कटाक्षिताः कतिचिदेव तरन्ति भवार्णवम् ।।त्वदनुभावमहोदधिशीकरैरवशपातिभिराहितशक्तयः।   
-अवधिभेदवतीमुपभुञ्जते स्वपदसंपदमब्जभवादयः ।।श्रुतिकिरीटशुभाश्रयविग्रहः परमसत्त्वनिधिः प्रतिपद्यसे ।   
-जगदनुग्रहमारुतचोदितो विविधरूपतरङ्गविकल्पनाम् ।।त्वयि न देव यदायतते न तज्जगति जङ्गममन्यदथापि वा ।   
-इति महिम्नि तव प्रमिते परं विभजने विविधैः स्थितमागमैः।।अखिललोकपितुस्तव पुत्रतामहमयाचमनन्यमनोरथः ।   
-वरद वाञ्छितदानधृतव्रते त्वयि तदेवमयत्नमपच्यत ।।अवनिभारनिराकरणार्थिनां क्रतुभुजामभिलाषमवन्ध्ययन् ।   
-जितरिपूणि बहूनि दयानिधे विहरणानि विधातुमिहार्हसि ।।दनुजमोहनदोहलिना त्वया सहजलाञ्छनसंवरणं क्षमम् ।   
-तदधुना शमयन्मम साध्वसं यवमिकामधिगच्छ यथेप्सितम्।।इति स भीतमवेक्ष्य दयानिधिः स्मितमुखो वसुदेवमभाषत।   
-त्वमसि मे जनकः किमिहान्यथा किमपि तात मुधा कथितं त्वया ।।इयममर्त्यपितुस्तव गेहिनी दिविषदां जननी मम चानघा ।   
-अभिमतं युवयोरनवग्रहं समयभावि मयैव समर्थ्यते ।।यदि बिभेषि भजामि मनुष्यतामथ च मां नय नन्दगृहं क्षणात् ।   
-दुहितरं च समानय तस्य तां गतभयो भव दूरगते मयि ।।अथ निशम्य नियोगमभङ्गुरं मधुजितो मधुराक्षरमन्थरम् ।   
-हितमिदं प्रतिपद्य तमाददे गुरुतरं कृपया लघुतां गतम् ।।श्रुतिसुगन्धितदाननचन्द्रिका मुषितमोहतमा मुनिसंनिभः ।   
-अधिजगाम स तन्मयतां क्षणादनिमिषत्वमुत प्रतिसंदधे ।।तुहिनभानुदिनाकरलोचनं निगमनिःश्वसितं स्वसुतस्य तत् ।   
-अनुबभूव मुहुर्मुहुरादरादनघमाननमानकदुन्दुभिः ।।जिगमिषुः स दिशो दश यादवः सकृदवैक्षत साध्वसविह्वलः ।   
-अनघवैभवमर्भकमुद्वहन्नमितगुप्तिनिरुद्धगतौ गृहे ।।विजघटे सहसैव कवाटिका व्रजमथ व्रजतो यदुभूभृतः ।   
-उपकल्पमशेरत रक्षकाः सरणिमादिदिशुर्गृहदेवताः ।।क्षरदसूनिव यामिकरक्षकान्मुषितमञ्जुगिरः शुकशारिकाः ।   
-यदुकुलेन्दुरपश्यदमीलितान्परिजनानपि चित्रगतानिव ।।उपयतो विशिखां सदनान्तरात्कुवलयाभकुमारतनुत्विषा ।   
-शतमखोपलमेचकया द्रुतं शमितसंतमसा हरितो बभुः ।।श्रुतिमयो विहगः परितः प्रभुं व्यचरदाशु विधूतनिशाचरः ।   
-अनुजगाम च भूधरपन्नगः स्फुटफणामणिदीपगणोद्वहः ।।दिनकरोपमदीधितिभिस्तदा दनुजदेहविदारणदारुणैः।   
-परिगतः किल पञ्चभिरायुधैर्यदुपतिः प्रजहावसहायताम् ।।प्रगुणमिन्दुनिवेदितपद्धतिर्यदुकुलेन्दुरथो यमुनानदीम् ।   
-परमपूरुषमक्षतपौरुषः पतगराज इवाशु वहन्ययौ ।।तनुतरङ्गपृषत्कणशीतलः सुरभिकैरवसौहृदवासितः।   
-अभिसमेतमसेवत मारुतो यमुनया प्रहितो यदुपुंगवम्।।पवनकम्पितपल्लवपाणिका प्रहितपुष्पभरा पदवीमुखे ।   
-उपजुहाव किल भ्रमरस्वनैर्यदुपतिं यमुनोपवनस्थली ।।निमिषितासितनीरजलोचना मुकुलिताब्जमुखी सवितुः सुता ।   
-ललितदीनरथाङ्गयुगस्वना कुहकदैन्यमशोचदिव प्रभोः ।।विकचकैरवतारकिताकृतिं तनुमतीमिव शारदयामिनीम् ।   
-त्वरितमम्बुनिधेरभिसारिकां तरितुमैहत सत्यसमीहितः।।भवति किं नु भविष्यति वा किमित्यनवधरितशौरिविहारया ।   
-चकितयेव विरोचनकन्यया विधुतवीचिकरं किल विव्यथे ।।घनतमःपरिपाकमलीमसैर्गुरुभिरूर्मिगणैरनुपप्लुतः ।   
-अतिततार दिनाधिपतेः सुतामनघयोगमना इव संसृतिम् ।।यदुपतेर्यमुना त्वरितं यतः प्रतियतश्च समर्पितपद्धतिः।   
-स्वयममर्त्यमदावलमज्जनी चरणलङ्घ्यजला समजायत ।।अजनि पश्चिमतो भृशमुन्नता रविसुता पुरतः स्थलशेषिता ।   
-अधिरुरोह पदं किमसौ हरेः प्रतिययौ यदि वा पितरं गिरिम् ।।अकृतसेतुमनाकलितप्लवां जननसिन्धुदृढप्लवमुद्वहन् ।   
-रविसुतामतिलङ्घ्य रमापतिं सपदि घोषसमीपमुपानयत् ।।अथ कयाचन कारणनिद्रया विवशसुप्तजनं व्रजमाविशत् ।   
-धनदपत्तनसंपदि यत्र सा स्वसितमग्र्यमसूयत रोहिणी ।।उपगते वसुदेवसुतेन्तिकं नरकवैरिणि नन्दकुटुम्बिनी ।   
-अरणिसंभवपावकसंगमादभजताध्वरवेदिरिव श्रियम् ।।न्यधित नन्दवधूसविधे सुतं द्रुतमुपादित गोपकुमारिकाम् ।   
-अथ निनाय च देवकनन्दनीशयनमानकदुन्दुभिराशु ताम् ।।अनवबुद्धजनार्दनकन्यकाविनिमयस्त्वथ भोजगणेश्वरः ।   
-दृषदि तामभिहन्तुमपातयत्प्रतिजघान च सा चरणेन तम् ।।नृपतिराशु पदा निहतस्तया निपतितोदितकन्तुकवद्भवन् ।   
-दवसमावृतशैलनिभः क्रुधा दरनिमीलितदृष्टिरदूयत ।।उदपतद्दिवमुग्रघनस्वना युवतिरूपयुगात्ययशर्वरी ।   
-असुरघातिभिरष्टभिरायुधैरलघुभिश्चपलाभिरिवाश्रिता ।।अथ च भोजनियन्तुरयन्त्रिता दनुजहन्तुरुदन्तमुदैरिरत् ।   
-पटुगभीरमुदारमनाकुलं हितमविस्तरमर्थ्यमविप्लवम् ।।अहमशेषसुरासुरमोहनी यवनिका मधुकैटभमर्दिनः ।   
-प्रबलशुम्भनिशुम्भनिषूदने प्रणिहिता हतया तव किं मया ।।वसति नन्दगृहे विबुधद्विषां दमयिता वसुदेवसमुद्भवः ।   
-अयमसौ तव नाशयितेति सा दरमुदीर्य जगाम यथेप्सितम् ।।मधुहिरण्यनिभो मधुरापतिर्दिनहुताशनदीनदशां गतः ।   
-श्वसितजल्पितवेपितहुंकृतैररतिमायतभीतिरसूचयत् ।।जडमतिः स जनार्दनमायया विहसितस्त्रपया जनितव्यथः ।   
-अपकृतं वसुद्वममोचयद्दयितया सह दीनविलापया ।।किमपि चिन्तितमागतमन्यथा किमिदमित्यवशादुपजातया।   
-विषविदूषितयेव मनीषया मुहुरदूयत मोहविचेष्टितः ।।अविषये विपदामसुरान्तके पुनरियेष निकारपरम्पराम् ।   
-नियतिरेकमुखी दुरतिक्रमा कृतधिया किमुतानिलचेतसा ।।परिबभूव चुकोप विसिष्मिये परिजहास हरिं प्रजगर्ज च ।   
-परिणतेन भवान्तरवासनाग्रहगुणेन भजन्भवितव्यताम् ।।क्वचन धामनि कंसनिवेदिते सभयमानकदुन्दुभिरावसत् ।   
-स्मृतिगतेन सुतेन सजीविता दिनशतानि निनाय च देवकी ।।विगतकन्यकया च यशोदया नियतिसंभृतनिर्भरनिद्रया ।   
-चिरसमागतजागरयान्तिके हरिरपत्यमदृश्यत धन्यया ।।यदवबुद्धनिराकुलनीतिभिर्मुनिगणैरधुनापि विमृग्यते ।   
-तदिदमागममौलिविभूषणं विधिवशादभवद्व्रजभूषणम् ।।अनघवत्समनाकुलधेनुकं प्रचुरदुग्धमचोरभयोद्भवम् ।   
-व्रजमनामयविश्वजनं विभुः कृतयुगास्पदकल्पमकल्पयत् ।।अजनि गोपगृहेषु मनोरमैरमितकान्तिभिरप्सरसां गणैः ।   
-यदनुभूतिरसेन समेष्यतः शरणयादवशैशवयौवने ।।सुरमहीसुरतोषणमादरान्नवमुपादित नन्द उदारधीः ।   
-तरलगोपगणागमसंकुलं तनयजन्ममहोत्सवमद्भुतम् ।।अधिचकार वदान्यमणेः श्रियं व्यधित कल्पतरोरनुकल्पताम् ।   
-अजनयच्च सुतप्रसवोत्सवे महति मेघविकत्थनमोघताम् ।।निधिमनन्तमिव स्वयमुत्थितं निरवधिं निजभागमिवोदितम् ।   
-व्रजभुवः प्रतिलभ्य रमापतिं जहसुरैन्द्रमसारतरं पदम् ।।पुत्रं प्रसूय तपसा पुरुषं पुराणं कालं चिरं विधिवशात्कृतविप्रकर्षौ ।   
-शङ्काकलङ्कितधियावपि दम्पती तौ तद्वैभवस्मरणशान्तरुजावभूताम् ।।नन्दसद्मनि नवेम्दुसंनिभौ वासमेत्य वसुदेवनन्दनौ ।   
-वृद्धिमापतुरनेहसा स्वयं स्वादुभोगजननीं सुपर्वणाम् ।।
+अभजदेव निशा दिवसश्रियं जननभाजिनि देवदिवाकरे ॥
+
+ननृतुरप्सरसो दिवि नन्दिताः किमपि गीतमगीयत किन्नरैः ।   
+श्रुतिसुखैः समतोषयत स्वनैरमरदुन्दुभिरानकदुन्दुभिम् ॥
+
+दशसु तत्र दिशास्वशरीरिणी जयजयेति बभूव सरस्वती ।   
+अजितमेकमगोचरयत् स्वयं स्वरसवृत्तिरसावसुरान्तकम् ॥
+
+अनतिवेलसमीरणचोदितैः शिशिरशीकरशीभरिताम्बरैः।   
+जलधरैरभितो दिवि दध्वने सुरगजैरिव सूचितमङ्गलैः ॥
+
+ववुरथो मरुतस्त्रिदशाङ्गनावदनसौरभसारभृतः शुभाः ।   
+मुदितनिर्जरमुक्तसुरद्रुमप्रसववृष्टिमधुद्रवमेदुराः ॥
+
+मधुरिपोरवतारमहोत्सवे मुमुदिरे मधुरापुरदेवताः।   
+यदभिगन्तरि भक्तजने वरं ददुरशेषमतन्द्रितचेतसः॥
+
+अवदधीनधियो मुनयस्तदा यदनधीतमधीतवदञ्जसा।   
+निगमजातमशेषमवेक्ष्य तन्निरविशन्निव मुक्तिमयीं दशाम् ॥
+
+प्रसदनं शरदागमसंभवं नभसि मासि मदीभिरुपाददे ।   
+महितयोगविदां मतिभिः समं श्रुतिभिरग्यनुपप्लवनीतिभिः ॥
+
+निखिलचेतनमानसनिःसृताः कलुषताः समुदे (पे) त्य किल क्षणात्।   
+विविशुरम्भ इव स्वयमापगाः जलनिधेरिव भोजपतेर्मनः ॥
+
+असुरवीरगृहाणि पृथग्विधैरशुभशंसिभिरानशिरे मुहुः।   
+अमरराजपुरेषु जजृम्भिरे शुभनिमित्तशतानि पुनः पुनः ॥
+
+चरमतश्च ऋणादिव देवकीपतिरमुच्यत शृङ्खलतः स्थिरात् ।   
+निखिलबन्धनिवर्तकसंनिधौ विगलनं निगलस्य किमद्भुतम् ॥
+
+उदितमात्मनि देवकसंभवा दनुजभेदनमङ्कगतं दधौ ।   
+कमपि काञ्चनभूभृदधित्यका हरिहयोपलशृङ्गमिवाद्भुतम् ॥
+
+विधृतशङ्खरथाङ्गगदाम्बुजः शबलितः शुभया वनमालया ।   
+पितुरसूत मुदं पृथुकस्तदा जलधिडिम्भनिभो जननीधृतः ॥
+
+पितरमब्जभुवामनपायिनं प्रियतमाङ्कगतं परिपश्यता ।   
+स विभुरानकदुन्दुभिना महान् अवितथैः स्वगुणैरभितुष्टुवे ॥
+
+प्रणिपतामि भवन्तमनन्यधीरखिलकारणमाश्रिततारणम् ।   
+अनुगमादनिदम्प्रथमा गिरः किमपि यत्पदमेकमधीयते ॥
+
+विषमकर्मविपाकपरम्पराविवशवृत्तिषु देहिषु दुस्तरम्।   
+करुणया तव देव कटाक्षिताः कतिचिदेव तरन्ति भवार्णवम् ॥
+
+त्वदनुभावमहोदधिशीकरैरवशपातिभिराहितशक्तयः।   
+अवधिभेदवतीमुपभुञ्जते स्वपदसंपदमब्जभवादयः ॥
+
+श्रुतिकिरीटशुभाश्रयविग्रहः परमसत्त्वनिधिः प्रतिपद्यसे ।   
+जगदनुग्रहमारुतचोदितो विविधरूपतरङ्गविकल्पनाम् ॥
+
+त्वयि न देव यदायतते न तज्जगति जङ्गममन्यदथापि वा ।   
+इति महिम्नि तव प्रमिते परं विभजने विविधैः स्थितमागमैः॥
+
+अखिललोकपितुस्तव पुत्रतामहमयाचमनन्यमनोरथः ।   
+वरद वाञ्छितदानधृतव्रते त्वयि तदेवमयत्नमपच्यत ॥
+
+अवनिभारनिराकरणार्थिनां क्रतुभुजामभिलाषमवन्ध्ययन् ।   
+जितरिपूणि बहूनि दयानिधे विहरणानि विधातुमिहार्हसि ॥
+
+दनुजमोहनदोहलिना त्वया सहजलाञ्छनसंवरणं क्षमम् ।   
+तदधुना शमयन्मम साध्वसं यवमिकामधिगच्छ यथेप्सितम्॥
+
+इति स भीतमवेक्ष्य दयानिधिः स्मितमुखो वसुदेवमभाषत।   
+त्वमसि मे जनकः किमिहान्यथा किमपि तात मुधा कथितं त्वया ॥
+
+इयममर्त्यपितुस्तव गेहिनी दिविषदां जननी मम चानघा ।   
+अभिमतं युवयोरनवग्रहं समयभावि मयैव समर्थ्यते ॥
+
+यदि बिभेषि भजामि मनुष्यतामथ च मां नय नन्दगृहं क्षणात् ।   
+दुहितरं च समानय तस्य तां गतभयो भव दूरगते मयि ॥
+
+अथ निशम्य नियोगमभङ्गुरं मधुजितो मधुराक्षरमन्थरम् ।   
+हितमिदं प्रतिपद्य तमाददे गुरुतरं कृपया लघुतां गतम् ॥
+
+श्रुतिसुगन्धितदाननचन्द्रिका मुषितमोहतमा मुनिसंनिभः ।   
+अधिजगाम स तन्मयतां क्षणादनिमिषत्वमुत प्रतिसंदधे ॥
+
+तुहिनभानुदिनाकरलोचनं निगमनिःश्वसितं स्वसुतस्य तत् ।   
+अनुबभूव मुहुर्मुहुरादरादनघमाननमानकदुन्दुभिः ॥
+
+जिगमिषुः स दिशो दश यादवः सकृदवैक्षत साध्वसविह्वलः ।   
+अनघवैभवमर्भकमुद्वहन्नमितगुप्तिनिरुद्धगतौ गृहे ॥
+
+विजघटे सहसैव कवाटिका व्रजमथ व्रजतो यदुभूभृतः ।   
+उपकल्पमशेरत रक्षकाः सरणिमादिदिशुर्गृहदेवताः ॥
+
+क्षरदसूनिव यामिकरक्षकान्मुषितमञ्जुगिरः शुकशारिकाः ।   
+यदुकुलेन्दुरपश्यदमीलितान्परिजनानपि चित्रगतानिव ॥
+
+उपयतो विशिखां सदनान्तरात्कुवलयाभकुमारतनुत्विषा ।   
+शतमखोपलमेचकया द्रुतं शमितसंतमसा हरितो बभुः ॥
+
+श्रुतिमयो विहगः परितः प्रभुं व्यचरदाशु विधूतनिशाचरः ।   
+अनुजगाम च भूधरपन्नगः स्फुटफणामणिदीपगणोद्वहः ॥
+
+दिनकरोपमदीधितिभिस्तदा दनुजदेहविदारणदारुणैः।   
+परिगतः किल पञ्चभिरायुधैर्यदुपतिः प्रजहावसहायताम् ॥
+
+प्रगुणमिन्दुनिवेदितपद्धतिर्यदुकुलेन्दुरथो यमुनानदीम् ।   
+परमपूरुषमक्षतपौरुषः पतगराज इवाशु वहन्ययौ ॥
+
+तनुतरङ्गपृषत्कणशीतलः सुरभिकैरवसौहृदवासितः।   
+अभिसमेतमसेवत मारुतो यमुनया प्रहितो यदुपुंगवम्॥
+
+पवनकम्पितपल्लवपाणिका प्रहितपुष्पभरा पदवीमुखे ।   
+उपजुहाव किल भ्रमरस्वनैर्यदुपतिं यमुनोपवनस्थली ॥
+
+निमिषितासितनीरजलोचना मुकुलिताब्जमुखी सवितुः सुता ।   
+ललितदीनरथाङ्गयुगस्वना कुहकदैन्यमशोचदिव प्रभोः ॥
+
+विकचकैरवतारकिताकृतिं तनुमतीमिव शारदयामिनीम् ।   
+त्वरितमम्बुनिधेरभिसारिकां तरितुमैहत सत्यसमीहितः॥
+
+भवति किं नु भविष्यति वा किमित्यनवधरितशौरिविहारया ।   
+चकितयेव विरोचनकन्यया विधुतवीचिकरं किल विव्यथे ॥
+
+घनतमःपरिपाकमलीमसैर्गुरुभिरूर्मिगणैरनुपप्लुतः ।   
+अतिततार दिनाधिपतेः सुतामनघयोगमना इव संसृतिम् ॥
+
+यदुपतेर्यमुना त्वरितं यतः प्रतियतश्च समर्पितपद्धतिः।   
+स्वयममर्त्यमदावलमज्जनी चरणलङ्घ्यजला समजायत ॥
+
+अजनि पश्चिमतो भृशमुन्नता रविसुता पुरतः स्थलशेषिता ।   
+अधिरुरोह पदं किमसौ हरेः प्रतिययौ यदि वा पितरं गिरिम् ॥
+
+अकृतसेतुमनाकलितप्लवां जननसिन्धुदृढप्लवमुद्वहन् ।   
+रविसुतामतिलङ्घ्य रमापतिं सपदि घोषसमीपमुपानयत् ॥
+
+अथ कयाचन कारणनिद्रया विवशसुप्तजनं व्रजमाविशत् ।   
+धनदपत्तनसंपदि यत्र सा स्वसितमग्र्यमसूयत रोहिणी ॥
+
+उपगते वसुदेवसुतेन्तिकं नरकवैरिणि नन्दकुटुम्बिनी ।   
+अरणिसंभवपावकसंगमादभजताध्वरवेदिरिव श्रियम् ॥
+
+न्यधित नन्दवधूसविधे सुतं द्रुतमुपादित गोपकुमारिकाम् ।   
+अथ निनाय च देवकनन्दनीशयनमानकदुन्दुभिराशु ताम् ॥
+
+अनवबुद्धजनार्दनकन्यकाविनिमयस्त्वथ भोजगणेश्वरः ।   
+दृषदि तामभिहन्तुमपातयत्प्रतिजघान च सा चरणेन तम् ॥
+
+नृपतिराशु पदा निहतस्तया निपतितोदितकन्तुकवद्भवन् ।   
+दवसमावृतशैलनिभः क्रुधा दरनिमीलितदृष्टिरदूयत ॥
+
+उदपतद्दिवमुग्रघनस्वना युवतिरूपयुगात्ययशर्वरी ।   
+असुरघातिभिरष्टभिरायुधैरलघुभिश्चपलाभिरिवाश्रिता ॥
+
+अथ च भोजनियन्तुरयन्त्रिता दनुजहन्तुरुदन्तमुदैरिरत् ।   
+पटुगभीरमुदारमनाकुलं हितमविस्तरमर्थ्यमविप्लवम् ॥
+
+अहमशेषसुरासुरमोहनी यवनिका मधुकैटभमर्दिनः ।   
+प्रबलशुम्भनिशुम्भनिषूदने प्रणिहिता हतया तव किं मया ॥
+
+वसति नन्दगृहे विबुधद्विषां दमयिता वसुदेवसमुद्भवः ।   
+अयमसौ तव नाशयितेति सा दरमुदीर्य जगाम यथेप्सितम् ॥
+
+मधुहिरण्यनिभो मधुरापतिर्दिनहुताशनदीनदशां गतः ।   
+श्वसितजल्पितवेपितहुंकृतैररतिमायतभीतिरसूचयत् ॥
+
+जडमतिः स जनार्दनमायया विहसितस्त्रपया जनितव्यथः ।   
+अपकृतं वसुद्वममोचयद्दयितया सह दीनविलापया ॥
+
+किमपि चिन्तितमागतमन्यथा किमिदमित्यवशादुपजातया।   
+विषविदूषितयेव मनीषया मुहुरदूयत मोहविचेष्टितः ॥
+
+अविषये विपदामसुरान्तके पुनरियेष निकारपरम्पराम् ।   
+नियतिरेकमुखी दुरतिक्रमा कृतधिया किमुतानिलचेतसा ॥
+
+परिबभूव चुकोप विसिष्मिये परिजहास हरिं प्रजगर्ज च ।   
+परिणतेन भवान्तरवासनाग्रहगुणेन भजन्भवितव्यताम् ॥
+
+क्वचन धामनि कंसनिवेदिते सभयमानकदुन्दुभिरावसत् ।   
+स्मृतिगतेन सुतेन सजीविता दिनशतानि निनाय च देवकी ॥
+
+विगतकन्यकया च यशोदया नियतिसंभृतनिर्भरनिद्रया ।   
+चिरसमागतजागरयान्तिके हरिरपत्यमदृश्यत धन्यया ॥
+
+यदवबुद्धनिराकुलनीतिभिर्मुनिगणैरधुनापि विमृग्यते ।   
+तदिदमागममौलिविभूषणं विधिवशादभवद्व्रजभूषणम् ॥
+
+अनघवत्समनाकुलधेनुकं प्रचुरदुग्धमचोरभयोद्भवम् ।   
+व्रजमनामयविश्वजनं विभुः कृतयुगास्पदकल्पमकल्पयत् ॥
+
+अजनि गोपगृहेषु मनोरमैरमितकान्तिभिरप्सरसां गणैः ।   
+यदनुभूतिरसेन समेष्यतः शरणयादवशैशवयौवने ॥
+
+सुरमहीसुरतोषणमादरान्नवमुपादित नन्द उदारधीः ।   
+तरलगोपगणागमसंकुलं तनयजन्ममहोत्सवमद्भुतम् ॥
+
+अधिचकार वदान्यमणेः श्रियं व्यधित कल्पतरोरनुकल्पताम् ।   
+अजनयच्च सुतप्रसवोत्सवे महति मेघविकत्थनमोघताम् ॥
+
+निधिमनन्तमिव स्वयमुत्थितं निरवधिं निजभागमिवोदितम् ।   
+व्रजभुवः प्रतिलभ्य रमापतिं जहसुरैन्द्रमसारतरं पदम् ॥
+
+पुत्रं प्रसूय तपसा पुरुषं पुराणं कालं चिरं विधिवशात्कृतविप्रकर्षौ ।   
+शङ्काकलङ्कितधियावपि दम्पती तौ तद्वैभवस्मरणशान्तरुजावभूताम् ॥
+
+नन्दसद्मनि नवेम्दुसंनिभौ वासमेत्य वसुदेवनन्दनौ ।   
+वृद्धिमापतुरनेहसा स्वयं स्वादुभोगजननीं सुपर्वणाम् ॥
+
