--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/10.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/10.md
@@ -3,122 +3,353 @@ title = "10 सर्गः-10"
 
 +++
 ततस्तौ ददृशुस्तत्र विशन्तौ राजवीथिकाम् ।   
-पूर्णदृष्टिफलाः पौराः पुण्यैरेकमुखैरिव ।।चक्षुषामिव भाग्येन संप्रवृत्तौ महोत्सवौ ।   
-युक्तौ मदनशक्त्येव युगपन्मधुमाधवौ ।।अभिख्यावीचिविक्षेपैरपृथग्भावचित्रितैः।   
-समेतैरनुभावाद्यैः सक्ताविव रसोत्तमौ ।।क्रममुल्लङ्घ्यभूतानां भोगमोक्षाविवोद्गतौ ।   
-तयोरेव विनिष्पत्त्यै धर्माविव च तादृशौ ।।पुनन्तौ भुवनं पादैः पुष्पवन्ताविवापरौ ।   
-सिञ्चन्तौ कान्तिवर्षेण सितकृष्णाविवाम्बुदौ ।।मदोपक्रमदुर्दान्तौ मधुरोद्धतविभ्रमौ   
-कलभाविव संनद्धौ कंसादिनलमर्दने ।।शुभानामिव सीमन्तैः श्रुतिसीमन्तसेवितैः।   
-पुनन्तौ राजविशिखां पुण्यैश्चरणपङ्कजैः।।शीलसंवृतपारभ्यैः शृङ्गारपरिकर्मितैः।   
-दृषदोपि द्रवीभावं नयन्तौ दिव्यचेष्टितैः।।दिदृक्षादत्तदृष्टीनां मनस्कारमनीषयोः।   
-सपीतिरससंतोषं दिशन्तौ देहकान्तितः।।मन्मथायुतसौन्दर्यौ वसन्तायुतसौरभौ ।   
-शशाङ्कायुतलावण्यौ चण्डरश्म्ययुतद्युती ।।चित्रतामिव नीतानां चित्तचेष्टापहारतः ।   
-प्रतिसौधं पुरस्त्रीणां निर्विशन्तौ निरीक्षणम् ।।सुप्रभातमिह प्राप्तं सूषा च सुदिनं च नः ।   
-इति वादिभिरन्योन्यं द्रुतचित्तैरनुद्रुतौ ।।बलादपहृतैस्तत्र रजकात् राजसंमतात् ।   
-परभागश्रियं प्राप्तौ वासोभिरसितारुणैः।।लब्धपुण्यविपाकेन मालाकारेण लम्भितैः।   
-शबलौ दामभिश्चित्रैः संदिग्धवनमालिकैः।।कान्तिनिर्जितया कामात् प्रदिष्टैः कंसकुब्जया ।   
-दधतौ वर्णकैर्भूयो दिव्यगन्धौ सुगन्धिताम् ।।ऋजूकृतसुजाताङ्ग्या ऋजुबुद्ध्याथ कुब्जया ।   
-प्रणयन्त्या स्वगेहाप्तिं प्राप्तमन्दस्मितौ मिथः।।ततो विविशतुः शालां बलिसद्मगुहामिव।   
-प्रथितां पृथुभिश्चापैः पन्नगैरिव भीषणैः।।तत्र शैलनिभं शौरिस्त्रिदशैरपि दुर्दमम् ।   
-ददर्शाजगवप्रख्यं दम्भोलिकठिनं धनुः।।स्वपूर्वप्रभवोदन्तमिदानीन्तनयन्निव।   
-तदानम्य धनुर्भीमं बभञ्ज भुजलीलया ।।महता तस्य घोषेण विदद्रे द्विषतां मनः।   
-सौधिनि मधुरायाश्च शुष्काशनिविडम्बिना ।।चापगोपचमूं हत्वा तौ जगद्धितमानुषौ ।   
-अतिलङ्घ्य धनुःशालां रङ्गद्वारमवापतुः।।तत्र मृत्युमिव क्रुद्धं निदध्यतुररिंदमौ।   
-नागं कुवलयापीडं निह्नुवानमिवाम्बरम् ।।तमासाद्य द्रुतं शौरिस्त्रासितत्रिदशद्विपम् ।   
-पञ्चवक्त्र इवाक्रम्य पातयामास भूतले।।तस्य दन्तौ समुद्धृत्य श्वेताद्रिशिखरोपमौ ।   
-विदधाते यदुश्रेष्ठौ मल्लयुद्धमहायुधे ।।सह गोपैरधिष्ठाय रङ्गमध्यमरिंदमौ ।   
-बलिजित् बलभद्रश्च बालवृत्तैरदीव्यताम् ।।नृपोपहूतैरथ तौ विहारैक्यमवापतुः।   
-नर्मकारकजल्पाकनटनर्तकगायकैः।।जनस्य महतस्तत्र जनयामासतुस्तदा ।   
-महता कान्तिवर्षेण दिदृक्षां देवमातृकाम् ।।उपवेदमधीयुर्ये रणार्थं रङ्गदर्शिनः ।   
-तमेव ते द्विधाभूतं तावुभावभिमेनिरे ।।तदालोकनलाभेन सामाजिकजनस्तदा।   
-अनिदंपूर्वमाह्लादमपवृक्त इवान्वभूत् ।।बिम्बिताकृतयो नार्यस्तद्देहमणिदर्पणे ।   
-तत्परिष्वङ्गनिर्वेशमयत्नादिव लेभिरे ।।गीतमञ्जुगिरस्तत्र नृत्तसंवादिविभ्रमाः।   
-मञ्चेषु हरिरद्राक्षीत् वरस्त्रीर्मदिरेक्षणाः।।धृतहेतिपरिष्कारान् धीरोद्धतविलोकितान् ।   
-ददर्श पृथिवीपालान् देवानिव दिवश्च्युतान् ।।तमसामिव संघातं समाहारमिवैनसाम् ।   
-तुङ्गमञ्चगतं कंसं तुष्टो हरिरवैक्षत ।।ललितारम्भया वृत्त्या रङ्गभाजां रसावहा ।   
-नरवृत्तान्तविहृतिर्ववृधे रामकृष्णयोः।।विदधे सिंहनादेन तारेण यदुसिंहयोः।   
-गर्जितं दैत्यमल्लानां गोमायुगणवाशितम् ।।तावुभौ डिम्भवपुषौ ख्यातवीर्यपराक्रमौ ।   
-चाणूरो मुष्टिकश्च द्वौ नियोद्धुमभिजग्मतुः।।अहो महदुपक्रान्तमत्याहितमिदं यतः।   
-अशिक्षितरणौ बालौ मल्लयुद्धे नियोजितौ ।।शिरीषललितैरङ्गैश्चेष्टितैरपि पेशलैः।   
-अद्रिसारकठोराभ्यां कथं योद्धुमिमौ स्थितौ ।।पश्यद्भिरवशैर्नूनं पौरजानपदैर्जनैः।   
-पापमेतदनुज्ञातं परपिण्डपरायणैः।।मधुकैटभदुर्दान्तौ मल्लबृन्दारकाविमौ ।   
-यदि जेष्यति यः कश्चित् स किं न पुरुषोत्तमः।।अथ वा पूतनादीनामप्रयत्नेन घातुकौ।   
-नि(न)युद्धे मल्लमुख्येभ्यो नालमेतौ न वा कथम् ।।जनवादमिमं शृण्वन् जातहासो जनार्दनः।   
-भुजमास्फोटयामास भूभारहरणे क्षमम् ।।तदास्फोटितशब्देन स्फुटत्कर्णस्य भूयसा।   
-कंसमल्लगणस्यासीत् कथा गोपालकाश्रया ।।गोपयुद्धधिया जिह्रच्चाणूरः कूणितेक्षणः।   
-पुष्पपेषमिवोत्पश्यन् आद्रवत् पुष्करेक्षणम् ।।यथोचे विषमं तत्र नियुद्धं स्थूलदृष्टभिः।   
-तत्त्वदृष्टिभिरप्येवं विश्वाधिकबले हरौ ।।न्यूनाधिकसमारम्भो विभुस्तत्र विहारतः।   
-विषादप्रीतिसंदेहान् सभ्यानां समतानयत् ।।स बालः प्रचयं प्राप बालातप इव क्रमात्।   
-नीहार इव चाणूरः शनैरपचयं ययौ।।वारितेष्वथ वाद्येषु विषण्णेन महीभृता ।   
-दिव्यदुन्दुभयो नेदुर्निगमध्वाननिर्भराः।।वल्गता बलभद्रेण कृष्णेन च वसुन्धरा ।   
-वादित्रमिव दघ्वान मधुरान्द्रभयानकम् ।।भीमकालियभोगीन्द्रस्फटारङ्गमहानटः।   
-मल्लरङ्गनटं दैत्यं मधुमाथं ममाथ(न्थ)सः।।मुष्टिघातेन रामस्य मुष्टिकश्च निपातितः।   
-भोजाधिपमहोत्पातं भूमिकम्पमवर्तयत् ।।रामरामानुजाभ्यां तौ रावणेन्द्रजिताविव।   
-नमयामासतुः पृथ्वीं नगपातं निपातितौ ।।शायितौ वीरशयने दृष्ट्वा चाणुरमुष्टिकौ।   
-द्रुतमभ्यद्रवन् कृष्णं तत्र तोसकला(तोसलका)दयः।।स तानपि नियुद्धेन वसुधायां न्यपातयत् ।   
-कालो युगपदुद्भूतान् कल्पान्तमिहिरानिव ।।गरुत्मानिव भूभागात् गगनाभोगमायतम् ।   
-कंसमञ्चमपद्वारादुदप्लवत केशवः।।कचग्रहेण विवशं कंसमाकृष्य पातयन्।   
-पतन् वक्षःस्थले तस्य तत्सत्त्वमुदपाटयत् ।।महामोहमिवाक्रम्य मातुलं मधुसूदनः।   
-विवेक इव वृत्तस्थमुग्रसेनममोचयत् ।।ददौ च कंसभृत्यानां ददतां तत्र जीवितम् ।   
-उन्मुखत्रिदशप्रेक्ष्यामूर्ध्वां गतिमनुत्तमाम् ।।कंसकर्षणमण्डल्यो गम्भीरास्तत्र चिक्यिरे ।   
-रणलक्ष्मीनिवासस्य रङ्गस्य परिखा इव ।।सुदामनामा कंसस्य सोदरस्त्वरितः क्रुधा।   
-बलेन गमितः क्षिप्रमग्रजेन गतां गतिम् ।।अनायुधमहायुद्धं दृष्ट्वा हृषितरोमभिः।   
-प्रवातकदलप्रख्यैः प्राश्निकैरभितः स्थितम् ।।कृतिनस्तादृशं युद्धं किलिकिञ्चितयन्त्रिताः।   
-लीना इव च पश्यन्तो लिखिता इव चाभवन् ।।सिद्धाश्च दिवि तत्तादृक्तालकल्पितताण्डवाः।   
-हर्षदुग्धाब्धिकल्लोलं हाहाकारमकल्पयन् ।।अथ तौ भीमदोर्दण्डकण्डूकर्षणतोषितौ ।   
-पितृभ्यां दृष्टजन्याभ्यामुपसृत्य प्रणेमतुः।।तौ च तौ मृदितारातिरक्तचन्दनरञ्जितौ ।   
-अश्रुभिः प्रीतिनिष्यन्दैः पितरावभ्यषिञ्चताम् ।।विबुधत्वमिव प्राप्तो वसुदेवः सुतेक्षणात् ।   
-सतत्त्वप्रतिबोधेन सात्त्वतां पतिमस्तुत ।।नमस्ते नाभिनालीकरजसा सृष्टवेधसे ।   
-अजया सर्ववेदानामेकवेद्याय विष्णवे ।।अनन्याधारमाधारमनन्येश्वरमीश्वरम् ।   
-अनुशृण्वन्ति सन्तस्त्वामनन्याधिपतिं पतिम् ।।अभङ्गुररसं भोग्यमनपायं रसायनम् ।   
-अक्षयं धर्मसर्वस्वमविदुस्तव कीर्तनम् ।।अनुग्रहदशादीप्तमशेषार्थप्रकाशकम् ।   
-दयासंप्लुतमाहुस्त्वां दीपमन्तस्तमोपहम् ।।देवकी दनुजस्थूणा दिव्यं धाम व्रजाङ्गणम् ।   
-रमा राधादयश्चेति राशिभेदैर्न भिद्यसे ।।नियन्ता सर्वभूतानां नियन्तव्यैर्नियम्यसे ।   
+पूर्णदृष्टिफलाः पौराः पुण्यैरेकमुखैरिव ॥
+
+चक्षुषामिव भाग्येन संप्रवृत्तौ महोत्सवौ ।   
+युक्तौ मदनशक्त्येव युगपन्मधुमाधवौ ॥
+
+अभिख्यावीचिविक्षेपैरपृथग्भावचित्रितैः।   
+समेतैरनुभावाद्यैः सक्ताविव रसोत्तमौ ॥
+
+क्रममुल्लङ्घ्यभूतानां भोगमोक्षाविवोद्गतौ ।   
+तयोरेव विनिष्पत्त्यै धर्माविव च तादृशौ ॥
+
+पुनन्तौ भुवनं पादैः पुष्पवन्ताविवापरौ ।   
+सिञ्चन्तौ कान्तिवर्षेण सितकृष्णाविवाम्बुदौ ॥
+
+मदोपक्रमदुर्दान्तौ मधुरोद्धतविभ्रमौ   
+कलभाविव संनद्धौ कंसादिनलमर्दने ॥
+
+शुभानामिव सीमन्तैः श्रुतिसीमन्तसेवितैः।   
+पुनन्तौ राजविशिखां पुण्यैश्चरणपङ्कजैः॥
+
+शीलसंवृतपारभ्यैः शृङ्गारपरिकर्मितैः।   
+दृषदोपि द्रवीभावं नयन्तौ दिव्यचेष्टितैः॥
+
+दिदृक्षादत्तदृष्टीनां मनस्कारमनीषयोः।   
+सपीतिरससंतोषं दिशन्तौ देहकान्तितः॥
+
+मन्मथायुतसौन्दर्यौ वसन्तायुतसौरभौ ।   
+शशाङ्कायुतलावण्यौ चण्डरश्म्ययुतद्युती ॥
+
+चित्रतामिव नीतानां चित्तचेष्टापहारतः ।   
+प्रतिसौधं पुरस्त्रीणां निर्विशन्तौ निरीक्षणम् ॥
+
+सुप्रभातमिह प्राप्तं सूषा च सुदिनं च नः ।   
+इति वादिभिरन्योन्यं द्रुतचित्तैरनुद्रुतौ ॥
+
+बलादपहृतैस्तत्र रजकात् राजसंमतात् ।   
+परभागश्रियं प्राप्तौ वासोभिरसितारुणैः॥
+
+लब्धपुण्यविपाकेन मालाकारेण लम्भितैः।   
+शबलौ दामभिश्चित्रैः संदिग्धवनमालिकैः॥
+
+कान्तिनिर्जितया कामात् प्रदिष्टैः कंसकुब्जया ।   
+दधतौ वर्णकैर्भूयो दिव्यगन्धौ सुगन्धिताम् ॥
+
+ऋजूकृतसुजाताङ्ग्या ऋजुबुद्ध्याथ कुब्जया ।   
+प्रणयन्त्या स्वगेहाप्तिं प्राप्तमन्दस्मितौ मिथः॥
+
+ततो विविशतुः शालां बलिसद्मगुहामिव।   
+प्रथितां पृथुभिश्चापैः पन्नगैरिव भीषणैः॥
+
+तत्र शैलनिभं शौरिस्त्रिदशैरपि दुर्दमम् ।   
+ददर्शाजगवप्रख्यं दम्भोलिकठिनं धनुः॥
+
+स्वपूर्वप्रभवोदन्तमिदानीन्तनयन्निव।   
+तदानम्य धनुर्भीमं बभञ्ज भुजलीलया ॥
+
+महता तस्य घोषेण विदद्रे द्विषतां मनः।   
+सौधिनि मधुरायाश्च शुष्काशनिविडम्बिना ॥
+
+चापगोपचमूं हत्वा तौ जगद्धितमानुषौ ।   
+अतिलङ्घ्य धनुःशालां रङ्गद्वारमवापतुः॥
+
+तत्र मृत्युमिव क्रुद्धं निदध्यतुररिंदमौ।   
+नागं कुवलयापीडं निह्नुवानमिवाम्बरम् ॥
+
+तमासाद्य द्रुतं शौरिस्त्रासितत्रिदशद्विपम् ।   
+पञ्चवक्त्र इवाक्रम्य पातयामास भूतले॥
+
+तस्य दन्तौ समुद्धृत्य श्वेताद्रिशिखरोपमौ ।   
+विदधाते यदुश्रेष्ठौ मल्लयुद्धमहायुधे ॥
+
+सह गोपैरधिष्ठाय रङ्गमध्यमरिंदमौ ।   
+बलिजित् बलभद्रश्च बालवृत्तैरदीव्यताम् ॥
+
+नृपोपहूतैरथ तौ विहारैक्यमवापतुः।   
+नर्मकारकजल्पाकनटनर्तकगायकैः॥
+
+जनस्य महतस्तत्र जनयामासतुस्तदा ।   
+महता कान्तिवर्षेण दिदृक्षां देवमातृकाम् ॥
+
+उपवेदमधीयुर्ये रणार्थं रङ्गदर्शिनः ।   
+तमेव ते द्विधाभूतं तावुभावभिमेनिरे ॥
+
+तदालोकनलाभेन सामाजिकजनस्तदा।   
+अनिदंपूर्वमाह्लादमपवृक्त इवान्वभूत् ॥
+
+बिम्बिताकृतयो नार्यस्तद्देहमणिदर्पणे ।   
+तत्परिष्वङ्गनिर्वेशमयत्नादिव लेभिरे ॥
+
+गीतमञ्जुगिरस्तत्र नृत्तसंवादिविभ्रमाः।   
+मञ्चेषु हरिरद्राक्षीत् वरस्त्रीर्मदिरेक्षणाः॥
+
+धृतहेतिपरिष्कारान् धीरोद्धतविलोकितान् ।   
+ददर्श पृथिवीपालान् देवानिव दिवश्च्युतान् ॥
+
+तमसामिव संघातं समाहारमिवैनसाम् ।   
+तुङ्गमञ्चगतं कंसं तुष्टो हरिरवैक्षत ॥
+
+ललितारम्भया वृत्त्या रङ्गभाजां रसावहा ।   
+नरवृत्तान्तविहृतिर्ववृधे रामकृष्णयोः॥
+
+विदधे सिंहनादेन तारेण यदुसिंहयोः।   
+गर्जितं दैत्यमल्लानां गोमायुगणवाशितम् ॥
+
+तावुभौ डिम्भवपुषौ ख्यातवीर्यपराक्रमौ ।   
+चाणूरो मुष्टिकश्च द्वौ नियोद्धुमभिजग्मतुः॥
+
+अहो महदुपक्रान्तमत्याहितमिदं यतः।   
+अशिक्षितरणौ बालौ मल्लयुद्धे नियोजितौ ॥
+
+शिरीषललितैरङ्गैश्चेष्टितैरपि पेशलैः।   
+अद्रिसारकठोराभ्यां कथं योद्धुमिमौ स्थितौ ॥
+
+पश्यद्भिरवशैर्नूनं पौरजानपदैर्जनैः।   
+पापमेतदनुज्ञातं परपिण्डपरायणैः॥
+
+मधुकैटभदुर्दान्तौ मल्लबृन्दारकाविमौ ।   
+यदि जेष्यति यः कश्चित् स किं न पुरुषोत्तमः॥
+
+अथ वा पूतनादीनामप्रयत्नेन घातुकौ।   
+नि(न)युद्धे मल्लमुख्येभ्यो नालमेतौ न वा कथम् ॥
+
+जनवादमिमं शृण्वन् जातहासो जनार्दनः।   
+भुजमास्फोटयामास भूभारहरणे क्षमम् ॥
+
+तदास्फोटितशब्देन स्फुटत्कर्णस्य भूयसा।   
+कंसमल्लगणस्यासीत् कथा गोपालकाश्रया ॥
+
+गोपयुद्धधिया जिह्रच्चाणूरः कूणितेक्षणः।   
+पुष्पपेषमिवोत्पश्यन् आद्रवत् पुष्करेक्षणम् ॥
+
+यथोचे विषमं तत्र नियुद्धं स्थूलदृष्टभिः।   
+तत्त्वदृष्टिभिरप्येवं विश्वाधिकबले हरौ ॥
+
+न्यूनाधिकसमारम्भो विभुस्तत्र विहारतः।   
+विषादप्रीतिसंदेहान् सभ्यानां समतानयत् ॥
+
+स बालः प्रचयं प्राप बालातप इव क्रमात्।   
+नीहार इव चाणूरः शनैरपचयं ययौ॥
+
+वारितेष्वथ वाद्येषु विषण्णेन महीभृता ।   
+दिव्यदुन्दुभयो नेदुर्निगमध्वाननिर्भराः॥
+
+वल्गता बलभद्रेण कृष्णेन च वसुन्धरा ।   
+वादित्रमिव दघ्वान मधुरान्द्रभयानकम् ॥
+
+भीमकालियभोगीन्द्रस्फटारङ्गमहानटः।   
+मल्लरङ्गनटं दैत्यं मधुमाथं ममाथ(न्थ)सः॥
+
+मुष्टिघातेन रामस्य मुष्टिकश्च निपातितः।   
+भोजाधिपमहोत्पातं भूमिकम्पमवर्तयत् ॥
+
+रामरामानुजाभ्यां तौ रावणेन्द्रजिताविव।   
+नमयामासतुः पृथ्वीं नगपातं निपातितौ ॥
+
+शायितौ वीरशयने दृष्ट्वा चाणुरमुष्टिकौ।   
+द्रुतमभ्यद्रवन् कृष्णं तत्र तोसकला(तोसलका)दयः॥
+
+स तानपि नियुद्धेन वसुधायां न्यपातयत् ।   
+कालो युगपदुद्भूतान् कल्पान्तमिहिरानिव ॥
+
+गरुत्मानिव भूभागात् गगनाभोगमायतम् ।   
+कंसमञ्चमपद्वारादुदप्लवत केशवः॥
+
+कचग्रहेण विवशं कंसमाकृष्य पातयन्।   
+पतन् वक्षःस्थले तस्य तत्सत्त्वमुदपाटयत् ॥
+
+महामोहमिवाक्रम्य मातुलं मधुसूदनः।   
+विवेक इव वृत्तस्थमुग्रसेनममोचयत् ॥
+
+ददौ च कंसभृत्यानां ददतां तत्र जीवितम् ।   
+उन्मुखत्रिदशप्रेक्ष्यामूर्ध्वां गतिमनुत्तमाम् ॥
+
+कंसकर्षणमण्डल्यो गम्भीरास्तत्र चिक्यिरे ।   
+रणलक्ष्मीनिवासस्य रङ्गस्य परिखा इव ॥
+
+सुदामनामा कंसस्य सोदरस्त्वरितः क्रुधा।   
+बलेन गमितः क्षिप्रमग्रजेन गतां गतिम् ॥
+
+अनायुधमहायुद्धं दृष्ट्वा हृषितरोमभिः।   
+प्रवातकदलप्रख्यैः प्राश्निकैरभितः स्थितम् ॥
+
+कृतिनस्तादृशं युद्धं किलिकिञ्चितयन्त्रिताः।   
+लीना इव च पश्यन्तो लिखिता इव चाभवन् ॥
+
+सिद्धाश्च दिवि तत्तादृक्तालकल्पितताण्डवाः।   
+हर्षदुग्धाब्धिकल्लोलं हाहाकारमकल्पयन् ॥
+
+अथ तौ भीमदोर्दण्डकण्डूकर्षणतोषितौ ।   
+पितृभ्यां दृष्टजन्याभ्यामुपसृत्य प्रणेमतुः॥
+
+तौ च तौ मृदितारातिरक्तचन्दनरञ्जितौ ।   
+अश्रुभिः प्रीतिनिष्यन्दैः पितरावभ्यषिञ्चताम् ॥
+
+विबुधत्वमिव प्राप्तो वसुदेवः सुतेक्षणात् ।   
+सतत्त्वप्रतिबोधेन सात्त्वतां पतिमस्तुत ॥
+
+नमस्ते नाभिनालीकरजसा सृष्टवेधसे ।   
+अजया सर्ववेदानामेकवेद्याय विष्णवे ॥
+
+अनन्याधारमाधारमनन्येश्वरमीश्वरम् ।   
+अनुशृण्वन्ति सन्तस्त्वामनन्याधिपतिं पतिम् ॥
+
+अभङ्गुररसं भोग्यमनपायं रसायनम् ।   
+अक्षयं धर्मसर्वस्वमविदुस्तव कीर्तनम् ॥
+
+अनुग्रहदशादीप्तमशेषार्थप्रकाशकम् ।   
+दयासंप्लुतमाहुस्त्वां दीपमन्तस्तमोपहम् ॥
+
+देवकी दनुजस्थूणा दिव्यं धाम व्रजाङ्गणम् ।   
+रमा राधादयश्चेति राशिभेदैर्न भिद्यसे ॥
+
+नियन्ता सर्वभूतानां नियन्तव्यैर्नियम्यसे ।   
 पितामहमुखैः पुत्री मम पुत्रोसि मायया।महता त्वत्पदेनैव मारुतिन्यायमाश्रिताः।   
-निस्तरन्त्यचिरात् सन्तो दुस्तरं भवसागरम् ।।अहितोदन्वदौर्वाग्निमशेषोत्कर्षमातरम् ।   
-भवभैमरथीं भक्तिं भजन्ति त्वयि साधवः।।भरन्यासाश्वयुक्तेन भाववेगप्रधाविना ।   
-मनोरथेन गन्तव्यः सारथिश्य भवान् सताम् ।।वयं तु भवता ग्राह्या वासनादुर्गभेदिना   
-मनागिव समुद्बोध्य मा पुनर्मूमुहद्भवान् ।।महतामपि निष्कम्पा मनुष्यत्वमतिस्त्वयि ।   
-दृढलक्षितचिह्नानां दिङ्मोह इव दुर्दमः।।दुरन्तसुखखद्योतं दुःखान्धतमसावृतम् ।   
-निजेनैव प्रकाशेन निशीथमुपरुन्द्धि नः।।मशकानिव मातङ्गः कंसमुख्यान् इमान् क्षिपन्।   
-यदि विस्मयनीयस्त्वं विस्मये किं न विस्मयः।।नखलीलाविदार्येषु नाथेषु विबुधद्विषाम् ।   
-परिष्करणपर्यायाः पञ्चापि तव हेतयः।।कालनेमिविकारेस्मिन् कंसे विमथिते त्वया ।   
-ईदृशामितरेषां च दत्त एव जलाञ्जलिः।।नमितायतविष्कम्भा दानवप्रभवैः क्षमा।   
-किंचिदुत्तम्भितेवाद्य कंसभारापहारतः।।न खल्वतिशयं कंचिदियमाधातुमर्हति ।   
-सुमणावज्ञक्लृप्तेव स्तुतिरस्मत्कृता त्वयि ।।इति विज्ञापितस्तेन व्रीडादिव नतो विभुः।   
-बालोपलालनमिदं भव्यवृत्तिरभावयत् ।।स वाचा सान्त्वयामास पितरं दीनचेतसम् ।   
-स्ववक्त्रेन्दुविनिष्यन्दिसुधापूरितकुल्यया ।।गम्भीरमधुरां तस्य गिरं निगमगन्धिनीम् ।   
-श्रुत्वा मुक्तिसखीं प्राप मुदमानकदुन्दुभिः।।देवकी च परिष्वज्य सुतं वात्सल्यनिर्भरा ।   
-नन्दगोपवधूलब्धं नवमानन्दमन्वभूत् ।।भूयः प्रादुरभूत् तस्य भुजयुग्मं तिरोहितम् ।   
-तथापि तादृशं मर्त्यं तममन्यन्त तामसाः।।बभूव बलभद्रस्य तेन विश्वातिशायिना।   
-शिरसा विधृतस्यापि किरीटस्येव शेषया ।।क्रियमाणपरिष्कारः किरीटाद्यैः स बन्धुरैः।   
-तानि तान्येव दिव्यानि तत्तदङ्गैरभूषयत् ।।अशोभत शुभं छत्रं तस्य राजन्यलक्षणम् ।   
-तन्नाभिपुण्डरीकस्य रूपान्तरमिवोदितम् ।।चामरद्वितयं शौरेः समया मुखपङ्कजम् ।   
-शुशुभे सप्रतिच्छन्दो हंसमूर्तिरिव स्वयम् ।।स चन्द्र इव संपूर्णः प्रथमो यदुभूभृताम् ।   
-पुनरुन्निद्रयामास कीर्तिं कुमुदिनीमिव ।।अभजन्त द्विजेन्द्रास्तमतद्भोगपराङ्मुखाः।   
-सर्गाधिकारान्निर्विद्य(र्वाप्य)शान्ता इव पितामहाः।।अहार्यान् यदुवंशस्य स भोगान् समकल्पयत् ।   
-स्वपर्यङ्कभुजंगस्य फणामणिगणानिव ।।अमरत्वाय पर्याप्तं तन्मुखेन्दुसमुद्भवम् ।   
-सुधेव परिवारेभ्यः सस्वदे सूनृतं वचः।।प्रार्थितोपि स राज्याय प्रभावज्ञैर्यदूत्तमैः।   
-अरोचयत राजानमुग्रसेनं वयोधिकम् ।।न्यस्तरक्षाभरो राज्ञा यौवराज्यमुपाश्रितः।   
-शुशुभे पारतन्त्र्येण स्वातन्त्र्यवशवर्तिना ।।तस्य गोपायतः पृथ्वीं गोपालकुहनात्यजः।   
-पर्युपास्त पदं धन्या पार्थिवश्रीरनुत्तमा ।।कृतवीराभिषेकं तं क्लृप्तकल्याणकौतुकम् ।   
-तुष्टुवुः समये वेदाः सौस्नातिकपुरस्कृताः।।शक्तिभिस्तिसृभिर्दीप्तो विवस्वानिव दीप्तिभिः(घृष्टिभिः)।   
-स्वपदं पृथिवीं चक्रे सुहृद्भिः सूरिभिर्वृतः।।विक्लृप्तं तस्य बर्हाद्यं हेमरत्नविभूषणैः।   
-वैरोचनिहृतानीतः किरीटो न व्यकल्पत ।।सप्तिभिः सैन्यसुग्रीवमेघपुष्पवलाहकैः।   
-व्यक्तिमन्तोभवन् वेदास्त्यजन्तो धेनुभूमिकाम् ।।पद्माकमलदायादं पदं तस्य स्वमौलिभिः।   
+निस्तरन्त्यचिरात् सन्तो दुस्तरं भवसागरम् ॥
+
+अहितोदन्वदौर्वाग्निमशेषोत्कर्षमातरम् ।   
+भवभैमरथीं भक्तिं भजन्ति त्वयि साधवः॥
+
+भरन्यासाश्वयुक्तेन भाववेगप्रधाविना ।   
+मनोरथेन गन्तव्यः सारथिश्य भवान् सताम् ॥
+
+वयं तु भवता ग्राह्या वासनादुर्गभेदिना   
+मनागिव समुद्बोध्य मा पुनर्मूमुहद्भवान् ॥
+
+महतामपि निष्कम्पा मनुष्यत्वमतिस्त्वयि ।   
+दृढलक्षितचिह्नानां दिङ्मोह इव दुर्दमः॥
+
+दुरन्तसुखखद्योतं दुःखान्धतमसावृतम् ।   
+निजेनैव प्रकाशेन निशीथमुपरुन्द्धि नः॥
+
+मशकानिव मातङ्गः कंसमुख्यान् इमान् क्षिपन्।   
+यदि विस्मयनीयस्त्वं विस्मये किं न विस्मयः॥
+
+नखलीलाविदार्येषु नाथेषु विबुधद्विषाम् ।   
+परिष्करणपर्यायाः पञ्चापि तव हेतयः॥
+
+कालनेमिविकारेस्मिन् कंसे विमथिते त्वया ।   
+ईदृशामितरेषां च दत्त एव जलाञ्जलिः॥
+
+नमितायतविष्कम्भा दानवप्रभवैः क्षमा।   
+किंचिदुत्तम्भितेवाद्य कंसभारापहारतः॥
+
+न खल्वतिशयं कंचिदियमाधातुमर्हति ।   
+सुमणावज्ञक्लृप्तेव स्तुतिरस्मत्कृता त्वयि ॥
+
+इति विज्ञापितस्तेन व्रीडादिव नतो विभुः।   
+बालोपलालनमिदं भव्यवृत्तिरभावयत् ॥
+
+स वाचा सान्त्वयामास पितरं दीनचेतसम् ।   
+स्ववक्त्रेन्दुविनिष्यन्दिसुधापूरितकुल्यया ॥
+
+गम्भीरमधुरां तस्य गिरं निगमगन्धिनीम् ।   
+श्रुत्वा मुक्तिसखीं प्राप मुदमानकदुन्दुभिः॥
+
+देवकी च परिष्वज्य सुतं वात्सल्यनिर्भरा ।   
+नन्दगोपवधूलब्धं नवमानन्दमन्वभूत् ॥
+
+भूयः प्रादुरभूत् तस्य भुजयुग्मं तिरोहितम् ।   
+तथापि तादृशं मर्त्यं तममन्यन्त तामसाः॥
+
+बभूव बलभद्रस्य तेन विश्वातिशायिना।   
+शिरसा विधृतस्यापि किरीटस्येव शेषया ॥
+
+क्रियमाणपरिष्कारः किरीटाद्यैः स बन्धुरैः।   
+तानि तान्येव दिव्यानि तत्तदङ्गैरभूषयत् ॥
+
+अशोभत शुभं छत्रं तस्य राजन्यलक्षणम् ।   
+तन्नाभिपुण्डरीकस्य रूपान्तरमिवोदितम् ॥
+
+चामरद्वितयं शौरेः समया मुखपङ्कजम् ।   
+शुशुभे सप्रतिच्छन्दो हंसमूर्तिरिव स्वयम् ॥
+
+स चन्द्र इव संपूर्णः प्रथमो यदुभूभृताम् ।   
+पुनरुन्निद्रयामास कीर्तिं कुमुदिनीमिव ॥
+
+अभजन्त द्विजेन्द्रास्तमतद्भोगपराङ्मुखाः।   
+सर्गाधिकारान्निर्विद्य(र्वाप्य)शान्ता इव पितामहाः॥
+
+अहार्यान् यदुवंशस्य स भोगान् समकल्पयत् ।   
+स्वपर्यङ्कभुजंगस्य फणामणिगणानिव ॥
+
+अमरत्वाय पर्याप्तं तन्मुखेन्दुसमुद्भवम् ।   
+सुधेव परिवारेभ्यः सस्वदे सूनृतं वचः॥
+
+प्रार्थितोपि स राज्याय प्रभावज्ञैर्यदूत्तमैः।   
+अरोचयत राजानमुग्रसेनं वयोधिकम् ॥
+
+न्यस्तरक्षाभरो राज्ञा यौवराज्यमुपाश्रितः।   
+शुशुभे पारतन्त्र्येण स्वातन्त्र्यवशवर्तिना ॥
+
+तस्य गोपायतः पृथ्वीं गोपालकुहनात्यजः।   
+पर्युपास्त पदं धन्या पार्थिवश्रीरनुत्तमा ॥
+
+कृतवीराभिषेकं तं क्लृप्तकल्याणकौतुकम् ।   
+तुष्टुवुः समये वेदाः सौस्नातिकपुरस्कृताः॥
+
+शक्तिभिस्तिसृभिर्दीप्तो विवस्वानिव दीप्तिभिः(घृष्टिभिः)।   
+स्वपदं पृथिवीं चक्रे सुहृद्भिः सूरिभिर्वृतः॥
+
+विक्लृप्तं तस्य बर्हाद्यं हेमरत्नविभूषणैः।   
+वैरोचनिहृतानीतः किरीटो न व्यकल्पत ॥
+
+सप्तिभिः सैन्यसुग्रीवमेघपुष्पवलाहकैः।   
+व्यक्तिमन्तोभवन् वेदास्त्यजन्तो धेनुभूमिकाम् ॥
+
+पद्माकमलदायादं पदं तस्य स्वमौलिभिः।   
 श्रुतयो धारयामासुः पादपीठीकृतात्मभिः।स वेणुः शङ्खरूपेण प्राचा परिपचेलिमः।   
-अगोपीसंविभागार्हं पपौ तस्याधरामृतम् ।।दिदेश सांदीपनये धनुर्वेदोपदेशिने ।   
-स्वपदारूढतनयप्रत्यानयनदक्षिणाम् ।।प्रहितां पुरुहूतेन स्वसंकल्पानुवर्तिना ।   
-कंसजित् कंसपितरं सुधर्मामध्यवासयत् ।।अशेषरत्नचित्रां तामतीतस्तुतिगोचराम् ।   
+अगोपीसंविभागार्हं पपौ तस्याधरामृतम् ॥
+
+दिदेश सांदीपनये धनुर्वेदोपदेशिने ।   
+स्वपदारूढतनयप्रत्यानयनदक्षिणाम् ॥
+
+प्रहितां पुरुहूतेन स्वसंकल्पानुवर्तिना ।   
+कंसजित् कंसपितरं सुधर्मामध्यवासयत् ॥
+
+अशेषरत्नचित्रां तामतीतस्तुतिगोचराम् ।   
 अद्वैतमिव सर्वेषामद्भुतानाममन्यत ।स च तस्यानुभावेन निध्यातनयपद्धतिः।   
-प्रजापालनधर्मस्य पारदृश्वतमोभवत् ।।कृष्णपक्षमपि प्राप्य स राजा विश्वरञ्जकः।   
-प्रापद्यत परां वृद्धिं सुमनःस्वादनक्षमाम् ।।मलिनैः सततासारैर्मन्त्रिभिश्चपलान्वितैः।   
-विमुक्तः स बभौ भास्वान् मेघैरिव जडा(ला)श्रयैः।।प्रचितं बहुभिस्तीर्थैस्तस्य गूढं चिकार्षितम् ।   
-सारस्वतमिव स्रोतः स्थानेस्थाने व्यजृम्भत।।मानसंरक्षकस्तस्य मन्त्रस्तर्क इवानयः(घः)।   
-अङ्गपञ्चकसंपत्त्या विपक्षे दण्डतां ययौ ।।स्वतः शुद्धां यथास्थानं रोषरागवतीं धियम् ।   
-स दधे यमुनाशोणशबलामिव जाह्नवीम् ।।सप्तभिः सामदानाद्यैरुपायैः स्थानपातिभिः।   
-द्विनवद्वीपसंभूतं रत्नजातमजीहरत् ।।अनुगन्ता स्वनेतृणामुदये विश्वरञ्जकः।   
-दूरीकृततमाः साभूत् द्वितीय इव भानुमान् ।।संचितस्य धनौघस्य स्थानसंचारणेन सः।   
-तटाकस्येव पूर्णस्य परीवाहमकल्पयत् ।।आसागरान्तमवमत्य महीपतीन्द्रान् भूम्ना निजेन परिहृत्य ययातिशापम् ।   
-ओजोनिरोधकमिलाश्रयमुग्रसेनं राजानमेकमकरोज्जगदेकनाथः।।क्षिप्तावद्यं क्षत्रियवृत्त्या बहुशाखं मग्नं शापोदन्वति मान्यं यदुवंशम् ।   
-इच्छाधीनस्वेतरसर्वः स्वमहिम्ना रक्षागोपो रामयवीयान् उदहार्षीत् ।।
+प्रजापालनधर्मस्य पारदृश्वतमोभवत् ॥
+
+कृष्णपक्षमपि प्राप्य स राजा विश्वरञ्जकः।   
+प्रापद्यत परां वृद्धिं सुमनःस्वादनक्षमाम् ॥
+
+मलिनैः सततासारैर्मन्त्रिभिश्चपलान्वितैः।   
+विमुक्तः स बभौ भास्वान् मेघैरिव जडा(ला)श्रयैः॥
+
+प्रचितं बहुभिस्तीर्थैस्तस्य गूढं चिकार्षितम् ।   
+सारस्वतमिव स्रोतः स्थानेस्थाने व्यजृम्भत॥
+
+मानसंरक्षकस्तस्य मन्त्रस्तर्क इवानयः(घः)।   
+अङ्गपञ्चकसंपत्त्या विपक्षे दण्डतां ययौ ॥
+
+स्वतः शुद्धां यथास्थानं रोषरागवतीं धियम् ।   
+स दधे यमुनाशोणशबलामिव जाह्नवीम् ॥
+
+सप्तभिः सामदानाद्यैरुपायैः स्थानपातिभिः।   
+द्विनवद्वीपसंभूतं रत्नजातमजीहरत् ॥
+
+अनुगन्ता स्वनेतृणामुदये विश्वरञ्जकः।   
+दूरीकृततमाः साभूत् द्वितीय इव भानुमान् ॥
+
+संचितस्य धनौघस्य स्थानसंचारणेन सः।   
+तटाकस्येव पूर्णस्य परीवाहमकल्पयत् ॥
+
+आसागरान्तमवमत्य महीपतीन्द्रान् भूम्ना निजेन परिहृत्य ययातिशापम् ।   
+ओजोनिरोधकमिलाश्रयमुग्रसेनं राजानमेकमकरोज्जगदेकनाथः॥
+
+क्षिप्तावद्यं क्षत्रियवृत्त्या बहुशाखं मग्नं शापोदन्वति मान्यं यदुवंशम् ।   
+इच्छाधीनस्वेतरसर्वः स्वमहिम्ना रक्षागोपो रामयवीयान् उदहार्षीत् ॥
+
