--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/23.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/23.md
@@ -3,66 +3,186 @@ title = "23 सर्गः-23"
 
 +++
 अथाधिकारच्यवनात् य इन्द्राः पञ्चाभवन् पाण्डुसुताः पृथिव्याम्।   
-जयार्थिनस्ते जगदेकनाथं प्रपेदिरे सत्त्वधनाः सदाराः।।तमोपहैस्तत्त्वविदामृषीणां वाक्यैस्त्रिवेदीमनुसञ्जिहानैः।   
-कृष्णं यथावत् कृतिनो विदन्तः तस्याभवन् प्राणसमाः सखायः।।तदाश्रयास्तत्प्रणिधेयकृत्याः तेनैव नाथेन सदा सनाथाः।   
-अपारयन् योगिभिरप्यजय्यान् बाह्यान्तरान् जेतुमरातिवर्गान्।।प्रतिक्रियाः प्राग्भवदुष्कृतानां प्राणोपरोधेपि निरुद्धपापाः।   
-धीरास्त्रिलोकीसुहृदः प्रसादात् विपाकरम्या विपदः प्रसेहुः।।अलङ्घयन् विश्वपतेः प्रसादात् वृत्तिं पराचीमिव वीतरागाः।   
-अरातिभिश्छद्मविधिप्रवीणैः आपादितामग्निजलादिपीडाम्।।कलिङ्गनीतिं कलहैकतानां कर्णे च पार्थेन निबद्धवैरम्।   
-आस्थाय दुश्शासनपूर्वजन्मा धर्मोत्तरान् जेतुमियेष पार्थान् ।।स राजसूयक्रतुधर्मपत्नीं भीमेन गाण्डीवभृता च मान्याम्।   
-द्यूतच्छलप्रापितदासभावां साध्वीं मुधा पर्यभवत् सभायाम् ।।अनन्यनाथां स्थितिमाप्नुवत्या नाथः स्वसम्बोधननामगर्भम्।   
-शुश्राव दूरान्तरितोपि शौरिः प्राक्रोशनं पार्थपतिव्रतायाः।।मिथ्याविचारान्मिषतां गुरूणां प्रभुः सतां पाण्डवधर्मपत्नीम्।   
-दुश्शासनव्याकुलितोत्तरीयामक्षय्यकौशेयवतीमकार्षीत् ।।अवाप्तकामाः प्रबलैरमित्रैः अक्षच्छलेनापहृतं स्वराज्यम्।   
-निक्षिप्तकर्तव्यभरा बभूवुः सत्त्वाधिकाः सात्वतयूथनाथे ।।स्वान्त्र्यगन्धद्विरदाङ्कुशेन स्वेनैव शीलेन विनीयमानः।   
-अनन्यलभ्यं प्रतिलम्भितोभूत् प्रभुः स्वयं पाण्डवदूतभावम्।।स तादृशीमाद्रियत त्रिधामा प्रेष्यक्रियां प्रेषितदेववृन्दः।   
-ननु प्रभूणां निरपेक्षभूम्नां प्रसाधनं भक्तजने गुणत्वम्।।अपि प्रभूतानुगुणक्रियाभ्यः श्लाघापदं तत्त्वविदां बभूव।   
-अनन्यतन्त्रस्य विभोस्तदेतत् नाथोचितं नन्तृषु पारतन्त्र्यम्।।तपस्यतः पुत्रसमुद्भवार्थं मार्गागतं मोचयतः पिशाचम्।   
-अजन्मनो जन्मभृतश्च शौरेः स्वामित्वसंवादि बभूव दूत्यम्।।सरोषसीरायुधहेतिशक्त्या साचीकृतां कौरवराजधानीम्।   
-अद्यापि गङ्गासलिलप्रवाहे प्रक्रान्तपातामिव सम्प्रपेदे।।खद्योतवत् दर्शितखञ्जदीप्तीन् प्रज्ञादृशो भूमिभृतः सभायाम्।   
-प्राप्तोदयो भानुरिव त्रिधामा प्रच्छादयामास कुरून् स्वधाम्ना।।तदागन्म प्रतिपन्नहर्षाः तद्दर्शनेनाहितपारवश्याः।   
-अतर्कितप्रस्मृतवैरबन्धाः वृत्तिं द्विषन्तो विदधुर्यथार्हम् ।।उलूखले भक्तगुणे च बद्धं गुणोत्तरे गोपवधूस्तने च ।   
-इयेष बन्धुं जगदेकबन्धुं दुर्योधनो दुस्त्यजमृत्युपाशः।।प्रकाशयन् किञ्चिदिवाप्रमेयः प्रभावमात्मीयमनन्यवेद्यम् ।   
-मुहुः प्रतीपाचरणोत्सुकानां मोघाशतां मूढधियामकार्षीत् ।।स्ववेदितं संसदि धार्तराष्ट्रे सन्धित्सतो धर्मसुतस्य वाक्यम्।   
-अनाददाने मुरभिन्निवृत्तः सामुग्रहो विग्रहमन्वमंस्त।।नरांशजुष्टेन धनञ्जयेन रथी भवन् सारथिरात्मना च ।   
-धनुर्भृता तोत्रभृता च भेजे पृथक्त्वमैक्यं च यथाप्रमाणम्।।रथाधिरूढं च रथं च रक्षन् यथार्थतो दर्शयति स्म यन्ता।पुरःस्थिते गोप्तरि विश्वहेतौ पश्चादवस्थायिनि तत्प्रवर्त्ये ।   
-अनन्ययोगात् स रथो बभार प्राधीतवेद्यां प्रणवप्रवृत्तिम्।।प्रभुर्बभौ प्रग्रहतोत्त्रपाणिः कालात्मना भावितपाशदण्डः।   
-यदा तदा देवगणेन मेने शान्तं बलं शान्तनवप्रधानाम्।।धुरन्धरः स्वर्गनिकेतनानां धुर्योत्थितैर्धूसरितो रजोभिः।   
-रराज मध्ये रथयूथपानां गोष्ठे पशूनामिव गोपवेषः।।समुद्रसङ्घातनिभे नृपाणां सैन्यद्वये संयति संप्रवृत्ते।   
-अस्थानकारुण्यवशान्निवृत्तं धनञ्जयं वीतशुचं वितेने ।।फलादपि स्वादुतमप्ररोहं प्रोत्साहने सख्युरिवोद्यतः सः।   
-जगद्धितार्थाय जगौ दयावान् अन्यैरविज्ञेयमनन्यधर्मम्।।चिरन्तनस्नेहदयादिमूलं चिन्तार्णवं निस्तरतो दुरन्तम् ।   
-किरीटिनः केशवसूक्तिरासीत् कालोचिता काचन पोतपात्री।।अभङ्गुरैर्धौतफलानुषङ्गात् विद्याशरैर्विश्वगुरोरुपात्तैः।   
-विवेकधन्वा विषमान् अजैषीत् अन्तस्स्थितान् जिष्णुररातिसङ्घान्।।उपघ्नभूतां श्रुतिवल्लरीणामुपास्त तुष्यन् उपदेशमुद्राम्।   
-नखांशुभिः क्षिप्ततमः कलङ्कां नाथस्य पार्थो नतपूर्वभागः।।विभकातसामान्यविशेषधर्मा प्रादुर्बभूवोपन्षत् प्रभोर्या।   
-स एव तां व्यासमुनिः समीचीं पर्यग्रहीत् भारतवेदवक्ता।।अभञ्जनीयां परधर्मसत्तां अनश्वरीं भारदसूर्यदीप्तिम्।   
-विदुः श्रुतीनामनघां वयस्यां गीतामसम्मूढजनाविगीताम्।।कपिधवजस्तस्य विभोरपश्चत् तदर्पितं चक्षुरवाप्य दिव्यम्।   
-विरिञ्चिपूर्वैरपि दुर्निरीक्षं विश्वाश्रयं रूममशेषमूर्तेः।।तस्मिन् अभिव्याप्तसमस्तलोके स तत्स्वरूपेण विकल्प्यमाने।   
-विडम्बितान् गोपुरधारिबिम्बौः देवान् विभोरैक्षत दिव्यदेहे।।प्रख्यातदीक्षं प्रणतार्तिभङ्गे पार्थस्तदा दैत्यरिपं प्रपन्नः।   
-विनाशयामास बलं रिपूणां विपत्प्रतीकारपरेण सख्या।।स्वहस्तपद्माञ्चिततोत्रपाशः स्वच्छन्दलीलासहधर्मचारी।   
-गतागतैरप्रतिमैः स चक्रे जयश्रियो जैत्ररथेन डोलाम्।।सविस्मयः संयति सव्यसाची तत्तादृशा सारथिना समेतः।   
-मनोजवानां निजसायकानामग्रेसरं स्यन्दनमन्वपश्यत् ।।यथा नियच्छत्ययनिन्द्रियाश्वान् जीवाश्रमे देहरथे निबद्धान्।   
-तथार्जुनस्यन्दनधुर्यनेता बभूव नान्येन निदर्शनीयः।।यदेकदेशे निखिलं तदन्यत् तद्देहभागेषु च संविभक्तम्।निवर्तितं वैरिजनोपमर्दात् न्यस्तं रथे चक्रमुपाददानः।   
-नतप्रतिज्ञानुपरोधहेतोः आत्मप्रतिज्ञामजहात् स्वतन्त्रः।।द्विषत्प्रयुक्तं दुरपोहमस्त्रं भुजान्तरालेन विभुः प्रतीच्छन्।   
-विधाय वैकल्पिकवैजयन्तीं प्रच्छादितं प्राणयति स्म पार्थम्।।निवेशितां तस्य पदे च पूजां निशाम्य गङ्गामिव चन्द्रमौलौ।   
-अनन्यसामान्यममंस्त सख्युः सङ्कोचवैदेशिकमीश्वरत्वम्।।दिवाकरेनस्तमितेतिघाढं तमः सृजंस्तामसमोहनार्थम्।   
-प्रपन्नरक्षाप्रतिपन्नदीक्षः सत्याभिसन्धं विदधे सखायम्।।सुरैरशेषैरपि जातरोषैः स दुर्जयान् भीष्ममुखान् जिगाय।   
-सहायशक्त्या युधि सव्यसाजी किं दुष्करं केशवमाश्रितानाम्।।स्वप्नः किमाशीदथवेन्द्रजालं बभूव गन्धर्वपुरी किमेषा ।   
-इतीव शङ्कां विदधे प्रलीना पताकिनी कौरवपाण्डवानाम्।।आकृष्टदेवासुरसाम्परायैः ओजस्विनां शस्त्रभृतामुदन्तैः।   
-प्रायस्तदा प्रत्यवहारलीलां आकालिकीं विश्वभुगन्वभुङ्क्त।।जिघांसुरष्टादश सम्पतन्तीः अक्षौहिणीरद्भुतभीमरूपाः।   
-स्वतन्त्रयामाय मिथःप्रतीपान् सूत्रावसक्तानिव दारुमर्त्यान्।।कृषीवलः स्थावरजङ्गमानां क्षेत्रे कुरूणां समकालपाकान्।   
-अनीकशालीन् भुजशालिवर्गैः फलोपपन्नान् प्रभुरित्यलावीत्।।निस्तीर्य सङ्ग्राममहासमुद्रं संसारपोतेन परेण सख्या ।   
-धनञ्जयस्तत्पदमेव भेजे निर्धूतनीहारदिवाकराभः।।द्रौणिस्तदा सौप्तिकमाददानः कृपेण सार्धं कृतवर्मणा च ।   
-हताहितैः पाण्डुसुतैरवाप्तं सैन्यावशेषं शमयां बभूव।।इत्थं दशाष्टौ च निपात्य भूमावक्षौहिणीरद्भुतभीमरूपाः।   
-सतां पतिः सत्त्वसमृद्धिरोगात् उल्लाघितामातनुतेव पृथ्वीम्।।विभुः स्वसङ्कल्पहतान् विनिघ्नन् धर्मैकतानेन धनञ्जयेन ।   
-प्रतोदसन्दंशिकयोदहार्षीत् पाञ्चालकन्यापरिभूतिशल्यम्।।परास्त्रविस्रंसितमुत्तरायाः पद्मासनाद्यैरपि पूजितेन।   
-गङ्गाधरणयोः प्रभवेन गर्भं पस्पर्श पादेन परावरेशः।।विप्लोषितं द्रौणिशरेण बालं सञ्जीवयन् पादरजः प्रभावात्।   
-वधूकृतक्षुद्रशिलाविशेषं रामानुजो राममिवान्वकार्षीत्।।तस्य श्रुतिश्रेणिशिरोधृतानां स्पर्शः प्रजेशादिभिरीप्सितोभूत्   
-परीक्षिदुत्थानपरीक्षितानां अघच्छिदामङ्घ्रिरजःकणानाम्।।अजातदीनां कालस्य दीप्तामिव खड्गरेखाम्।   
-विपक्षसंहारमहाभुजङ्गीं वेणीं प्रियैः संयमयांबभूव।।पितामहाय प्रततान पार्थः शरप्रयुक्तं शयनं यदग्र्यम्।   
-योगासनं योजितचित्तधैर्यं तदेव पर्याप्तगुणं तदासीत्।।विन्यस्य धर्मतनये विजयाधिकारं सख्यार्जुनेन यशसेव धनुर्धराणाम्।   
-दध्मौ स दैत्यमथनो युधि पाञ्चजन्यं वृष्ण्यन्धकादिपरिशेषितभूमिभारः।।प्रत्यानिनाय रथमात्तजयः स जन्यात् धन्यावलोकनधनञिजयदर्शनीयः।   
-सारथ्यसंविदवधीरितहेतिजुष्टः सेनापरागपरिधूसरकुन्तलश्रीः।।आलिङ्ग्य गाढमवगाढरसं रणाब्धौ वीरव्रणैः कृतविभूषणमिन्द्रसूनुम्।   
-अन्यावतारपरिकल्पनकेलिलोभात् ऐक्यं निनाय निजमंशमिवान्यनिष्ठम्।।रणभुवि शरतल्पे लीलया शायितेन स्वपदसमुदितायाः सूनुना सिद्धसिन्धोः।   
-अनतिचिरविलम्बादाप्तकामं धरित्रीं कलिमिव शमयिष्यन् ख्यापयामास धर्मान्।।अप्रत्यूहितसार्वभौमविभवैरभ्यर्चितः पाण्डवैः   
+जयार्थिनस्ते जगदेकनाथं प्रपेदिरे सत्त्वधनाः सदाराः॥
+
+तमोपहैस्तत्त्वविदामृषीणां वाक्यैस्त्रिवेदीमनुसञ्जिहानैः।   
+कृष्णं यथावत् कृतिनो विदन्तः तस्याभवन् प्राणसमाः सखायः॥
+
+तदाश्रयास्तत्प्रणिधेयकृत्याः तेनैव नाथेन सदा सनाथाः।   
+अपारयन् योगिभिरप्यजय्यान् बाह्यान्तरान् जेतुमरातिवर्गान्॥
+
+प्रतिक्रियाः प्राग्भवदुष्कृतानां प्राणोपरोधेपि निरुद्धपापाः।   
+धीरास्त्रिलोकीसुहृदः प्रसादात् विपाकरम्या विपदः प्रसेहुः॥
+
+अलङ्घयन् विश्वपतेः प्रसादात् वृत्तिं पराचीमिव वीतरागाः।   
+अरातिभिश्छद्मविधिप्रवीणैः आपादितामग्निजलादिपीडाम्॥
+
+कलिङ्गनीतिं कलहैकतानां कर्णे च पार्थेन निबद्धवैरम्।   
+आस्थाय दुश्शासनपूर्वजन्मा धर्मोत्तरान् जेतुमियेष पार्थान् ॥
+
+स राजसूयक्रतुधर्मपत्नीं भीमेन गाण्डीवभृता च मान्याम्।   
+द्यूतच्छलप्रापितदासभावां साध्वीं मुधा पर्यभवत् सभायाम् ॥
+
+अनन्यनाथां स्थितिमाप्नुवत्या नाथः स्वसम्बोधननामगर्भम्।   
+शुश्राव दूरान्तरितोपि शौरिः प्राक्रोशनं पार्थपतिव्रतायाः॥
+
+मिथ्याविचारान्मिषतां गुरूणां प्रभुः सतां पाण्डवधर्मपत्नीम्।   
+दुश्शासनव्याकुलितोत्तरीयामक्षय्यकौशेयवतीमकार्षीत् ॥
+
+अवाप्तकामाः प्रबलैरमित्रैः अक्षच्छलेनापहृतं स्वराज्यम्।   
+निक्षिप्तकर्तव्यभरा बभूवुः सत्त्वाधिकाः सात्वतयूथनाथे ॥
+
+स्वान्त्र्यगन्धद्विरदाङ्कुशेन स्वेनैव शीलेन विनीयमानः।   
+अनन्यलभ्यं प्रतिलम्भितोभूत् प्रभुः स्वयं पाण्डवदूतभावम्॥
+
+स तादृशीमाद्रियत त्रिधामा प्रेष्यक्रियां प्रेषितदेववृन्दः।   
+ननु प्रभूणां निरपेक्षभूम्नां प्रसाधनं भक्तजने गुणत्वम्॥
+
+अपि प्रभूतानुगुणक्रियाभ्यः श्लाघापदं तत्त्वविदां बभूव।   
+अनन्यतन्त्रस्य विभोस्तदेतत् नाथोचितं नन्तृषु पारतन्त्र्यम्॥
+
+तपस्यतः पुत्रसमुद्भवार्थं मार्गागतं मोचयतः पिशाचम्।   
+अजन्मनो जन्मभृतश्च शौरेः स्वामित्वसंवादि बभूव दूत्यम्॥
+
+सरोषसीरायुधहेतिशक्त्या साचीकृतां कौरवराजधानीम्।   
+अद्यापि गङ्गासलिलप्रवाहे प्रक्रान्तपातामिव सम्प्रपेदे॥
+
+खद्योतवत् दर्शितखञ्जदीप्तीन् प्रज्ञादृशो भूमिभृतः सभायाम्।   
+प्राप्तोदयो भानुरिव त्रिधामा प्रच्छादयामास कुरून् स्वधाम्ना॥
+
+तदागन्म प्रतिपन्नहर्षाः तद्दर्शनेनाहितपारवश्याः।   
+अतर्कितप्रस्मृतवैरबन्धाः वृत्तिं द्विषन्तो विदधुर्यथार्हम् ॥
+
+उलूखले भक्तगुणे च बद्धं गुणोत्तरे गोपवधूस्तने च ।   
+इयेष बन्धुं जगदेकबन्धुं दुर्योधनो दुस्त्यजमृत्युपाशः॥
+
+प्रकाशयन् किञ्चिदिवाप्रमेयः प्रभावमात्मीयमनन्यवेद्यम् ।   
+मुहुः प्रतीपाचरणोत्सुकानां मोघाशतां मूढधियामकार्षीत् ॥
+
+स्ववेदितं संसदि धार्तराष्ट्रे सन्धित्सतो धर्मसुतस्य वाक्यम्।   
+अनाददाने मुरभिन्निवृत्तः सामुग्रहो विग्रहमन्वमंस्त॥
+
+नरांशजुष्टेन धनञ्जयेन रथी भवन् सारथिरात्मना च ।   
+धनुर्भृता तोत्रभृता च भेजे पृथक्त्वमैक्यं च यथाप्रमाणम्॥
+
+रथाधिरूढं च रथं च रक्षन् यथार्थतो दर्शयति स्म यन्ता।पुरःस्थिते गोप्तरि विश्वहेतौ पश्चादवस्थायिनि तत्प्रवर्त्ये ।   
+अनन्ययोगात् स रथो बभार प्राधीतवेद्यां प्रणवप्रवृत्तिम्॥
+
+प्रभुर्बभौ प्रग्रहतोत्त्रपाणिः कालात्मना भावितपाशदण्डः।   
+यदा तदा देवगणेन मेने शान्तं बलं शान्तनवप्रधानाम्॥
+
+धुरन्धरः स्वर्गनिकेतनानां धुर्योत्थितैर्धूसरितो रजोभिः।   
+रराज मध्ये रथयूथपानां गोष्ठे पशूनामिव गोपवेषः॥
+
+समुद्रसङ्घातनिभे नृपाणां सैन्यद्वये संयति संप्रवृत्ते।   
+अस्थानकारुण्यवशान्निवृत्तं धनञ्जयं वीतशुचं वितेने ॥
+
+फलादपि स्वादुतमप्ररोहं प्रोत्साहने सख्युरिवोद्यतः सः।   
+जगद्धितार्थाय जगौ दयावान् अन्यैरविज्ञेयमनन्यधर्मम्॥
+
+चिरन्तनस्नेहदयादिमूलं चिन्तार्णवं निस्तरतो दुरन्तम् ।   
+किरीटिनः केशवसूक्तिरासीत् कालोचिता काचन पोतपात्री॥
+
+अभङ्गुरैर्धौतफलानुषङ्गात् विद्याशरैर्विश्वगुरोरुपात्तैः।   
+विवेकधन्वा विषमान् अजैषीत् अन्तस्स्थितान् जिष्णुररातिसङ्घान्॥
+
+उपघ्नभूतां श्रुतिवल्लरीणामुपास्त तुष्यन् उपदेशमुद्राम्।   
+नखांशुभिः क्षिप्ततमः कलङ्कां नाथस्य पार्थो नतपूर्वभागः॥
+
+विभकातसामान्यविशेषधर्मा प्रादुर्बभूवोपन्षत् प्रभोर्या।   
+स एव तां व्यासमुनिः समीचीं पर्यग्रहीत् भारतवेदवक्ता॥
+
+अभञ्जनीयां परधर्मसत्तां अनश्वरीं भारदसूर्यदीप्तिम्।   
+विदुः श्रुतीनामनघां वयस्यां गीतामसम्मूढजनाविगीताम्॥
+
+कपिधवजस्तस्य विभोरपश्चत् तदर्पितं चक्षुरवाप्य दिव्यम्।   
+विरिञ्चिपूर्वैरपि दुर्निरीक्षं विश्वाश्रयं रूममशेषमूर्तेः॥
+
+तस्मिन् अभिव्याप्तसमस्तलोके स तत्स्वरूपेण विकल्प्यमाने।   
+विडम्बितान् गोपुरधारिबिम्बौः देवान् विभोरैक्षत दिव्यदेहे॥
+
+प्रख्यातदीक्षं प्रणतार्तिभङ्गे पार्थस्तदा दैत्यरिपं प्रपन्नः।   
+विनाशयामास बलं रिपूणां विपत्प्रतीकारपरेण सख्या॥
+
+स्वहस्तपद्माञ्चिततोत्रपाशः स्वच्छन्दलीलासहधर्मचारी।   
+गतागतैरप्रतिमैः स चक्रे जयश्रियो जैत्ररथेन डोलाम्॥
+
+सविस्मयः संयति सव्यसाची तत्तादृशा सारथिना समेतः।   
+मनोजवानां निजसायकानामग्रेसरं स्यन्दनमन्वपश्यत् ॥
+
+यथा नियच्छत्ययनिन्द्रियाश्वान् जीवाश्रमे देहरथे निबद्धान्।   
+तथार्जुनस्यन्दनधुर्यनेता बभूव नान्येन निदर्शनीयः॥
+
+यदेकदेशे निखिलं तदन्यत् तद्देहभागेषु च संविभक्तम्।निवर्तितं वैरिजनोपमर्दात् न्यस्तं रथे चक्रमुपाददानः।   
+नतप्रतिज्ञानुपरोधहेतोः आत्मप्रतिज्ञामजहात् स्वतन्त्रः॥
+
+द्विषत्प्रयुक्तं दुरपोहमस्त्रं भुजान्तरालेन विभुः प्रतीच्छन्।   
+विधाय वैकल्पिकवैजयन्तीं प्रच्छादितं प्राणयति स्म पार्थम्॥
+
+निवेशितां तस्य पदे च पूजां निशाम्य गङ्गामिव चन्द्रमौलौ।   
+अनन्यसामान्यममंस्त सख्युः सङ्कोचवैदेशिकमीश्वरत्वम्॥
+
+दिवाकरेनस्तमितेतिघाढं तमः सृजंस्तामसमोहनार्थम्।   
+प्रपन्नरक्षाप्रतिपन्नदीक्षः सत्याभिसन्धं विदधे सखायम्॥
+
+सुरैरशेषैरपि जातरोषैः स दुर्जयान् भीष्ममुखान् जिगाय।   
+सहायशक्त्या युधि सव्यसाजी किं दुष्करं केशवमाश्रितानाम्॥
+
+स्वप्नः किमाशीदथवेन्द्रजालं बभूव गन्धर्वपुरी किमेषा ।   
+इतीव शङ्कां विदधे प्रलीना पताकिनी कौरवपाण्डवानाम्॥
+
+आकृष्टदेवासुरसाम्परायैः ओजस्विनां शस्त्रभृतामुदन्तैः।   
+प्रायस्तदा प्रत्यवहारलीलां आकालिकीं विश्वभुगन्वभुङ्क्त॥
+
+जिघांसुरष्टादश सम्पतन्तीः अक्षौहिणीरद्भुतभीमरूपाः।   
+स्वतन्त्रयामाय मिथःप्रतीपान् सूत्रावसक्तानिव दारुमर्त्यान्॥
+
+कृषीवलः स्थावरजङ्गमानां क्षेत्रे कुरूणां समकालपाकान्।   
+अनीकशालीन् भुजशालिवर्गैः फलोपपन्नान् प्रभुरित्यलावीत्॥
+
+निस्तीर्य सङ्ग्राममहासमुद्रं संसारपोतेन परेण सख्या ।   
+धनञ्जयस्तत्पदमेव भेजे निर्धूतनीहारदिवाकराभः॥
+
+द्रौणिस्तदा सौप्तिकमाददानः कृपेण सार्धं कृतवर्मणा च ।   
+हताहितैः पाण्डुसुतैरवाप्तं सैन्यावशेषं शमयां बभूव॥
+
+इत्थं दशाष्टौ च निपात्य भूमावक्षौहिणीरद्भुतभीमरूपाः।   
+सतां पतिः सत्त्वसमृद्धिरोगात् उल्लाघितामातनुतेव पृथ्वीम्॥
+
+विभुः स्वसङ्कल्पहतान् विनिघ्नन् धर्मैकतानेन धनञ्जयेन ।   
+प्रतोदसन्दंशिकयोदहार्षीत् पाञ्चालकन्यापरिभूतिशल्यम्॥
+
+परास्त्रविस्रंसितमुत्तरायाः पद्मासनाद्यैरपि पूजितेन।   
+गङ्गाधरणयोः प्रभवेन गर्भं पस्पर्श पादेन परावरेशः॥
+
+विप्लोषितं द्रौणिशरेण बालं सञ्जीवयन् पादरजः प्रभावात्।   
+वधूकृतक्षुद्रशिलाविशेषं रामानुजो राममिवान्वकार्षीत्॥
+
+तस्य श्रुतिश्रेणिशिरोधृतानां स्पर्शः प्रजेशादिभिरीप्सितोभूत्   
+परीक्षिदुत्थानपरीक्षितानां अघच्छिदामङ्घ्रिरजःकणानाम्॥
+
+अजातदीनां कालस्य दीप्तामिव खड्गरेखाम्।   
+विपक्षसंहारमहाभुजङ्गीं वेणीं प्रियैः संयमयांबभूव॥
+
+पितामहाय प्रततान पार्थः शरप्रयुक्तं शयनं यदग्र्यम्।   
+योगासनं योजितचित्तधैर्यं तदेव पर्याप्तगुणं तदासीत्॥
+
+विन्यस्य धर्मतनये विजयाधिकारं सख्यार्जुनेन यशसेव धनुर्धराणाम्।   
+दध्मौ स दैत्यमथनो युधि पाञ्चजन्यं वृष्ण्यन्धकादिपरिशेषितभूमिभारः॥
+
+प्रत्यानिनाय रथमात्तजयः स जन्यात् धन्यावलोकनधनञिजयदर्शनीयः।   
+सारथ्यसंविदवधीरितहेतिजुष्टः सेनापरागपरिधूसरकुन्तलश्रीः॥
+
+आलिङ्ग्य गाढमवगाढरसं रणाब्धौ वीरव्रणैः कृतविभूषणमिन्द्रसूनुम्।   
+अन्यावतारपरिकल्पनकेलिलोभात् ऐक्यं निनाय निजमंशमिवान्यनिष्ठम्॥
+
+रणभुवि शरतल्पे लीलया शायितेन स्वपदसमुदितायाः सूनुना सिद्धसिन्धोः।   
+अनतिचिरविलम्बादाप्तकामं धरित्रीं कलिमिव शमयिष्यन् ख्यापयामास धर्मान्॥
+
+अप्रत्यूहितसार्वभौमविभवैरभ्यर्चितः पाण्डवैः   
 प्रत्यावृत्तिमहोत्सवेन मुदितां प्राप्तः पुरीं द्वारकाम्।   
 प्रत्यक्षं प्रथयाम्बभूव विहरन् प्रीतः प्रियाभिः समं   
-शुद्धः सामपदागमैरधिगतां स्वाधीनतां श्रीपतिः।।   
+शुद्धः सामपदागमैरधिगतां स्वाधीनतां श्रीपतिः॥
+
+   
 इति त्रयोविंशः सर्गः।
