--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/24.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/24.md
@@ -4,100 +4,464 @@ title = "24 सर्गः-24"
 +++
 अथ निजविभवादजातशत्रौ प्रशमितशत्रुबले निवेश्य भूमिम् ।   
 परिचरणफलं प्रभुः प्रयच्छन्नमितगुणाभिररंस्त वल्लभाभिः ॥1॥क्रतुविधिनियतोऽप्यकर्मवश्यः परिचितकामरसोऽपि वीतरागः ।   
-नगरवसतिरप्यशेषवासः कथमिव केन विभुः स वर्णनीयः ।।2।।अनुगमितमिदं स्वदाररक्षामनघमनोभवतन्त्रमाननीयम् ।   
+नगरवसतिरप्यशेषवासः कथमिव केन विभुः स वर्णनीयः ॥
+
+2॥
+
+अनुगमितमिदं स्वदाररक्षामनघमनोभवतन्त्रमाननीयम् ।   
 निरुपाधिकरस्य नेतुरासीत् नृपतिमहर्षिभिरञ्चितं चरित्रम् ॥3॥श्रुतिशतमहिते पदे परस्मिन् सितजलधौ रविमण्डले च सिद्धाम् ।   
-बहुमतिमतिशय्य सा बभासे नरकरिपोरवरोधभूमिरग्र्या ।।4।।निधिगणमुखवान्तनिष्कराजिः प्रचितगुणा मणिभिस्स्यमन्तकाद्यैः ।   
-प्रमुदितमहिषीगणेन चक्रे यदुनगरी विभुना निवासभूमिः ।।5।।अविकलविभवस्य विश्वमूर्तेरधिवसनं यदुवीरराजधान्याम् ।   
-अनुदिनमनपायिनीं प्रतिष्ठामभिलषतामनुचिन्तनीयमासीत् ।।6।।सह मुनिभिरुपास्त धर्ममाद्यं व्यवहरणानि ददर्श वेदविद्भिः ।   
-अरमत च वधूजनैर्यथार्हं बहुतनुरक्रमतो विचित्रशक्तिः ।।7।।अपि युगपदवाप्तनैकदेहैरुपनतयोगबलैस्स्वकर्मनिघ्नैः ।   
-धृतबहुवपुषा जगद्विधात्रा जितकरणेन तु भुज्यते तदर्थः ।।8।।यदुपतिरधिरूढचन्द्रशालः सह दयिताभिरन्यमानसाभिः ।   
-जलनिधिमभितः प्रदर्शयंस्ताः निजमिव धाम निवेदयांबभूव ।।9।।निजपदमनपायमाश्रितानां प्रभुरपवर्गदशामिव प्रयच्छन् ।   
-अमितबहुगुणामनन्यलभ्यामतनुत कामपि संपदं प्रियाणाम् ।।10।।स्वयमुदवसिते स्ववासधन्ये त्रिषु भुवनेषु समामिवाद्भुतानाम् ।   
-अतनुत समवायमात्मयोगात् अतिशयिनीमथवा विभुस्समृद्धिम् ।।11।।विधिसदनमुखेष्वदृष्टपूर्वां प्रथितपरस्परसंमि(म)तिं समृद्धिम् ।   
-यदुपपतिदयितागृहेषु पश्यन् मुदमभजद्भुवि नारदो मुनीन्द्रः ।।12।।ललितरुचिषु कल्पवृक्षपोतैः उपवनराजिषु तस्य सञ्चरिष्णोः ।   
-अदधुरवयवैर्मुदं मुरारेः अमुकृतपुष्पफलादिकैस्तरुण्यः ।।13।।अधिगतकुसुमावचायलीलः प्रमदवनानि विभूषयन् स्वधाम्ना ।   
-प्रजनितमदनो मनस्विनीभिः गुणसुरभिः सुरभिः स्वयं स मेने ।।14।।अमृतमयपयः परिप्लुतानां विषमगुणेषु विहारवापिकानाम् ।   
-कमलकुवलायादिषु प्रियाणां मुखनयनस्तितकान्तिमभ्यनन्दत् ।।16।।अवितथवमहिमा निजप्रसादादनघमनोरथतोषितासु तासु ।   
-स्वपरिजनतया सुरैर्नियुक्ता निरदिशदप्सपरो निदेशभाजः ।।17।।बहिरुपनगरं बलानि दृष्ट्वा सह यदुभिस्समये निवर्तमानम् ।   
-ददृशुरधिगवाक्षमेकचित्ता रथतुरगादिषु रामपश्चिमं तम् ।।18।।विधिवदनुविधाय देवयात्रां प्रतिपुरवीथिपरिक्रमेव दृश्यम् ।   
-पतिमनुददृशुस्तमेव दूरादचरमदेवमनन्यदेवतास्ताः ।।19।।बहुविधमुपहारजातमग्र्यं सुरपतिभिः स्वयमाहृतं मुकुन्दः ।   
-अपि गगनचरैरदृष्टपूर्वं सममवरोधजनस्य संविभेजे ।।20।।उपचितशिखरे वदान्यरत्नैः उचितगुहाश्रितहंसतूलतल्पे ।   
-बहुरिव स बभौ विहारशैले प्रतिमणिभित्तिविभक्तचारुबिम्बः ।।21।।युगपदखिलमादरेण साक्षात् युवतिजनस्य निदर्शयन्मुकुन्दः ।   
-असकृदुपगमय्य चित्रशालामनघसमाधिदशामिवाततान ।।22।।अनितरमनसां स्ववल्लभानां नरकजिता निरपायवैभवेन ।   
-भवभयविनिवारिणी स्वभक्तिः ललितविहारमुखेण लम्भिताऽभूत् ।।23।।प्रमुदितविबुधाहृतप्रकॢप्तः कनकसरोजवनैरलंकृतानाम् ।   
-अतिशयमवरोधदीर्घिकाणामधिसुरसिन्धुसमीक्षितं निदध्यौ ।।24।।विहरति वनिताजने तदीयैः अपलपितामवलोकनप्रभावैः ।   
-पुनरपि हरिनीलरत्नभासा दधुरसितोत्पलसंपदं सरस्यः ।।25।।स्थिरधृतिमधिरोप्य रत्नडोलां गुणघटितामिव माधवः स्वमायाम् ।   
-अगमयत गतागतान्यभीक्ष्णं सुकृतजुषः स्वयमङ्गनाः स्वतन्त्रः ।।26।।रुचिरकनकश्रृङ्गवक्त्रवान्तैः प्रतितनु कुङ्कुमवारिभिः प्रसिञ्चन् ।   
-अजनयदनुरागयोगमन्तः बहिरपि तोयविहारतो वधूनाम् ।।27।।नवमणिपरिकल्पितेषु नाथः कमलवनान्तरकेलिमन्दिरेषु ।   
-श्रिय इव सुदृशो गृहीतपद्मा हृदि निदधे पुरुषोत्तमः प्रतीतः ।।28।।दिशि दिशि मकरन्दवर्षदिग्धां विविधपरागविभक्तचूर्णचित्राम् ।   
-भुवमभजत साकमङ्गनाभिः पु(चु)लकिदृष्टिषु पुष्पमण्डलेषु ।।29।।अनुविहितमहोत्सवो यथार्हं वितरणतोषितवन्दिबन्धुवर्गः ।   
-परिणयनविधिं लतावधूनामतनुत चूतवरैः प्रियार्पितानाम् ।।30।।सुतबहुमतिभागिनां शुकानामुपहृतदिव्यरसोपभोगभाजम् ।   
-श्रुतिमधुरगिरां स्वशिक्षितानामतिशयसिद्धिमदर्शयत्प्रियाभ्यः ।।31।।अनुकृतनिजशक्तिभिः प्रियाभिः सह गुणबन्धविचित्रसन्निवेशैः ।   
-मुहुरिह निपतद्भिरुत्पतद्भिः करणवरैरिव कन्दकैरदीव्यत् ।।32।।निजयुवतिषु यद्यपि त्रिधामा नयनपिधानविहारमाजहार ।   
-न तदनुचरितं तथापि ताभिः त्रिभुवनदृष्टिनिरोधशङ्किनीभिः ।।33।।श्रुतिविहितमवन्ध्ययन् स्वधर्मं प्रतिदिनमन्यपरो यदा बभूव ।   
-तदुपचरणस्तदाऽपि तासां समजनयत् प्रियभोगमेव कालः ।।34।।मणिपरुवकमञ्जुलस्तनीभिः मधुसमयापगमे वरङ्गनाभिः ।   
-सितमणिविहितान् स यन्त्रधाराव्यतिकरशीतलितानभुङ्क्त सौधान् ।।35।।स्फटिकसदनदीप्तिदत्तहस्तां मुरभिदसेवत सादरं सदारः ।   
-अपजलदनिशोदितस्य शोभां हलधरकान्तिजुषस्तुषारभासः ।।36।।अगरुभिरसितैरनूरुगौरैः अपघुसृणैरपि निर्विवेश नाथः ।   
+बहुमतिमतिशय्य सा बभासे नरकरिपोरवरोधभूमिरग्र्या ॥
+
+4॥
+
+निधिगणमुखवान्तनिष्कराजिः प्रचितगुणा मणिभिस्स्यमन्तकाद्यैः ।   
+प्रमुदितमहिषीगणेन चक्रे यदुनगरी विभुना निवासभूमिः ॥
+
+5॥
+
+अविकलविभवस्य विश्वमूर्तेरधिवसनं यदुवीरराजधान्याम् ।   
+अनुदिनमनपायिनीं प्रतिष्ठामभिलषतामनुचिन्तनीयमासीत् ॥
+
+6॥
+
+सह मुनिभिरुपास्त धर्ममाद्यं व्यवहरणानि ददर्श वेदविद्भिः ।   
+अरमत च वधूजनैर्यथार्हं बहुतनुरक्रमतो विचित्रशक्तिः ॥
+
+7॥
+
+अपि युगपदवाप्तनैकदेहैरुपनतयोगबलैस्स्वकर्मनिघ्नैः ।   
+धृतबहुवपुषा जगद्विधात्रा जितकरणेन तु भुज्यते तदर्थः ॥
+
+8॥
+
+यदुपतिरधिरूढचन्द्रशालः सह दयिताभिरन्यमानसाभिः ।   
+जलनिधिमभितः प्रदर्शयंस्ताः निजमिव धाम निवेदयांबभूव ॥
+
+9॥
+
+निजपदमनपायमाश्रितानां प्रभुरपवर्गदशामिव प्रयच्छन् ।   
+अमितबहुगुणामनन्यलभ्यामतनुत कामपि संपदं प्रियाणाम् ॥
+
+10॥
+
+स्वयमुदवसिते स्ववासधन्ये त्रिषु भुवनेषु समामिवाद्भुतानाम् ।   
+अतनुत समवायमात्मयोगात् अतिशयिनीमथवा विभुस्समृद्धिम् ॥
+
+11॥
+
+विधिसदनमुखेष्वदृष्टपूर्वां प्रथितपरस्परसंमि(म)तिं समृद्धिम् ।   
+यदुपपतिदयितागृहेषु पश्यन् मुदमभजद्भुवि नारदो मुनीन्द्रः ॥
+
+12॥
+
+ललितरुचिषु कल्पवृक्षपोतैः उपवनराजिषु तस्य सञ्चरिष्णोः ।   
+अदधुरवयवैर्मुदं मुरारेः अमुकृतपुष्पफलादिकैस्तरुण्यः ॥
+
+13॥
+
+अधिगतकुसुमावचायलीलः प्रमदवनानि विभूषयन् स्वधाम्ना ।   
+प्रजनितमदनो मनस्विनीभिः गुणसुरभिः सुरभिः स्वयं स मेने ॥
+
+14॥
+
+अमृतमयपयः परिप्लुतानां विषमगुणेषु विहारवापिकानाम् ।   
+कमलकुवलायादिषु प्रियाणां मुखनयनस्तितकान्तिमभ्यनन्दत् ॥
+
+16॥
+
+अवितथवमहिमा निजप्रसादादनघमनोरथतोषितासु तासु ।   
+स्वपरिजनतया सुरैर्नियुक्ता निरदिशदप्सपरो निदेशभाजः ॥
+
+17॥
+
+बहिरुपनगरं बलानि दृष्ट्वा सह यदुभिस्समये निवर्तमानम् ।   
+ददृशुरधिगवाक्षमेकचित्ता रथतुरगादिषु रामपश्चिमं तम् ॥
+
+18॥
+
+विधिवदनुविधाय देवयात्रां प्रतिपुरवीथिपरिक्रमेव दृश्यम् ।   
+पतिमनुददृशुस्तमेव दूरादचरमदेवमनन्यदेवतास्ताः ॥
+
+19॥
+
+बहुविधमुपहारजातमग्र्यं सुरपतिभिः स्वयमाहृतं मुकुन्दः ।   
+अपि गगनचरैरदृष्टपूर्वं सममवरोधजनस्य संविभेजे ॥
+
+20॥
+
+उपचितशिखरे वदान्यरत्नैः उचितगुहाश्रितहंसतूलतल्पे ।   
+बहुरिव स बभौ विहारशैले प्रतिमणिभित्तिविभक्तचारुबिम्बः ॥
+
+21॥
+
+युगपदखिलमादरेण साक्षात् युवतिजनस्य निदर्शयन्मुकुन्दः ।   
+असकृदुपगमय्य चित्रशालामनघसमाधिदशामिवाततान ॥
+
+22॥
+
+अनितरमनसां स्ववल्लभानां नरकजिता निरपायवैभवेन ।   
+भवभयविनिवारिणी स्वभक्तिः ललितविहारमुखेण लम्भिताऽभूत् ॥
+
+23॥
+
+प्रमुदितविबुधाहृतप्रकॢप्तः कनकसरोजवनैरलंकृतानाम् ।   
+अतिशयमवरोधदीर्घिकाणामधिसुरसिन्धुसमीक्षितं निदध्यौ ॥
+
+24॥
+
+विहरति वनिताजने तदीयैः अपलपितामवलोकनप्रभावैः ।   
+पुनरपि हरिनीलरत्नभासा दधुरसितोत्पलसंपदं सरस्यः ॥
+
+25॥
+
+स्थिरधृतिमधिरोप्य रत्नडोलां गुणघटितामिव माधवः स्वमायाम् ।   
+अगमयत गतागतान्यभीक्ष्णं सुकृतजुषः स्वयमङ्गनाः स्वतन्त्रः ॥
+
+26॥
+
+रुचिरकनकश्रृङ्गवक्त्रवान्तैः प्रतितनु कुङ्कुमवारिभिः प्रसिञ्चन् ।   
+अजनयदनुरागयोगमन्तः बहिरपि तोयविहारतो वधूनाम् ॥
+
+27॥
+
+नवमणिपरिकल्पितेषु नाथः कमलवनान्तरकेलिमन्दिरेषु ।   
+श्रिय इव सुदृशो गृहीतपद्मा हृदि निदधे पुरुषोत्तमः प्रतीतः ॥
+
+28॥
+
+दिशि दिशि मकरन्दवर्षदिग्धां विविधपरागविभक्तचूर्णचित्राम् ।   
+भुवमभजत साकमङ्गनाभिः पु(चु)लकिदृष्टिषु पुष्पमण्डलेषु ॥
+
+29॥
+
+अनुविहितमहोत्सवो यथार्हं वितरणतोषितवन्दिबन्धुवर्गः ।   
+परिणयनविधिं लतावधूनामतनुत चूतवरैः प्रियार्पितानाम् ॥
+
+30॥
+
+सुतबहुमतिभागिनां शुकानामुपहृतदिव्यरसोपभोगभाजम् ।   
+श्रुतिमधुरगिरां स्वशिक्षितानामतिशयसिद्धिमदर्शयत्प्रियाभ्यः ॥
+
+31॥
+
+अनुकृतनिजशक्तिभिः प्रियाभिः सह गुणबन्धविचित्रसन्निवेशैः ।   
+मुहुरिह निपतद्भिरुत्पतद्भिः करणवरैरिव कन्दकैरदीव्यत् ॥
+
+32॥
+
+निजयुवतिषु यद्यपि त्रिधामा नयनपिधानविहारमाजहार ।   
+न तदनुचरितं तथापि ताभिः त्रिभुवनदृष्टिनिरोधशङ्किनीभिः ॥
+
+33॥
+
+श्रुतिविहितमवन्ध्ययन् स्वधर्मं प्रतिदिनमन्यपरो यदा बभूव ।   
+तदुपचरणस्तदाऽपि तासां समजनयत् प्रियभोगमेव कालः ॥
+
+34॥
+
+मणिपरुवकमञ्जुलस्तनीभिः मधुसमयापगमे वरङ्गनाभिः ।   
+सितमणिविहितान् स यन्त्रधाराव्यतिकरशीतलितानभुङ्क्त सौधान् ॥
+
+35॥
+
+स्फटिकसदनदीप्तिदत्तहस्तां मुरभिदसेवत सादरं सदारः ।   
+अपजलदनिशोदितस्य शोभां हलधरकान्तिजुषस्तुषारभासः ॥
+
+36॥
+
+अगरुभिरसितैरनूरुगौरैः अपघुसृणैरपि निर्विवेश नाथः ।   
 हिमऋतुमवरोधसुन्दरीणां स्तनपरिरम्भसमर्पितैर्विलिप्तः ॥37॥अनलशकटिकाभिरप्यजय्यं शिशिरसमीरणमञ्जसा जिगाय ।   
-अविरलपरिरम्भलम्भनीयैः स्तनकलशोष्मभिरात्मवल्लभानाम् ।।38।।उपनिषदुपदेशसाभिलाषैरुपचरितो मुनिभिस्सनन्दनाद्यैः ।   
-रतिपतिसमयस्थितो वधूनां ललितकलागमदेशिको बभूव ।।39।।कलमधुरगिरां कलाप्रसङ्गादतिमदनोपनिषत्परं रहस्यम् ।   
-प्रियहितरुचिराक्षरं प्रियाणां श्रुतिषु चकार शिखामणिः श्रुतीनाम् ।।40।।निरुपधिकनिजप्रभावगर्भं परिषदि विश्वपतिर्निजप्रियाणाम् (याः) ।   
-किमपि निशमयांबभूव गीतं प्रमुदितकिन्नरदम्पतिप्रयुक्तम् ।।41।।मृदुकरतललीलया मृदङ्गनामसमयनर्तितनीलकण्ठयूथान् ।   
-ध्वनयति दयिते विदूरभूमेः श्रियमिव ताः पुलकोद्गमैरपुष्यन् ।।42।।करकमलपरिग्रहेण धन्यां वरतनुसंसदि वादयन्विपञ्चीम् ।   
-अविदितगमनाय गायकैः स्वैः उपरतगीतिभिरुन्मुखैः सिषेवे ।।43।।श्रुतिमधुसुभगैरदीनहृद्यैः श्रुतघननादशिखण्डिनीगणश्रीः ।   
-मधुरिपुवनितागणः समाजे ध्वनिभिरमाद्यत दिव्यदुन्दुभीनाम् ।।44।।सललितकरणाङ्गहारहृद्यं सह दयिताभिरुदारदिव्यनाट्यम् ।   
-अनुदिनमनिमेषदर्शनीयं जितमधुरप्सरसां ददर्श नृत्यम् ।।45।।अभिनवमभिनन्द्य नर्तकीनां स्वयमुपदिष्टमलङ्घितोपदेशम् ।   
-पुनरपि मुदितस्तमेव युञ्जन् अविदितपूर्वमिवादरादपश्यत् ।।46।।प्रतियुवतिगृहीतनैकरूपः प्रणयवतीभिरनन्य उत्युपेतः ।   
-अपहृतमणिपादुकः कदाचित् पदमपि गन्तुमशक्नुवन्निवासीत् ।।47।।अनवहिततया सखीसमक्षं द्रुतमुपहूय समाख्ययेतरस्याः ।   
-रुषितमनसमद्भुतैर्विलासैरिदमपि नाम तवेत्युवाच मुग्धाम् ।।48।।समुचितदिनलङ्घनं सपत्न्याः परिपणितं स्वयमभ्युपेत्य नाथः ।   
-स्मितमधुरमुखो जितः कयाचिद्विवश इवाक्षविहारतो बभूव ।।49।।अनुगतनिजबिम्बमेनमन्या मणिमुकुरस्थमवेक्ष्य मन्दहासम् ।   
-न खलु तदवलोकनाय पश्चात् व्यतनुत साचिविधिं तदेकतृप्ता ।।50।।पुलकितकुचकुड्मले परस्याः कथमपि साध्वसकम्पिताग्रहस्तः ।   
-स्थिरचरजगदेकदिव्यशिल्पी विषमतमं विलिलेख पत्रभङ्गम् ।।51।।मृदुसुरभिसुजातबन्धुराभिः प्रणिदधदग्रनिबद्धपङ्कजाभिः ।   
-मुहुरसितदृशां स्वकण्ठयोग्यां भुजलतिकाममिमीत मालिकाभिः ।।52।।अभजत स च ताश्च दूतिकानाममृतपरिप्लुतभेषजायमानैः ।   
-प्रतिदिनमिदमादिमं प्रमोदं प्रणयविरोधसितासितैर्वचोभिः ।।53।।निजपदपरिचारकाङ्क्षिणीभिः कतिषु भवेषु समर्चिताङ्घ्रिपद्मः ।   
-प्रतिविधिमभजत्प्रसाधिकावत्प्रियपरिकर्मविधानतः स तासाम् ।।54।।निजसुदयसंभवैर्निशायां प्रणयपयोनिधिवीचिकाविसर्पैः ।   
-प्रणतिभिरिव विभ्रमैः प्रियाणां बहुमतिभेदमवाप यादवेन्द्रः ।।55।।शरदुपगमशोधिता इवापः तुहिनकरोदयनिर्मला इावाशाः ।   
-मुरभिदुपगमप्रशान्तखेदाः प्रतिययुरुन्मनसस्तमायताक्ष्यः ।।56।।अमृतमयमिवोदधिं तमुच्चैः अनुसखि लोचनशुक्तिभिः पिबन्त्यः ।   
-अवशनियतचित्तवृत्तिमेकामदधुरदृष्टपरस्परामवस्थाम् ।।57।।स्मरजनकतनुः स्वदर्शिनीनां ननु विरहः सुदृशां निमेष एव ।   
-इति किल विगणय्य विश्वकर्ता नियतमकल्पयदप्सरस्त्वामासाम् ।।58।।अनुचरबहुमानमाप्तुकामैरवसरविद्भिरनुस्मृतात्मरक्षैः ।   
-अनुदिनमुपनीतमादितेयैः अमृतमपाययत प्रियाः प्रतीतः ।।59।।प्रियवचनशतैरुदारवादी रहसि मनःश्रुतिरञ्जकैर्विचित्रैः ।   
-मुखकमलमधूपमैः प्रकामं मदमुदिता इव मानिमीरकार्षीत् ।।60।।अतिशयितगुणैः प्रियोपभोगाद्वसनविभूषणमालिकादिभिस्ताम्(ः) ।   
-मुदमधिकतमां दधुस्तरुण्यः प्रणयरसो हि रसप्रकर्षहेतुः ।।61।।अभिलपनमनस्क्रियातिपातिन्यनुबुभुजे यदुपुङ्गत्वेन तासाम् ।   
-अतिशयमितरेतरं प्रयच्छन्त्यभिनवयौवनसम्पदप्रकम्प्या ।।62।।अजनिषत कुतो नु भागधेयात् त्रिभुवनमङ्गलदीपिकाः शुभाङ्ग्यः ।   
-यदुपतिसहधर्मचारिणीभिः सुखमनघं भुवि याभिरन्वभावि ।।63।।अधिभुजगपति श्रियोपभुक्तं युगपरिपाकविहारिणं युवानम् ।   
-नरपतिबहुमानतो नताङ्ग्यः सुलभमिवान्वभवन् स्वतल्पभाजम् ।।64।।शकयुवतिकपोलपाण्डुराभैः शशिशकलैरिव नागवल्लिपत्रैः ।   
-स्मरसुभटयशोनिभैरनन्दन् युवतिजनौघभृतैस्तदर्पितैस्ताः ।।65।।जगदुपजननादिजातभूम्नः क इव वधूजनमोहनो विहारः ।   
-कथमिव स कुतश्च कीर्तनीयः प्रथितमनोभवतन्त्रपारदऋश्वा ।।66।।युवतिभिरनुभूषितस्स ताभिः यदुपतिरद्भुतरूपवेषशीलः ।   
-निरुपधिकरसामृतौघसिन्धुः सततमपूर्वमपूर्वमन्वभावि ।।67।।हरिपरिचरणेन ताषितानां हरिणदृशां विभवं विभावयन्तः ।   
-अपजहसुरवाप्तसंयमाः स्वान् अपरिमितानणिमादिसिद्धिभेदान् ।।68।।सरित इव मृगीदृशस्तमेकं महितगुणौघमहोदधिं भजन्त्यः ।   
-अबिभरुरनपायमैकरस्यं मुनिगणितश्च स एव मुक्तभोगः ।।69।।अनुभवरसतो जगत्प्रसूतेरपचितसुप्तिसुषुप्तिसंभवास्ताः ।   
-वितमसि विषये स्थिता इवासन् विरतिविहीनविहारजागरेण ।।70।।प्रतिदिनमितरेतरानुगुण्यात् प्रचितमयोगवियोगसंप्रयोगैः ।   
-रसमधिकमवापुरायताक्ष्यः प्रणयिनि शार्ङ्गिणि भागधेयभूम्ना ।।71।।रविरुचिरमणिप्रदीपकेषु स्फुरदसितागरुधूमधूपितेषु ।   
-सह युवतिजनैः क्षणोपमेयामनयत वासगृहेषु वासतेयीम् ।।72।।पुलकितवपुषां सवेपथूनां घनरसभावितघर्मबिन्दुभाजाम् ।   
-श्लथमिव सुदृशाममुष्टिमेयं चिकुरमगुम्भयदद्भुतं चिरेण ।।73।।स्ववधूरवधूतभौमभावाः स्वदमानाः स्वयमात्मनैव तृप्तः ।   
-अनुभूय न तृप्यति स्म नाथस्तमपि प्रेमविलीनचेतसस्ताः ।।74।।चपलप्रतिकूलतीक्ष्णरूक्ष्णाः स्त्रिय इत्यागमिकैर्निदर्शितार्थः ।   
-प्रथितो यदुवीरवल्लभाभिः परिवादोऽयमपाकृतः पृथिव्याम् ।।75।।शरणागतसर्वपापमोक्षे कृतसङ्कल्पमिहानुभूय कृष्णम् ।   
-परितोऽपि तथाविधानुभूतिः स्मरलब्धा प्रतिलम्भिता प्रियाभिः ।।76।।अनघामनपायभक्तिरूपामनुभूतिं यदुवीरवल्लभानाम् ।   
-अनुकर्तुमपि प्रवर्तमानैरवशैरेव समाहितैरभावि ।।77।।उदधौ बहवो रमा बभूवुर्यदि वा सैव गृहीतनैकरूपा ।   
-इति नाम विमर्शमादधाना दयिताः प्रेक्ष्य ननन्द देववन्द्यः ।।78।।अजितस्य विशालतुङ्गभूम्ना भुजमध्येन पयोधरैश्च तासाम् ।   
-इतरेतरसंवृतत्वमासीत् परिरम्भे परितो मिथस्समत्वम् ।।79।।परिहासकुतूहली प्रियाणां विहितद्यूतविहारकौतुकानाम् ।   
-उभयत्र जयं जगाद पृष्टः कितवः स्थेयपदे निवेशितस्सन् ।।80।।स्वयमादिकविः प्रकल्पिताभिः प्रणयोल्लङ्घनरोषमुत्तितीर्षुः ।   
-प्रहसन् बहुशः प्रहेलिकाभिः मतिमौढ्यं विदधे मनस्विनीनाम् ।।81।।एकीभवद्भिरयुतैरपि मन्मथानां यत्कान्तिसिन्धुपृषतानुकृतिर्न शक्या ।   
-संप्रेक्ष्य तं यदुपतिं यमिनोऽपि नूनं स्त्रीभावमेव मनसा बिभरांबभूवुः ।।82।।कृष्णानुभूतिविभवेन कृतार्थभावाः तद्वल्लभास्त्रिदशमातृतया चकासुः ।   
+अविरलपरिरम्भलम्भनीयैः स्तनकलशोष्मभिरात्मवल्लभानाम् ॥
+
+38॥
+
+उपनिषदुपदेशसाभिलाषैरुपचरितो मुनिभिस्सनन्दनाद्यैः ।   
+रतिपतिसमयस्थितो वधूनां ललितकलागमदेशिको बभूव ॥
+
+39॥
+
+कलमधुरगिरां कलाप्रसङ्गादतिमदनोपनिषत्परं रहस्यम् ।   
+प्रियहितरुचिराक्षरं प्रियाणां श्रुतिषु चकार शिखामणिः श्रुतीनाम् ॥
+
+40॥
+
+निरुपधिकनिजप्रभावगर्भं परिषदि विश्वपतिर्निजप्रियाणाम् (याः) ।   
+किमपि निशमयांबभूव गीतं प्रमुदितकिन्नरदम्पतिप्रयुक्तम् ॥
+
+41॥
+
+मृदुकरतललीलया मृदङ्गनामसमयनर्तितनीलकण्ठयूथान् ।   
+ध्वनयति दयिते विदूरभूमेः श्रियमिव ताः पुलकोद्गमैरपुष्यन् ॥
+
+42॥
+
+करकमलपरिग्रहेण धन्यां वरतनुसंसदि वादयन्विपञ्चीम् ।   
+अविदितगमनाय गायकैः स्वैः उपरतगीतिभिरुन्मुखैः सिषेवे ॥
+
+43॥
+
+श्रुतिमधुसुभगैरदीनहृद्यैः श्रुतघननादशिखण्डिनीगणश्रीः ।   
+मधुरिपुवनितागणः समाजे ध्वनिभिरमाद्यत दिव्यदुन्दुभीनाम् ॥
+
+44॥
+
+सललितकरणाङ्गहारहृद्यं सह दयिताभिरुदारदिव्यनाट्यम् ।   
+अनुदिनमनिमेषदर्शनीयं जितमधुरप्सरसां ददर्श नृत्यम् ॥
+
+45॥
+
+अभिनवमभिनन्द्य नर्तकीनां स्वयमुपदिष्टमलङ्घितोपदेशम् ।   
+पुनरपि मुदितस्तमेव युञ्जन् अविदितपूर्वमिवादरादपश्यत् ॥
+
+46॥
+
+प्रतियुवतिगृहीतनैकरूपः प्रणयवतीभिरनन्य उत्युपेतः ।   
+अपहृतमणिपादुकः कदाचित् पदमपि गन्तुमशक्नुवन्निवासीत् ॥
+
+47॥
+
+अनवहिततया सखीसमक्षं द्रुतमुपहूय समाख्ययेतरस्याः ।   
+रुषितमनसमद्भुतैर्विलासैरिदमपि नाम तवेत्युवाच मुग्धाम् ॥
+
+48॥
+
+समुचितदिनलङ्घनं सपत्न्याः परिपणितं स्वयमभ्युपेत्य नाथः ।   
+स्मितमधुरमुखो जितः कयाचिद्विवश इवाक्षविहारतो बभूव ॥
+
+49॥
+
+अनुगतनिजबिम्बमेनमन्या मणिमुकुरस्थमवेक्ष्य मन्दहासम् ।   
+न खलु तदवलोकनाय पश्चात् व्यतनुत साचिविधिं तदेकतृप्ता ॥
+
+50॥
+
+पुलकितकुचकुड्मले परस्याः कथमपि साध्वसकम्पिताग्रहस्तः ।   
+स्थिरचरजगदेकदिव्यशिल्पी विषमतमं विलिलेख पत्रभङ्गम् ॥
+
+51॥
+
+मृदुसुरभिसुजातबन्धुराभिः प्रणिदधदग्रनिबद्धपङ्कजाभिः ।   
+मुहुरसितदृशां स्वकण्ठयोग्यां भुजलतिकाममिमीत मालिकाभिः ॥
+
+52॥
+
+अभजत स च ताश्च दूतिकानाममृतपरिप्लुतभेषजायमानैः ।   
+प्रतिदिनमिदमादिमं प्रमोदं प्रणयविरोधसितासितैर्वचोभिः ॥
+
+53॥
+
+निजपदपरिचारकाङ्क्षिणीभिः कतिषु भवेषु समर्चिताङ्घ्रिपद्मः ।   
+प्रतिविधिमभजत्प्रसाधिकावत्प्रियपरिकर्मविधानतः स तासाम् ॥
+
+54॥
+
+निजसुदयसंभवैर्निशायां प्रणयपयोनिधिवीचिकाविसर्पैः ।   
+प्रणतिभिरिव विभ्रमैः प्रियाणां बहुमतिभेदमवाप यादवेन्द्रः ॥
+
+55॥
+
+शरदुपगमशोधिता इवापः तुहिनकरोदयनिर्मला इावाशाः ।   
+मुरभिदुपगमप्रशान्तखेदाः प्रतिययुरुन्मनसस्तमायताक्ष्यः ॥
+
+56॥
+
+अमृतमयमिवोदधिं तमुच्चैः अनुसखि लोचनशुक्तिभिः पिबन्त्यः ।   
+अवशनियतचित्तवृत्तिमेकामदधुरदृष्टपरस्परामवस्थाम् ॥
+
+57॥
+
+स्मरजनकतनुः स्वदर्शिनीनां ननु विरहः सुदृशां निमेष एव ।   
+इति किल विगणय्य विश्वकर्ता नियतमकल्पयदप्सरस्त्वामासाम् ॥
+
+58॥
+
+अनुचरबहुमानमाप्तुकामैरवसरविद्भिरनुस्मृतात्मरक्षैः ।   
+अनुदिनमुपनीतमादितेयैः अमृतमपाययत प्रियाः प्रतीतः ॥
+
+59॥
+
+प्रियवचनशतैरुदारवादी रहसि मनःश्रुतिरञ्जकैर्विचित्रैः ।   
+मुखकमलमधूपमैः प्रकामं मदमुदिता इव मानिमीरकार्षीत् ॥
+
+60॥
+
+अतिशयितगुणैः प्रियोपभोगाद्वसनविभूषणमालिकादिभिस्ताम्(ः) ।   
+मुदमधिकतमां दधुस्तरुण्यः प्रणयरसो हि रसप्रकर्षहेतुः ॥
+
+61॥
+
+अभिलपनमनस्क्रियातिपातिन्यनुबुभुजे यदुपुङ्गत्वेन तासाम् ।   
+अतिशयमितरेतरं प्रयच्छन्त्यभिनवयौवनसम्पदप्रकम्प्या ॥
+
+62॥
+
+अजनिषत कुतो नु भागधेयात् त्रिभुवनमङ्गलदीपिकाः शुभाङ्ग्यः ।   
+यदुपतिसहधर्मचारिणीभिः सुखमनघं भुवि याभिरन्वभावि ॥
+
+63॥
+
+अधिभुजगपति श्रियोपभुक्तं युगपरिपाकविहारिणं युवानम् ।   
+नरपतिबहुमानतो नताङ्ग्यः सुलभमिवान्वभवन् स्वतल्पभाजम् ॥
+
+64॥
+
+शकयुवतिकपोलपाण्डुराभैः शशिशकलैरिव नागवल्लिपत्रैः ।   
+स्मरसुभटयशोनिभैरनन्दन् युवतिजनौघभृतैस्तदर्पितैस्ताः ॥
+
+65॥
+
+जगदुपजननादिजातभूम्नः क इव वधूजनमोहनो विहारः ।   
+कथमिव स कुतश्च कीर्तनीयः प्रथितमनोभवतन्त्रपारदऋश्वा ॥
+
+66॥
+
+युवतिभिरनुभूषितस्स ताभिः यदुपतिरद्भुतरूपवेषशीलः ।   
+निरुपधिकरसामृतौघसिन्धुः सततमपूर्वमपूर्वमन्वभावि ॥
+
+67॥
+
+हरिपरिचरणेन ताषितानां हरिणदृशां विभवं विभावयन्तः ।   
+अपजहसुरवाप्तसंयमाः स्वान् अपरिमितानणिमादिसिद्धिभेदान् ॥
+
+68॥
+
+सरित इव मृगीदृशस्तमेकं महितगुणौघमहोदधिं भजन्त्यः ।   
+अबिभरुरनपायमैकरस्यं मुनिगणितश्च स एव मुक्तभोगः ॥
+
+69॥
+
+अनुभवरसतो जगत्प्रसूतेरपचितसुप्तिसुषुप्तिसंभवास्ताः ।   
+वितमसि विषये स्थिता इवासन् विरतिविहीनविहारजागरेण ॥
+
+70॥
+
+प्रतिदिनमितरेतरानुगुण्यात् प्रचितमयोगवियोगसंप्रयोगैः ।   
+रसमधिकमवापुरायताक्ष्यः प्रणयिनि शार्ङ्गिणि भागधेयभूम्ना ॥
+
+71॥
+
+रविरुचिरमणिप्रदीपकेषु स्फुरदसितागरुधूमधूपितेषु ।   
+सह युवतिजनैः क्षणोपमेयामनयत वासगृहेषु वासतेयीम् ॥
+
+72॥
+
+पुलकितवपुषां सवेपथूनां घनरसभावितघर्मबिन्दुभाजाम् ।   
+श्लथमिव सुदृशाममुष्टिमेयं चिकुरमगुम्भयदद्भुतं चिरेण ॥
+
+73॥
+
+स्ववधूरवधूतभौमभावाः स्वदमानाः स्वयमात्मनैव तृप्तः ।   
+अनुभूय न तृप्यति स्म नाथस्तमपि प्रेमविलीनचेतसस्ताः ॥
+
+74॥
+
+चपलप्रतिकूलतीक्ष्णरूक्ष्णाः स्त्रिय इत्यागमिकैर्निदर्शितार्थः ।   
+प्रथितो यदुवीरवल्लभाभिः परिवादोऽयमपाकृतः पृथिव्याम् ॥
+
+75॥
+
+शरणागतसर्वपापमोक्षे कृतसङ्कल्पमिहानुभूय कृष्णम् ।   
+परितोऽपि तथाविधानुभूतिः स्मरलब्धा प्रतिलम्भिता प्रियाभिः ॥
+
+76॥
+
+अनघामनपायभक्तिरूपामनुभूतिं यदुवीरवल्लभानाम् ।   
+अनुकर्तुमपि प्रवर्तमानैरवशैरेव समाहितैरभावि ॥
+
+77॥
+
+उदधौ बहवो रमा बभूवुर्यदि वा सैव गृहीतनैकरूपा ।   
+इति नाम विमर्शमादधाना दयिताः प्रेक्ष्य ननन्द देववन्द्यः ॥
+
+78॥
+
+अजितस्य विशालतुङ्गभूम्ना भुजमध्येन पयोधरैश्च तासाम् ।   
+इतरेतरसंवृतत्वमासीत् परिरम्भे परितो मिथस्समत्वम् ॥
+
+79॥
+
+परिहासकुतूहली प्रियाणां विहितद्यूतविहारकौतुकानाम् ।   
+उभयत्र जयं जगाद पृष्टः कितवः स्थेयपदे निवेशितस्सन् ॥
+
+80॥
+
+स्वयमादिकविः प्रकल्पिताभिः प्रणयोल्लङ्घनरोषमुत्तितीर्षुः ।   
+प्रहसन् बहुशः प्रहेलिकाभिः मतिमौढ्यं विदधे मनस्विनीनाम् ॥
+
+81॥
+
+एकीभवद्भिरयुतैरपि मन्मथानां यत्कान्तिसिन्धुपृषतानुकृतिर्न शक्या ।   
+संप्रेक्ष्य तं यदुपतिं यमिनोऽपि नूनं स्त्रीभावमेव मनसा बिभरांबभूवुः ॥
+
+82॥
+
+कृष्णानुभूतिविभवेन कृतार्थभावाः तद्वल्लभास्त्रिदशमातृतया चकासुः ।   
 यत्पादपङ्कजपरागजुषां शशंसुः जन्माद्भुतं जगति गुल्मलतादिकानाम् ॥83॥श्यामो बभूव किमसौ सुदृशां कटाक्षैः श्यामास्तदन्वयवशादथ वा तरुण्यः ।   
-ताभिः किमस्य ववृधे महिमा महीयान् तासामनेन यदि वेति बुधैश्शशङ्के ।।84।।अग्राम्यमेव परिहासरसं वितेन नाश्लीलमाह न मृषा न च मर्मभेदि ।   
-धर्माविरुद्धविभवोचितकामकामः स्त्रीणां वरेण बुभुजे वरजो वरस्त्रीः ।।85।।ताराभिरिन्दुरिव भानुरिवप्रभाभिः युक्तो वशाभिरिव वारणयूथनाथः ।   
-विद्याभिरात्मविदिवाभ्यधिकं विरेजे योगेश्वरो युवतिभिस्सह मोदमानः ।।86।।पायंपायं प्रेयसः कान्तिमाध्वीं माद्यन्तीभिः लञ्जुलालापिनीभिः ।   
-प्रत्योकोक्तिश्लाघनप्रीणिताभिः प्रायो भोगाः पर्यवाह्यन्त ताभिः ।।87।।करणव्यापायसमये पुनर्भवं विनिवर्त्य शाश्वतसुखं प्रदास्यता ।   
-स्वपदानुभूतिरुरपादि तादृशी सुदृशां स्वसंमतिभृता गदाभृता ।।88।।तद्गतेन मनसा विवशानां तन्मयीकृतधियामिव तासाम् ।   
-अप्रलुप्तरहसामभजेतां स्वप्नजागरदशे न विशेषम् ।।89।।श्रियमनपायिनीं वसुमतीमिव दत्ताकारां सह महिषीगणेन विभुरेक इवानुभवन् ।   
-यदुभिरनन्तार्क्ष्यपृतनेशनिभैस्सहितो निजपदमस्मरन्निह निवासमरोचयत ।।90।।उपचितचित्रधर्ममुशान्तविपक्षभयं मुदितवधूजनं स मुखरं निगमध्वनिभिः ।   
-बहुविधरत्नशालि बहुमान्यसमग्रगुणं वलयसमं भुजस्य वसुधावलयं बभुजे ।।91।।अनितरजनलभ्यां प्रीतमासेदुषीभिः सुचिरमनुबभूवे स्वर्गमोक्षीतिशायी ।   
-निरुपधिकरसाब्धिं निर्विशन्तीभिराद्यं कलयुवतिभिरित्थं कोऽपि श्रृङ्गारभूमा ।।92।।सहजबलसमेतः शत्रुपूर्वैरजेय्यः समुदितविषमास्त्रस्तादृशानन्दहेतुः ।   
-अविदितरचनेन स्वेन पार्थाय गीतः स्वयमजनि स कामः कोऽपि धर्माविरुद्धः ।।93।।स्वपदनलिभाजां स्वर्गमोक्षौ यतार्हं करणविगमकाले कल्पयिष्यन् क्रमेण ।   
-मधुरिपुरिह नूनं मन्दपुण्यैरलभ्यौ समतनुत विहारैस्तावुभौ संप्रयुक्तौ ।।94।।नारीदृष्ट्या नियमितधियो नाकनाथेश्वरत्वं संभोगे च प्रणवमनसः शाश्वतं ब्रह्मचर्यम् ।   
-अत्रैकस्यां पुरि निवसतः सर्वलोकाधिपत्वं निध्यायन्तस्त्वरितमतरन् दुस्तरां तस्य मायाम् ।।95।।आसीदेवं परिणतमधि(तिमति)द्वारकं द्वापरान्ते व्यासप्रख्याविभजनभवद्वेदशाखोपमानम् ।   
-चिन्तातीतं यदुपतिमनः प्रीतिचिन्तामणीनामेकं तासां भवरसभुजां भाग्यमेकातपत्रम् ।।96।।गुरुभिरनघचित्तैराहितोदारभूमा सुरभितरसमेतत् सूनृतं वेङ्कटेशः ।   
+ताभिः किमस्य ववृधे महिमा महीयान् तासामनेन यदि वेति बुधैश्शशङ्के ॥
+
+84॥
+
+अग्राम्यमेव परिहासरसं वितेन नाश्लीलमाह न मृषा न च मर्मभेदि ।   
+धर्माविरुद्धविभवोचितकामकामः स्त्रीणां वरेण बुभुजे वरजो वरस्त्रीः ॥
+
+85॥
+
+ताराभिरिन्दुरिव भानुरिवप्रभाभिः युक्तो वशाभिरिव वारणयूथनाथः ।   
+विद्याभिरात्मविदिवाभ्यधिकं विरेजे योगेश्वरो युवतिभिस्सह मोदमानः ॥
+
+86॥
+
+पायंपायं प्रेयसः कान्तिमाध्वीं माद्यन्तीभिः लञ्जुलालापिनीभिः ।   
+प्रत्योकोक्तिश्लाघनप्रीणिताभिः प्रायो भोगाः पर्यवाह्यन्त ताभिः ॥
+
+87॥
+
+करणव्यापायसमये पुनर्भवं विनिवर्त्य शाश्वतसुखं प्रदास्यता ।   
+स्वपदानुभूतिरुरपादि तादृशी सुदृशां स्वसंमतिभृता गदाभृता ॥
+
+88॥
+
+तद्गतेन मनसा विवशानां तन्मयीकृतधियामिव तासाम् ।   
+अप्रलुप्तरहसामभजेतां स्वप्नजागरदशे न विशेषम् ॥
+
+89॥
+
+श्रियमनपायिनीं वसुमतीमिव दत्ताकारां सह महिषीगणेन विभुरेक इवानुभवन् ।   
+यदुभिरनन्तार्क्ष्यपृतनेशनिभैस्सहितो निजपदमस्मरन्निह निवासमरोचयत ॥
+
+90॥
+
+उपचितचित्रधर्ममुशान्तविपक्षभयं मुदितवधूजनं स मुखरं निगमध्वनिभिः ।   
+बहुविधरत्नशालि बहुमान्यसमग्रगुणं वलयसमं भुजस्य वसुधावलयं बभुजे ॥
+
+91॥
+
+अनितरजनलभ्यां प्रीतमासेदुषीभिः सुचिरमनुबभूवे स्वर्गमोक्षीतिशायी ।   
+निरुपधिकरसाब्धिं निर्विशन्तीभिराद्यं कलयुवतिभिरित्थं कोऽपि श्रृङ्गारभूमा ॥
+
+92॥
+
+सहजबलसमेतः शत्रुपूर्वैरजेय्यः समुदितविषमास्त्रस्तादृशानन्दहेतुः ।   
+अविदितरचनेन स्वेन पार्थाय गीतः स्वयमजनि स कामः कोऽपि धर्माविरुद्धः ॥
+
+93॥
+
+स्वपदनलिभाजां स्वर्गमोक्षौ यतार्हं करणविगमकाले कल्पयिष्यन् क्रमेण ।   
+मधुरिपुरिह नूनं मन्दपुण्यैरलभ्यौ समतनुत विहारैस्तावुभौ संप्रयुक्तौ ॥
+
+94॥
+
+नारीदृष्ट्या नियमितधियो नाकनाथेश्वरत्वं संभोगे च प्रणवमनसः शाश्वतं ब्रह्मचर्यम् ।   
+अत्रैकस्यां पुरि निवसतः सर्वलोकाधिपत्वं निध्यायन्तस्त्वरितमतरन् दुस्तरां तस्य मायाम् ॥
+
+95॥
+
+आसीदेवं परिणतमधि(तिमति)द्वारकं द्वापरान्ते व्यासप्रख्याविभजनभवद्वेदशाखोपमानम् ।   
+चिन्तातीतं यदुपतिमनः प्रीतिचिन्तामणीनामेकं तासां भवरसभुजां भाग्यमेकातपत्रम् ॥
+
+96॥
+
+गुरुभिरनघचित्तैराहितोदारभूमा सुरभितरसमेतत् सूनृतं वेङ्कटेशः ।   
 व्यतनुत यदुवीरप्रीतिमिच्छन् प्रभूतां कविकथकमृगेन्द्रः क्षेमदं काव्यरत्नम् ॥97॥   
   
 ॥ इति श्रीकवितार्किकसिंहस्य सर्वतन्त्रस्वतन्त्रस्य श्रीमद्वेदान्ताचार्यस्य कृतिषु
