--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/11.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/11.md
@@ -3,87 +3,244 @@ title = "11 सर्गः-11"
 
 +++
 तदद्भुतं क्रीडितकं क्रमेण श्रुत्वा हरेरप्रतिमानशक्तेः।   
-महाबलान् कंसवधादिजन्मा मन्युः प्रपेदे मगधेन्द्रमुख्यान् ।।गोपालडिम्भो नरपालहन्ता कुले यदोरञ्चितमातपत्रम्।   
-अन्यच्च भूम्यामधरोत्तरत्वं हन्तेति वादान् प्रभूरभ्यनन्दत् ।।हलादिभिर्हेतिवरैर्यथार्हं रथाङ्गमुख्यैरपि रामकृष्णौ ।   
-स्ववृत्तियोग्यावसरोपयातैः प्राचीं श्रियं प्रदुरभावयेताम्।।स दैत्यजित् वध्यवरूथिनीनां संप्रापकं सारथिमात्रश्षम् ।   
-पुनः प्रवृत्तानुशयं पुरीं स्वां निन्ये जरासंधम् अहार्यसंधः।।समाहृतैः सैन्यमहासमुद्रैरायातमष्टादश सांपरायान् ।   
-देहावशेषं प्रजिघाय दीनं देहेन भीमेन विभेत्तुमिच्छन् ।।स्वदत्तशक्तया मुचुकुन्ददृष्ट्या भस्मावशेषो भविता द्रुतं यः।   
-कलेरिवात्मानमनन्तदोषं यं कालपुर्वं यवनं प्रचख्युः।।बलस्य च स्वस्य च बाहुभूम्ना यदाहृतम्लेच्छमृगाधिपानाम् ।   
-सहस्रकोटीगुणितं सहस्रं पञ्चत्वमायास्यति पञ्चसंख्यम् ।।तदागमे यादवपुंगवानां विप्रावमानोपनतं विषादम् ।   
-निवारमास न वासुदेवः प्रख्यापयन् ब्राह्ममृषेः प्रभावम् ।।निसर्गनिध्येयपरावरः स संमन्त्र्य सार्धं यदुवंशवृद्धैः।   
-विहातुमिच्छन् मधुरां शुभंयुः संकल्पयामास पुरीं तदन्याम् ।।स्वयं प्रवृत्तैरपि वृष्णिवीरैस्त्रातुं क्षमां त्रासितदैत्यलोकः।   
-अनन्यसाधारणशक्तिरन्यां संकल्पयामास पुरीमपूर्वाम् ।।जहौ धरित्रीमिव जामदग्न्यः कौलीमयोध्यामिव कोसलेन्द्रः।   
-अचिन्त्यवृत्तिर्मधुरामनिन्द्यां तज्जन्मजातो महिमा तु नैनाम् ।।परित्यजन्नप्यभिमत्य तिष्ठन् व्याप्तः शुभं व्यक्तिपदं तदग्र्यम् ।   
-अनन्यभाजामभजत् स देवस्तस्मिन् सतां प्रगिव संनिधानम् ।।अहंसपद्मामिव वाहिनीं तां वीतेन्दुतारामिव वासतेयीम् ।   
-समाप्तकार्यामिव सत्रशालां शून्यां पुरीं प्रेक्ष्य जगाम शौरिः।।चित्रावशेषद्विरदाश्वयोधा शुकादिसंभाषणशेषसूक्ता ।   
-मणिप्रभाशेषितदीपिका सा नाम्नैव माधुर्यवती तदासीत् ।।प्राचीमनादृत्य निवासभूमिं प्रत्यङ्मुखीं पद्धतिमाददाना ।   
-स्थिरं पदं प्राप्तुनियेष सेवा सत्त्वाधिका धीरिव सात्त्वतानाम् ।।उत्सारयन् धूलिमिवाग्रयायी विनिर्दिशन् वासमिवातिदूरात् ।   
-प्रत्युद्गमाय त्वरयन्निवाब्धिं मरुद्ववौ मन्दविधूतकेतुः।।प्रभूतभीमोन्नतनागनक्रा पारिप्लवैरूर्मिमती तुरंगैः।   
-अपूर्ववारांनिधिमाव्रजन्ती स्वयं तथा शौरिचमूरभूत् सा ।।समेति मां सात्त्वतवाहिनीयं सिष्णासया हन्त जिगीषया वा ।   
-इति प्रभूताद्भुतवैभवां तामुपेन्द्रनाथामुदधिः शशङ्के ।।गतागतैर्योद्धुमिव प्रवृत्तैरासीदतामद्भुतभीमवेगौ ।   
-मिथःप्रतिच्छन्दतया प्रतीक्ष्यौ वेलावने सैन्यमहासमुद्रौ ।।महीयसा सैन्यरवेण सद्यः पयोधिरन्तर्हिततीव्रघोषः।   
-प्रकम्पमानो भृशमाबभासे भयेन तूष्णीमिव भाव्यमानः।।प्रतीक्ष्य सेनामुपधावमानां पत्या नदीनां प्रणिधीयमानः।   
-प्रकाशयन् सर्वजनानुकूल्यं समीरणो मन्दतरं चचार ।।वदन्निव स्वागतमागतेभ्यः प्रभूतसंतोषभवैः प्रणादैः।   
-तरङ्गहस्तप्रहितैः सरस्वान् अभ्यर्चयामास यदून् पयोभिः।।चिरप्रयातं परिहृत्य शय्यामभ्यागतं वारिधिरादरेण ।   
+महाबलान् कंसवधादिजन्मा मन्युः प्रपेदे मगधेन्द्रमुख्यान् ॥
+
+गोपालडिम्भो नरपालहन्ता कुले यदोरञ्चितमातपत्रम्।   
+अन्यच्च भूम्यामधरोत्तरत्वं हन्तेति वादान् प्रभूरभ्यनन्दत् ॥
+
+हलादिभिर्हेतिवरैर्यथार्हं रथाङ्गमुख्यैरपि रामकृष्णौ ।   
+स्ववृत्तियोग्यावसरोपयातैः प्राचीं श्रियं प्रदुरभावयेताम्॥
+
+स दैत्यजित् वध्यवरूथिनीनां संप्रापकं सारथिमात्रश्षम् ।   
+पुनः प्रवृत्तानुशयं पुरीं स्वां निन्ये जरासंधम् अहार्यसंधः॥
+
+समाहृतैः सैन्यमहासमुद्रैरायातमष्टादश सांपरायान् ।   
+देहावशेषं प्रजिघाय दीनं देहेन भीमेन विभेत्तुमिच्छन् ॥
+
+स्वदत्तशक्तया मुचुकुन्ददृष्ट्या भस्मावशेषो भविता द्रुतं यः।   
+कलेरिवात्मानमनन्तदोषं यं कालपुर्वं यवनं प्रचख्युः॥
+
+बलस्य च स्वस्य च बाहुभूम्ना यदाहृतम्लेच्छमृगाधिपानाम् ।   
+सहस्रकोटीगुणितं सहस्रं पञ्चत्वमायास्यति पञ्चसंख्यम् ॥
+
+तदागमे यादवपुंगवानां विप्रावमानोपनतं विषादम् ।   
+निवारमास न वासुदेवः प्रख्यापयन् ब्राह्ममृषेः प्रभावम् ॥
+
+निसर्गनिध्येयपरावरः स संमन्त्र्य सार्धं यदुवंशवृद्धैः।   
+विहातुमिच्छन् मधुरां शुभंयुः संकल्पयामास पुरीं तदन्याम् ॥
+
+स्वयं प्रवृत्तैरपि वृष्णिवीरैस्त्रातुं क्षमां त्रासितदैत्यलोकः।   
+अनन्यसाधारणशक्तिरन्यां संकल्पयामास पुरीमपूर्वाम् ॥
+
+जहौ धरित्रीमिव जामदग्न्यः कौलीमयोध्यामिव कोसलेन्द्रः।   
+अचिन्त्यवृत्तिर्मधुरामनिन्द्यां तज्जन्मजातो महिमा तु नैनाम् ॥
+
+परित्यजन्नप्यभिमत्य तिष्ठन् व्याप्तः शुभं व्यक्तिपदं तदग्र्यम् ।   
+अनन्यभाजामभजत् स देवस्तस्मिन् सतां प्रगिव संनिधानम् ॥
+
+अहंसपद्मामिव वाहिनीं तां वीतेन्दुतारामिव वासतेयीम् ।   
+समाप्तकार्यामिव सत्रशालां शून्यां पुरीं प्रेक्ष्य जगाम शौरिः॥
+
+चित्रावशेषद्विरदाश्वयोधा शुकादिसंभाषणशेषसूक्ता ।   
+मणिप्रभाशेषितदीपिका सा नाम्नैव माधुर्यवती तदासीत् ॥
+
+प्राचीमनादृत्य निवासभूमिं प्रत्यङ्मुखीं पद्धतिमाददाना ।   
+स्थिरं पदं प्राप्तुनियेष सेवा सत्त्वाधिका धीरिव सात्त्वतानाम् ॥
+
+उत्सारयन् धूलिमिवाग्रयायी विनिर्दिशन् वासमिवातिदूरात् ।   
+प्रत्युद्गमाय त्वरयन्निवाब्धिं मरुद्ववौ मन्दविधूतकेतुः॥
+
+प्रभूतभीमोन्नतनागनक्रा पारिप्लवैरूर्मिमती तुरंगैः।   
+अपूर्ववारांनिधिमाव्रजन्ती स्वयं तथा शौरिचमूरभूत् सा ॥
+
+समेति मां सात्त्वतवाहिनीयं सिष्णासया हन्त जिगीषया वा ।   
+इति प्रभूताद्भुतवैभवां तामुपेन्द्रनाथामुदधिः शशङ्के ॥
+
+गतागतैर्योद्धुमिव प्रवृत्तैरासीदतामद्भुतभीमवेगौ ।   
+मिथःप्रतिच्छन्दतया प्रतीक्ष्यौ वेलावने सैन्यमहासमुद्रौ ॥
+
+महीयसा सैन्यरवेण सद्यः पयोधिरन्तर्हिततीव्रघोषः।   
+प्रकम्पमानो भृशमाबभासे भयेन तूष्णीमिव भाव्यमानः॥
+
+प्रतीक्ष्य सेनामुपधावमानां पत्या नदीनां प्रणिधीयमानः।   
+प्रकाशयन् सर्वजनानुकूल्यं समीरणो मन्दतरं चचार ॥
+
+वदन्निव स्वागतमागतेभ्यः प्रभूतसंतोषभवैः प्रणादैः।   
+तरङ्गहस्तप्रहितैः सरस्वान् अभ्यर्चयामास यदून् पयोभिः॥
+
+चिरप्रयातं परिहृत्य शय्यामभ्यागतं वारिधिरादरेण ।   
 मिथः समायोजितवीचिहस्तः प्रायः प्रभुं प्रार्थयत प्रसादम् ।निवेश्य सेनामुदधेः समीपे तालाङ्कसंभावितराजताले ।   
-दयार्द्रमेघोपमदेहभूमा विश्वंभरो विश्रमयांचकार ।।कदाचिदात्मानमवाप्तरत्नं कपालिनं चन्द्रकलावतंसम् ।   
-क्षमं सुभिक्षां च दिवं विधातुं ध्यातागतं सिन्धुमथादिदेश।।अनारतप्राप्तजयोद्यमानां धर्मं निजं धारयतां यदूनाम् ।   
-अपत्यरक्षोचितमन्तरीपं दिव्योपमं देयमिह त्वयेति ।।स तस्य दिक्पालनिवासकल्पां विधित्सतो वृष्णिपुरीं विशालाम् ।   
-अगाधपाथःपरिखाभिगुप्तं द्वीपं ददौ दुर्गविधानयोग्यम् ।।बलोत्तराणामपि बह्वमित्रं स्फीतं यदूनां कुलमीक्षमाणः।   
-अवन्ध्ययन् विश्ववित् अर्थशास्त्रं दुराक्रमं दुर्गमियेष कर्तुम् ।।स शासिता शास्त्रमनुप्रतस्थे कर्माददे कर्मफलप्रदाता ।   
-प्रभुः स्वबुद्ध्यैव जगन्ति गोप्तुं कुर्वीत बाह्यैरपि किं न गुप्तिम् ।।प्रभूतरत्नद्युतिकेसरं तत् प्रवालपत्रौघपरीतपार्श्वम् ।   
-स्थानं हरेरिष्टतमं तदासीत् संभूतिराजीवमिवेन्दिरायाः।।प्रचोदितस्तत्र च विश्वकर्मा नाथप्रसत्त्यै नलिनासनाद्यैः।   
-रथ्यादिवैचित्र्यवतीं वितेने रिशिं गुणानामिव राजधानीम् ।।स शिल्पविद्यां विधिनोपदिष्टामशेषतो नूनमधीत्य दाक्ष्यात् ।   
-शुभानि तस्यां भवनानि कर्तुं सौधेषु दिव्येषु चकार योग्याम् ।।गतागतार्थं हरिवाहिनीनां सेतुं च योगेन बबन्ध सिन्धौ ।   
-चकार दिग्भागविमूढतां यः प्रत्यर्थिनां चक्रधरप्रभावात् ।।नलेन पूर्वं स्वसुतेन सृष्टात् नवीनमन्यूनतरं स्वक्लृप्तम् ।   
-समीक्ष्य तुष्यन्नपि विश्वकर्मा नाथाय रोचेत न वेत्यताम्यत्।।स सेतुरास्कन्दितकूलयुग्मः संकल्पितो वासवलोकतक्ष्णा।   
-महापुरीं तां च महीं च मातुं मध्ये तुलादण्ड इवार्पितोभूत् ।।निवेदितां निर्जरशिल्पिनैव स्वयं चमत्कारवता सुक्लृप्ताम् ।   
-अदृष्टपूर्वामिव विश्वदर्शी दृष्टिः सतां द्रष्टुमियेष नाथः।।निजप्रतिच्छन्दनिदर्शनीयां मृग्योपमानान्तरमृष्टकान्तिम् ।   
-उदन्वता दत्तकरेण देवः प्रदर्शितां पूर्वमवैक्षतैनाम् ।।अनन्यदृष्टिं नगरी नवीना विस्मेरतां विश्वपतिं निनाय ।   
-स्वयंप्रभैः सौधभरैरुदारैस्तुङ्गैः सुमेरोरिव रत्नशृङ्गैः।।तामद्भुतां तारकिताग्रसौधां धर्मस्य पूर्णामिव योगसिद्धिम् ।   
-सपौरभृत्यः समयान्ववेक्षी विवेश वृष्ण्यन्धकयूथनाथः।।परेण नाकं प्रलयानभिज्ञामधीयते यस्य पुरीमचिन्त्याम् ।   
-स लोकनाथो विदधे सनाथां दूराधिकां द्वारवतीं दिवोपि ।।विधाय तस्यां विदितैः स्वचिह्मैर्यदून् यथास्थाननिवेशतुष्टान् ।   
-तामेव नाथस्त्रिदशाभिनन्द्यां त्यक्तामयोध्यां मधुरां च मेने ।।उदन्वति व्योमतले च लग्नां दृष्टोभयाः दर्पणदर्शनीये ।   
-यामद्भुतामात्मपुरीं च देवाश्छायाममन्यन्त मिथः समीक्ष्याम् ।।प्राकारचक्रं पृथुभिस्तरङ्गैरास्फालयन् अम्बुधिरात्तवेगः।   
-अमर्त्यमुख्यैरपि जातकोपैरक्षोभ्यतां व्याकुरुतेव यस्याः।।यत्सौधपर्यङ्कजुषां वधूनां संगृह्य निःश्वासगुणं समीरः।   
+दयार्द्रमेघोपमदेहभूमा विश्वंभरो विश्रमयांचकार ॥
+
+कदाचिदात्मानमवाप्तरत्नं कपालिनं चन्द्रकलावतंसम् ।   
+क्षमं सुभिक्षां च दिवं विधातुं ध्यातागतं सिन्धुमथादिदेश॥
+
+अनारतप्राप्तजयोद्यमानां धर्मं निजं धारयतां यदूनाम् ।   
+अपत्यरक्षोचितमन्तरीपं दिव्योपमं देयमिह त्वयेति ॥
+
+स तस्य दिक्पालनिवासकल्पां विधित्सतो वृष्णिपुरीं विशालाम् ।   
+अगाधपाथःपरिखाभिगुप्तं द्वीपं ददौ दुर्गविधानयोग्यम् ॥
+
+बलोत्तराणामपि बह्वमित्रं स्फीतं यदूनां कुलमीक्षमाणः।   
+अवन्ध्ययन् विश्ववित् अर्थशास्त्रं दुराक्रमं दुर्गमियेष कर्तुम् ॥
+
+स शासिता शास्त्रमनुप्रतस्थे कर्माददे कर्मफलप्रदाता ।   
+प्रभुः स्वबुद्ध्यैव जगन्ति गोप्तुं कुर्वीत बाह्यैरपि किं न गुप्तिम् ॥
+
+प्रभूतरत्नद्युतिकेसरं तत् प्रवालपत्रौघपरीतपार्श्वम् ।   
+स्थानं हरेरिष्टतमं तदासीत् संभूतिराजीवमिवेन्दिरायाः॥
+
+प्रचोदितस्तत्र च विश्वकर्मा नाथप्रसत्त्यै नलिनासनाद्यैः।   
+रथ्यादिवैचित्र्यवतीं वितेने रिशिं गुणानामिव राजधानीम् ॥
+
+स शिल्पविद्यां विधिनोपदिष्टामशेषतो नूनमधीत्य दाक्ष्यात् ।   
+शुभानि तस्यां भवनानि कर्तुं सौधेषु दिव्येषु चकार योग्याम् ॥
+
+गतागतार्थं हरिवाहिनीनां सेतुं च योगेन बबन्ध सिन्धौ ।   
+चकार दिग्भागविमूढतां यः प्रत्यर्थिनां चक्रधरप्रभावात् ॥
+
+नलेन पूर्वं स्वसुतेन सृष्टात् नवीनमन्यूनतरं स्वक्लृप्तम् ।   
+समीक्ष्य तुष्यन्नपि विश्वकर्मा नाथाय रोचेत न वेत्यताम्यत्॥
+
+स सेतुरास्कन्दितकूलयुग्मः संकल्पितो वासवलोकतक्ष्णा।   
+महापुरीं तां च महीं च मातुं मध्ये तुलादण्ड इवार्पितोभूत् ॥
+
+निवेदितां निर्जरशिल्पिनैव स्वयं चमत्कारवता सुक्लृप्ताम् ।   
+अदृष्टपूर्वामिव विश्वदर्शी दृष्टिः सतां द्रष्टुमियेष नाथः॥
+
+निजप्रतिच्छन्दनिदर्शनीयां मृग्योपमानान्तरमृष्टकान्तिम् ।   
+उदन्वता दत्तकरेण देवः प्रदर्शितां पूर्वमवैक्षतैनाम् ॥
+
+अनन्यदृष्टिं नगरी नवीना विस्मेरतां विश्वपतिं निनाय ।   
+स्वयंप्रभैः सौधभरैरुदारैस्तुङ्गैः सुमेरोरिव रत्नशृङ्गैः॥
+
+तामद्भुतां तारकिताग्रसौधां धर्मस्य पूर्णामिव योगसिद्धिम् ।   
+सपौरभृत्यः समयान्ववेक्षी विवेश वृष्ण्यन्धकयूथनाथः॥
+
+परेण नाकं प्रलयानभिज्ञामधीयते यस्य पुरीमचिन्त्याम् ।   
+स लोकनाथो विदधे सनाथां दूराधिकां द्वारवतीं दिवोपि ॥
+
+विधाय तस्यां विदितैः स्वचिह्मैर्यदून् यथास्थाननिवेशतुष्टान् ।   
+तामेव नाथस्त्रिदशाभिनन्द्यां त्यक्तामयोध्यां मधुरां च मेने ॥
+
+उदन्वति व्योमतले च लग्नां दृष्टोभयाः दर्पणदर्शनीये ।   
+यामद्भुतामात्मपुरीं च देवाश्छायाममन्यन्त मिथः समीक्ष्याम् ॥
+
+प्राकारचक्रं पृथुभिस्तरङ्गैरास्फालयन् अम्बुधिरात्तवेगः।   
+अमर्त्यमुख्यैरपि जातकोपैरक्षोभ्यतां व्याकुरुतेव यस्याः॥
+
+यत्सौधपर्यङ्कजुषां वधूनां संगृह्य निःश्वासगुणं समीरः।   
 पद्मेषु नूनं प्रदिशन् प्रभाते गतागतं याति गवाक्षवर्त्मा ।जालानि यत्रागुरुधूमजालैः संदिग्धपारावतसंनिधानैः।   
-अवासयन् नूनमहार्यगन्धान् आसेदुषां नाकसदां विमानान्।।परार्थ्यरत्नप्रचितात्मभिर्या प्रासादमालाभिरलंकृताङ्गी ।   
-नाथोपभोगानुगुणां पयोधौ ननन्द दृष्ट्वैव निजामभिख्याम् ।।मणिप्रदीपप्रशमप्रयुक्ते विहारचूर्णे विफले वधूनाम् ।   
-अपत्रपायाः समयेपि यस्यामभूदनास्था परमार्थदीपे ।।प्रायेण यत्र प्रमदाजनानां नित्यं गुणैरप्रतिमैर्निरुद्धाः।   
-संस्कारयोगादपि लब्धसत्त्वाश्चित्रार्पिता नाकसदो न चेरुः।।यदन्तरे यामिकवारणानामासेदुषामम्बुनिधेरभिख्याम् ।   
-कराभिमर्शेषु पुनश्चकासुः कल्लोललग्ना इव कर्णशङ्काः।।सौधेषु यस्यांं युवसेवितेषु त्रिविष्टपादप्यधिकोन्नतेषु ।   
-व्रीलातिभारान्नमिता इवासन् वैमानिकैरध्युषिता विमानाः।।न षड्भिरासन् व्यसनानि पुंसां यद्वासिनामीतिभिरूर्मिभिर्वा ।   
-अयोगयत्नेन विनैव चान्ते जज्ञे जगद्धातरि बुद्धिरेका ।।अदेशकालप्रविभागभाजा भूम्ना जगद्धातुरचिन्त्यभूम्नः।   
-यस्यां विहारोपवनान्यभूवन् समाधियोग्यानि तपोवनानि ।।अनंहसामध्वरदीक्षितानामाह्वानतः प्रागपि संनिधानात्।   
-अभूङ्क्त कृत्स्नानि हवींषि नित्यं यत्र स्वयं यज्ञतनुः स देवः।।रतिप्रसूता इव राजकन्या रसोदधेरूर्मिपदं भजन्त्यः।   
-विरक्तभाव्यं तमवाप्य यस्यां रागोपपन्ना रमयांबभूवुः।।प्रवालचित्रीकृतजालकश्रीः सालावृता संभृतपत्रजाला ।   
-परिष्कृता भद्र मृगादिभिर्या बभौ स्मरस्येव विहारवन्या ।।ध्वजाग्रभिन्नाति तुहिनांशुबिंम्बादनुक्षरन्त्या सुधयानुलिप्तैः।   
-चिरप्रक्लृप्तैरपि यत्र सौधैर्नित्यं नवीनैरिव निर्बभासे ।।स्ववैभवैरप्रतिरूपशोभैः व्यक्तश्रियो वाङ्मनसानिवृत्तैः।   
-तिरोदधुर्यत्र नरेन्द्रवासाः स्वयंप्रभां देवसभां सुधर्माम् ।।विभूतिभेदैरनुपप्लवैर्या भोगार्थिनां भूमिगताप्यभौमैः।   
-निवारयामास तपोधनानां वासादरं वासवराजधान्याम् ।।यत्सौघरत्नप्रकरेषु विष्वक् प्रसारितैरन्वहमैकमुख्यात् ।   
-करैः सहस्रेँण गृहीतदीप्तिः प्रद्योतते नूनमतीव भास्वान् ।।यच्चन्द्रशालसु निषेदुषीणां मृगीदृशां हारमणिप्रकाशैः।   
-तिरस्क्रियां प्राप्य विलज्जमानास्तारागणा नूनमधश्चरन्ति ।।गृहेषु यस्यां मणिभित्तिभागे प्रतिक्षणं दृष्टमुखेन्दुबिम्बः।   
-वधूजनः केवलमग्रहस्तैरादत्त मङ्गल्यतयात्मदर्शम् ।।अनन्तचित्रप्रतिमाभिरामैरजस्रमाक्रान्तदिशावकाशैः।   
-अभावयत् गोपुरवैभवैर्या विश्वप्रसूतेरिव वैश्वरूप्यम् ।।सरोभिरुल्लासितपुष्करश्रीः सङ्गोज्झितैः संगमितप्रयागा ।   
-प्रभासिता रत्नगणांशुभिर्या धर्माश्रयाणामिव संसदासीत् ।।हसद्भिरुच्चैःश्रवसं हयाग्र्यैरैरावतं दन्तिवरैश्च दृप्तैः।   
-नरोत्तमैर्नाकसदश्य याभूत् सुभ्रूभिरप्यप्सरसः स्वयं द्यौः।।वप्रेषु यस्याः स्फटितप्रदेशान् द्वाराभिमानात् द्रुतमापतन्तः।   
+अवासयन् नूनमहार्यगन्धान् आसेदुषां नाकसदां विमानान्॥
+
+परार्थ्यरत्नप्रचितात्मभिर्या प्रासादमालाभिरलंकृताङ्गी ।   
+नाथोपभोगानुगुणां पयोधौ ननन्द दृष्ट्वैव निजामभिख्याम् ॥
+
+मणिप्रदीपप्रशमप्रयुक्ते विहारचूर्णे विफले वधूनाम् ।   
+अपत्रपायाः समयेपि यस्यामभूदनास्था परमार्थदीपे ॥
+
+प्रायेण यत्र प्रमदाजनानां नित्यं गुणैरप्रतिमैर्निरुद्धाः।   
+संस्कारयोगादपि लब्धसत्त्वाश्चित्रार्पिता नाकसदो न चेरुः॥
+
+यदन्तरे यामिकवारणानामासेदुषामम्बुनिधेरभिख्याम् ।   
+कराभिमर्शेषु पुनश्चकासुः कल्लोललग्ना इव कर्णशङ्काः॥
+
+सौधेषु यस्यांं युवसेवितेषु त्रिविष्टपादप्यधिकोन्नतेषु ।   
+व्रीलातिभारान्नमिता इवासन् वैमानिकैरध्युषिता विमानाः॥
+
+न षड्भिरासन् व्यसनानि पुंसां यद्वासिनामीतिभिरूर्मिभिर्वा ।   
+अयोगयत्नेन विनैव चान्ते जज्ञे जगद्धातरि बुद्धिरेका ॥
+
+अदेशकालप्रविभागभाजा भूम्ना जगद्धातुरचिन्त्यभूम्नः।   
+यस्यां विहारोपवनान्यभूवन् समाधियोग्यानि तपोवनानि ॥
+
+अनंहसामध्वरदीक्षितानामाह्वानतः प्रागपि संनिधानात्।   
+अभूङ्क्त कृत्स्नानि हवींषि नित्यं यत्र स्वयं यज्ञतनुः स देवः॥
+
+रतिप्रसूता इव राजकन्या रसोदधेरूर्मिपदं भजन्त्यः।   
+विरक्तभाव्यं तमवाप्य यस्यां रागोपपन्ना रमयांबभूवुः॥
+
+प्रवालचित्रीकृतजालकश्रीः सालावृता संभृतपत्रजाला ।   
+परिष्कृता भद्र मृगादिभिर्या बभौ स्मरस्येव विहारवन्या ॥
+
+ध्वजाग्रभिन्नाति तुहिनांशुबिंम्बादनुक्षरन्त्या सुधयानुलिप्तैः।   
+चिरप्रक्लृप्तैरपि यत्र सौधैर्नित्यं नवीनैरिव निर्बभासे ॥
+
+स्ववैभवैरप्रतिरूपशोभैः व्यक्तश्रियो वाङ्मनसानिवृत्तैः।   
+तिरोदधुर्यत्र नरेन्द्रवासाः स्वयंप्रभां देवसभां सुधर्माम् ॥
+
+विभूतिभेदैरनुपप्लवैर्या भोगार्थिनां भूमिगताप्यभौमैः।   
+निवारयामास तपोधनानां वासादरं वासवराजधान्याम् ॥
+
+यत्सौघरत्नप्रकरेषु विष्वक् प्रसारितैरन्वहमैकमुख्यात् ।   
+करैः सहस्रेँण गृहीतदीप्तिः प्रद्योतते नूनमतीव भास्वान् ॥
+
+यच्चन्द्रशालसु निषेदुषीणां मृगीदृशां हारमणिप्रकाशैः।   
+तिरस्क्रियां प्राप्य विलज्जमानास्तारागणा नूनमधश्चरन्ति ॥
+
+गृहेषु यस्यां मणिभित्तिभागे प्रतिक्षणं दृष्टमुखेन्दुबिम्बः।   
+वधूजनः केवलमग्रहस्तैरादत्त मङ्गल्यतयात्मदर्शम् ॥
+
+अनन्तचित्रप्रतिमाभिरामैरजस्रमाक्रान्तदिशावकाशैः।   
+अभावयत् गोपुरवैभवैर्या विश्वप्रसूतेरिव वैश्वरूप्यम् ॥
+
+सरोभिरुल्लासितपुष्करश्रीः सङ्गोज्झितैः संगमितप्रयागा ।   
+प्रभासिता रत्नगणांशुभिर्या धर्माश्रयाणामिव संसदासीत् ॥
+
+हसद्भिरुच्चैःश्रवसं हयाग्र्यैरैरावतं दन्तिवरैश्च दृप्तैः।   
+नरोत्तमैर्नाकसदश्य याभूत् सुभ्रूभिरप्यप्सरसः स्वयं द्यौः॥
+
+वप्रेषु यस्याः स्फटितप्रदेशान् द्वाराभिमानात् द्रुतमापतन्तः।   
 अवापुरागन्तुजनाः सलीलैरन्तःस्मितैर्नागरकैर्निरोधम् ।पयोभिरच्छस्फटिकद्रवाभैः दवीयसां दर्शनमादधानैः।   
-सुधाधिकस्वादुरसैरविन्दन् स्वान्तोपमां यत्र सतां सरस्यः।।यामेकचित्तः प्रसमीक्ष्य तुष्यन् यादोनिधेराहितदिष्टिवृद्धिम् ।   
-लज्जामयासीदिव विश्वकर्मा लङ्कादिनिर्माणकथाप्रसङ्गे ।।समग्ररत्नौघशुभाकृतिं यां सनायकां मध्यजुषा त्रिधाम्ना ।   
-हृद्यामजस्रं हृदयेन भूषां रत्नाकरो नूनमधत्त रम्याम् ।।   
-(रम्यां हि हृद्यां हृदयेन नूनं रत्नाकरो रत्नमधत्त भूषाम् ।।अभिन्नसत्त्वान्नभसः परस्मात् क्षीरोदधेरंशुमतश्च बिम्बात् ।   
-रमासखस्य प्रणिधानभाजां याभूत् प्रियं व्यक्तिपदं पृथिव्याम् ।।यत्सौधभाजो निशि सुन्दरीणां मुखेन्दुभिश्चूषितकान्तिमिन्दुम् ।   
-सद्यः स्वनिष्यन्दसुधाप्रवाहैराप्याययामासुरिवेन्दुकान्तः।।उद्वेलचञ्चत्तुरगोर्मिमालामुद्घोषितामुत्सवतूर्यघौषैः।   
-प्रभूतरत्नौघनिधिं पयोधिर्यामद्भूतां या च तमन्वकार्षीत् ।।यद्वप्रशैलेषु दिवापि सिन्धोरास्फालनादुत्पतितैः पृषद्भिः।   
-उत्क्षिप्तमुक्ताफलदर्शनीयैरालक्ष्यतारौघमभूत् विहायः।।कलत्रपुत्रादिजुषामजस्रं दीर्घायुषां यत्र सतां जनानाम् ।   
-धर्मैकभाजामितरे पुमर्थाः प्रायः स्वयं संनिदधुः स्वभूत्यै ।।रराज सा रामजनार्दनाभ्यां प्राप्तप्रकाशापि यद्प्रवीरैः।   
-सत्येव तारानिकरे त्रिलोकी चक्षुष्मती चन्द्रदिवाकराभ्याम् ।।प्रभुणा सहस्रवदनेन वर्ण्यतां द्विगुणैरमुष्य नयनैरवेक्ष्यताम् ।   
-श्रुतिभिश्च तस्य बहुधा निशम्यतामधिकां ततः श्रियामवाप सा पुरी ।।स्वयमजनि किमत्र श्वेतमेवान्तरीपं परिणतमुत किंचिद्भागधेयं पृथिव्याः।   
-वरुणनगरमन्यत् वारिधेरुत्थितं वा किमिदमिति पुरं तत् कीर्तयन्ति स्म पौराः।।रामप्रष्ठैरधिवसति सा राजधानी जगाहे   
+सुधाधिकस्वादुरसैरविन्दन् स्वान्तोपमां यत्र सतां सरस्यः॥
+
+यामेकचित्तः प्रसमीक्ष्य तुष्यन् यादोनिधेराहितदिष्टिवृद्धिम् ।   
+लज्जामयासीदिव विश्वकर्मा लङ्कादिनिर्माणकथाप्रसङ्गे ॥
+
+समग्ररत्नौघशुभाकृतिं यां सनायकां मध्यजुषा त्रिधाम्ना ।   
+हृद्यामजस्रं हृदयेन भूषां रत्नाकरो नूनमधत्त रम्याम् ॥
+
+   
+(रम्यां हि हृद्यां हृदयेन नूनं रत्नाकरो रत्नमधत्त भूषाम् ॥
+
+अभिन्नसत्त्वान्नभसः परस्मात् क्षीरोदधेरंशुमतश्च बिम्बात् ।   
+रमासखस्य प्रणिधानभाजां याभूत् प्रियं व्यक्तिपदं पृथिव्याम् ॥
+
+यत्सौधभाजो निशि सुन्दरीणां मुखेन्दुभिश्चूषितकान्तिमिन्दुम् ।   
+सद्यः स्वनिष्यन्दसुधाप्रवाहैराप्याययामासुरिवेन्दुकान्तः॥
+
+उद्वेलचञ्चत्तुरगोर्मिमालामुद्घोषितामुत्सवतूर्यघौषैः।   
+प्रभूतरत्नौघनिधिं पयोधिर्यामद्भूतां या च तमन्वकार्षीत् ॥
+
+यद्वप्रशैलेषु दिवापि सिन्धोरास्फालनादुत्पतितैः पृषद्भिः।   
+उत्क्षिप्तमुक्ताफलदर्शनीयैरालक्ष्यतारौघमभूत् विहायः॥
+
+कलत्रपुत्रादिजुषामजस्रं दीर्घायुषां यत्र सतां जनानाम् ।   
+धर्मैकभाजामितरे पुमर्थाः प्रायः स्वयं संनिदधुः स्वभूत्यै ॥
+
+रराज सा रामजनार्दनाभ्यां प्राप्तप्रकाशापि यद्प्रवीरैः।   
+सत्येव तारानिकरे त्रिलोकी चक्षुष्मती चन्द्रदिवाकराभ्याम् ॥
+
+प्रभुणा सहस्रवदनेन वर्ण्यतां द्विगुणैरमुष्य नयनैरवेक्ष्यताम् ।   
+श्रुतिभिश्च तस्य बहुधा निशम्यतामधिकां ततः श्रियामवाप सा पुरी ॥
+
+स्वयमजनि किमत्र श्वेतमेवान्तरीपं परिणतमुत किंचिद्भागधेयं पृथिव्याः।   
+वरुणनगरमन्यत् वारिधेरुत्थितं वा किमिदमिति पुरं तत् कीर्तयन्ति स्म पौराः॥
+
+रामप्रष्ठैरधिवसति सा राजधानी जगाहे   
 लोकिधीशे सह बहुमतैर्लोकपालैरिवान्यैः।   
 आशचर्याणां प्रकृतिरियमित्यद्भुतावेशयोग्याम्   
-अप्रत्यूहामनितरतुलारोहणीयामभिख्याम् ।।तन्मध्ये विरचितशिल्पमेरुकल्पं वैचित्र्यादपहृतवैजयन्तगर्वम् ।   
-प्रस्पष्टं निजमिव पारमेष्ठ्यमुर्व्यां प्रासादं प्रभुरधिवासयाञ्चकार ।।रामः पुनर्व्रजमुपेत्य विहारभेदैराश्वासयन् सहचरैः सुहृदश्च सर्वान् ।   
-विश्राणितां दुहितरं वरुणेन विन्दन् सीरावकृष्टयमुनास्नपितो विजह्रे ।।प्रत्यञ्चमब्धिमवधूतवतोतिदूरं दग्धुश्च कूलमिव दक्षिणमस्त्रभूमा ।   
-आकर्षतश्च सरितं सवितृप्रसूतां रामस्य तस्य शुशुभे रसिकस्य लीला ।।पद्मयोनिवचनादुपनीतां प्राक्तनीं प्रियतमामिव कान्तिम् ।   
-रेवतस्य तनयामनुरूपां रेवतीं च परिणीय स रेमे ।।
+अप्रत्यूहामनितरतुलारोहणीयामभिख्याम् ॥
+
+तन्मध्ये विरचितशिल्पमेरुकल्पं वैचित्र्यादपहृतवैजयन्तगर्वम् ।   
+प्रस्पष्टं निजमिव पारमेष्ठ्यमुर्व्यां प्रासादं प्रभुरधिवासयाञ्चकार ॥
+
+रामः पुनर्व्रजमुपेत्य विहारभेदैराश्वासयन् सहचरैः सुहृदश्च सर्वान् ।   
+विश्राणितां दुहितरं वरुणेन विन्दन् सीरावकृष्टयमुनास्नपितो विजह्रे ॥
+
+प्रत्यञ्चमब्धिमवधूतवतोतिदूरं दग्धुश्च कूलमिव दक्षिणमस्त्रभूमा ।   
+आकर्षतश्च सरितं सवितृप्रसूतां रामस्य तस्य शुशुभे रसिकस्य लीला ॥
+
+पद्मयोनिवचनादुपनीतां प्राक्तनीं प्रियतमामिव कान्तिम् ।   
+रेवतस्य तनयामनुरूपां रेवतीं च परिणीय स रेमे ॥
+
