--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/22.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/22.md
@@ -2,7 +2,488 @@
 title = "22 सर्गः-22"
 
 +++
-अथ देवानिवाहूतान् नरदेवान् अभाषत। देवदानवसामान्यदैवतं देवकीसुतः।।एष वः क्ष्मापतिः शास्ति विधातेव प्रजापतीन्। महेन्द्रः हव धर्मेण सुधर्मामास्थितः स्वयम्।।शेखरीकृतभूभारः शेषत्वेन विभोः स्थितः। वेदयत्ययमार्योपि मित्रभूतान् अमित्रजित् ।।वयं भवन्तो ये चान्ये महान्तः सर्व एव ते । विश्वगुप्तौ जगत्कर्त्रा विनियुक्ता विभूतयः।।तदस्माभिरवस्थेयं धर्मवर्त्मनि शाश्वते।बिभ्यद्भिरनघादेशात् वज्रादिव समुद्यतात् ।।द्विषन्तः ख्यातनामानो नामशेषास्तथाप्यसौ।समुद्रवसना विष्वक् तामसैरवकुण्ठिता ।।अंसकस्तूरिका भूमिर्भवतां बीहुशालिनाम् । अजुगुप्सापदं न स्यादसद्वृत्तिमलीमसा ।।शङ्कितप्रचयः शेषः शत्रूणां शुष्मणामिव।आयतौ सुखमिच्छद्भिर्न युक्तः क्षन्तुमीश्वरः।।अतस्त्राणाय साधूनां दुष्कृतां दमनं क्षमम् । कडङ्करीयरोधो हि कलमोत्सेधकारणम्।।पुष्यतां पाण्डरं छत्रं पुण्डरीकमुव श्रियः। धर्मोधर्मश्च नान्योस्ति रक्षणोपेक्षणे भुवः।।पूर्वपूर्वनरेन्द्राणामुच्छिष्टमपि मेदिनी । सोमपीथिनयात् ग्राह्या स्वधर्माध्वरमास्थितैः।।अविवेकविभावर्यां धर्ममार्गमपङ्किलम्।द्रष्टुं दीप इव न्यस्तो नायकेन नयागमः।।अवलम्ब्य जगद्धातुर्हस्तमागमविग्रहम् । स्वयमुद्धरतात्मानं स्वैरं पातालपातिनम् ।।व्यसनासारवेगानां वारणं न प्रकल्पते।उपदेशैरनार्याणामुत्तानच्छत्रसन्निभैः।।पण्डितप्रहतेनैव सत्पथेन सदोदिताः।विषमेषु स्खलन्तोपि न दुर्गतिमवाप्स्यथ।।भूपरिक्रमणादन्या भवतामतिभास्वताम् । तमसामिव शत्रूणां निरासे कीदृशी क्रिया ।।जिगीषूणां च युष्माकं न जेतव्यपदे स्थितम् । कौरवैरनुकूलानां विपाकैरिव कर्मणाम्।।अवरोध्याः स्वयं दक्षैरक्षिपद्भिरनेहसम्।करिणां कर्णडोलाभिः कम्पिता इव सम्पदः।।नीतिपद्धतिरक्षोभ्या भवद्भिरधिगम्यताम् । नियता स्वर्गसौधस्य निश्श्रेणिरिव शाश्वती।।खलत्यागः सुहृत्प्राप्तिरितीदं कवचद्वयम् । वहध्वं मन्त्रदेहस्य भेदं परिजिहीर्षवः।।धातुनामिव कोपेषु प्रकृतीनामचेतसाम् । पातुमर्हथ पर्याप्तं प्रसादनरसायनम् ।।अनीतिमदिरां त्यक्त्वा लोभादिविषदूषिताम् । अगदङ्कारमादद्ध्वं प्रज्ञामृतमनुत्तमम्।।लुलिताशेषसन्मार्गं लोकवेदविरोधिनम्। परित्यजत दुर्मानं पाषण्डमतजीवितम् ।।गुणशैलाग्रमारोप्य शनैरात्मानमात्नमा। नित्यशङ्कितविभ्रंशं निध्यायत शुभंयवः।।त्रिविधानु विधेयानि सम्पत्सु च विपत्सु च । करणानीव मित्राणि गोपायत गुणग्रहात्।।अप्रशान्तेषु विस्रम्भमतिशङ्कां सुहृत्सु च। नीतिसंद्शिना ऋद्धेः समुद्धरत कण्टकौ।।सपञ्चाङ्गेन मन्त्रेणच नीतिमाहात्म्यनिर्विषाम्। नियच्छत निजाङ्गेषु भुजङ्गीमिव सम्पदम् ।।अवधीरयताधर्म्यामर्थकामैकसाधिकाम्। नृशंसप्रेयसीं नीतिं नारीहृदयदारुणाम्।।प्रमादसप्तकं त्यक्त्वा प्रबुध्योपायसप्तकम् । अङ्गसप्तकसम्पत्त्या जयत द्वीपसप्तकम्।अरातिगणकूटस्थान् आदौ जयत दुर्जयान्। अपदक्रोधलोभादीन् अशेषार्थविरोधिनः।।आन्तरेण बलेनैव द्विविधां वहत क्षमाम्। यस्य सत्वेप्यसत्त्वेपि गतार्थं षड्विधं बलम्।।न शापो नाभिचरणं न वह्निर्न विषं तथा ।नास्त्राणि न च शस्त्राणि यथा तीक्ष्णतमा क्षमा।।विपक्षजातिभाजोपि क्षुद्रान् अनपकुर्वतः।सुपर्ण इव भूनागान् उपेक्षध्वं तरस्विनः।।कृपणान् क्षममाणेपि महासत्त्वो न दैन्यभाक् । मृगेन्द्र इव भिन्नेभः स्वदंष्ट्रालेहिनः खगान्।।देवान् अतिशयानानां दैत्यदानवरक्षसाम्। विनिपादनिदानानि स्वयमन्वीक्ष्य सुख्यत।।यशः प्राणहरान् घोरान् व्यामोहविषपादपान्। समीक्षाशाणघृष्टेन द्यत शास्त्रेण शस्त्रिणः।।श्रुतशीलिभिरुक्तानि दुरुत्सेकज्वरातुराः।अप्रियाण्यपि पथ्यानि मा जिहासत जातुचित् ।।कलिसन्धिसमाघ्रातं त्यजन्तः कर्म कर्बुरम्।सदसत्प्रेक्षणे स्यात सर्वतो दत्तदृष्टयः।।पल्लवोपमकौमारे प्रसूनोपमयौवने। स्थिरं फलमुपादद्ध्वं जङ्गमे जीवितद्रुमे ।।मिषतां मीलतां वापि द्रुतं धावति जीविते। अनघं तनुत क्षेम्यमान्तरं धनमक्षयम् ।।अकालनियतोच्छ्रायमतिसूर्येन्दुपावकम्।क्षात्त्रं क्षपितजाड्यं वः क्षमं तेजः समेधितुम्।।असम्पलावितसप्ताब्धिरत्रिलोकीतमोपहा।अदिक्सूतसुधालिप्तिर्यस्य कीर्तिः स किंप्रभुः।।सुधां सुमनसे यस्य स्वादयन्ति यशोमयीम् । स राजा वृद्धिमाप्नोति क्षीयते न च कालतः।।त्यक्तसान्त्वेन कठिनान् विद्रावयत तेजसा।अयसस्तापसेकाभ्यामवस्था कीदृशी भवेत्।।प्रसातधितदिशो युष्मान् विमुक्तान्यमहीभृतः।सम्पदः प्रतिपत्स्यन्ते सरितः सागरानिव।।स एष पुरतो याता प्राज्ञः परिमृशन् पथः। सङ्कल्प इव युष्माकं सात्यकिः सत्यविक्रमः।।परिवारेण सम्पन्नस्त्यक्तकोशश्च कार्यतः।नन्दकोयमनिस्त्रिंशः सम्मतो मम शत्रुजित् ।।जैत्रं ध्वजमिवोदग्रमेनमाहितलक्षणम्।अनुयात दिशो जेतुमस्त्रवेदमिवापरम् ।।वनसिंहनयाद् गुप्तिर्मानतर्कक्रमादपि। परस्परपुरस्कारात् भवित्री भवतामिह।।अपि युष्माभिरेतावदहङ्कारग्रहोज्झितैः।अङगीकृतममुह्यद्भिरातुरैरिव भेषजम् ।।इति सूक्तिसुधां पीत्वा शौरिवक्त्रेन्दुनिस्सृताम्।सहसा नरदेवास्ते सौमनस्यं प्रपेदिरे।।तदुक्तिं शुकवत् सर्वे सॅल्लपन्तः परस्परम्।प्रहर्षमदधुस्तस्य प्रविष्टा नीतिपञ्जरम्।।तृषितैरिव तं श्रोत्रैः संभृतश्रुतिसौरभाम्। पपुः प्रियहितां तस्य परिशुद्धां सरस्वतीम्।।असन्देहविपर्यासामसङ्कीर्णहिताहिताम्। त्रयीमिव गिरं तस्य मानयन्ति स्म ते नृपाः।।अथ यादवयूथेन सहितः संयुगप्रियः।सात्यकिः प्रचितोत्तंसः प्रतस्थे भर्तुराज्ञया।।धर्मगुप्तिकृताद्शः स मेने मधुवैरिणा । अपृथक्त्वामिवापन्नमन्यदायुधपञ्चकम्।।सवकेतुकल्पनापूर्वं नियुक्तं हरिणा स्वयम्। तमेव तादृशाकारं तममन्यन्त यादवाः।।स वीरः शासनं भर्तुः शिरस्त्राणमिवोद्वहन्।अमन्यत जितप्रायाः सह दिक्पतिभिर्दिशः।।पयोधिं तर्णकपदं पर्वतं सिकतामयम्।पातालं च स्थलीपृष्ठं प्रैक्षतामितविक्रमः।।प्रयाणपटहस्तस्य प्रलयाम्बुदडम्बरः। नूनमानर्तयामास भुवं सह पयोधिभिः।।प्रयान्ती पृतना सद्यः प्रणादैर्द्यामपूरयत्।वैरिवासकसज्जानां गणैरप्सरसामपि।।अधिरुह्य रथं जैत्रं स बभौ तार्क्ष्यसन्निभम्। जिगीषितदिशाचक्रश्चक्रपाणिरिवापरः।।दिव्यदुन्दुभिघोषेण पुष्पवर्षेण भूयसा।अशरीरिजयोक्त्या च तेन जज्ञे जितं जगत्।।स विष्णुरिव विक्रान्त्या बलिध्वंसोद्यतो बली।सुषुवे त्रिषु लोकेषु कीर्तिं त्रिपथगामिव।।ततो बुद्बुदफेनाभैः प्रचितां छत्त्रचामरैः।निनाय पृतनां प्राचीं गङ्गामिव भगीरथः।।पृतनासागरौघेन पालयन् सागराम्बराम्।वीरो वेतसवृत्तीनां न भङ्गमभिसन्दधे।।महद्भिरपि तत्सैन्ये सम्पतद्भिः सुहृद्बलैः।न वृद्धिरभवद् दृश्या वर्षतोयैरिवाम्बुधौ।।अशोभत पताकाग्रैरग्रहस्तैरनीकिनी। निर्दिश्य गणयन्तीव जेतव्यविषयान् निजैः।।तमीदिवसयोस्तत्र पृथिव्याकाशयोरपि। समपद्यत तादात्म्यं सैन्यरेणुसमुत्थितम् ।।असूचीमुखभेद्यं तत् अचन्द्रार्कप्रतिक्रियम्। रुरोध द्विषतां दृष्टिं रजसा जनितं तमः।।अप्रतापमरुत्क्षिप्तः परागः प्रसरन् पुरः। आसन्नविनिपातानां वैवर्ण्यमदिशत् द्विषाम्।।धूमकम्बलसान्द्रेण रेणुना गगनस्थली।नमन्तीं सैन्यभारेण शनैरनुजगाम गाम्।।पृथिवीं वर्धयनातीव पृतना खण्डयन्त्यपि । परागैः पूरयामास खातं सगरजन्मनाम्।।ध्वजपल्लविता सेना शस्त्रपुष्पा परागिणी। बभौ चञ्चूर्यमाणेन मृत्योरुपवनस्थली।।सा नूनमनुकुर्वाणा सिन्धुपत्न्यौ सितासिते। कुटिलप्रतिकूलर्द्धिः कूलङ्कषगतिर्ययौ।।विश्वतःप्रसृतिस्तस्या बभूव बहुपद्धतेः। वाहबन्धनकीलानामपर्याप्तवनद्रुमा ।।अविच्छिन्नगुणांश्चक्रे निस्त्रासान्निजसेनया। हारानिव भुवः शुद्धान् अग्रहारान् परार्पितान्।।अनाश्रमपदासन्नामभीषितकृषीवलाम्। अनैषीन्महतीं सेनामविरुन्धानगोपनीम्।।स्वद्शादविशेषेण स्वीकृते शत्रुमण्डले। न योधा जगृहुस्तत्र किञ्चिदस्वामिसम्मतम्।।विहारास्तस्य जन्येषु विमतानेव निघ्नतः। समं ददृशिरे देवैस्तत्तज्जानपदैरपि।।अदीनसत्त्वः शत्रूणां दीनसंरक्षणव्रती। अन्वकम्पत धात्रीभिरुपनीतान् स्तनन्धयान्।।अदृष्टसैन्यरजसामबाणस्पर्शवेदिनाम्।पश्यन् क्वचिदमित्राणां स जिह्राय पलायनम्।।स मिथश्शौर्यसङ्घर्षादरातीन् अभिनिघ्नतः। पुनरुद्दीपयामास सत्कारेण गरीयसा।।क्रोधपावकदीप्तानां हेतीनां यदुपुङ्गवाः। विदधुस्तत्र वैरिस्त्रीबाष्पतोयेन सेचनम्।।निहतप्रतिमातङ्गदन्तत्सरुपरिष्कृतान्। द्विषतां मौलिशाणेषु खड्गान् मुहुरशातयन्।।शस्त्रधाराधरैस्तत्र विक्रमारण्यबर्हिणीम्। विपुले भुजशैलाग्रे वीरश्रियमनर्तयन्।।नियतं हेतयस्तेषां निपीते वह्निवारिणी।निदधुः शत्रुनारीणां चित्तेषु नयनेषु च ।।अलभन्त क्षणात् तेषां पुरतः परिपन्थिनः। धनुषा नमता स्वर्गं वपुषा तु वसुन्धराम् ।।घूर्जरान् पारशीकांश्च प्रागेव भृतकीकृतान्।अपश्चात्पदविन्यासान् अकरोदग्रयायिनः।।मध्यदेशं वशीकृत्य योगीव प्रथमं मनः। प्रत्यन्तबहिरक्षाणि त्याजितायथाकरोत्।।गृहीतचरमाम्भोधीन् गरुत्मानिव जग्रसे। धन्विनस्तुरगोपेतान् विमुखान् भुजगानिव।।यदवस्तत्र निस्त्रासा यवनैः स्तनयित्नुभिः। शैला इव दधुर्भीमां शरवृष्टिमुदीरिताम्।।रक्तचन्दनदिग्धास्ते यशोभिः स्रग्वणस्तदा।जयश्रीपरिरम्भार्थं नैपथ्यमिव भेजिरे।।कपिचूषिततालाभैः कृत्तैर्यवनमूर्धभिः।ददृशे कालभृत्यानां दत्तपिण्डेव मादिनी।।पीते यवनसैन्याब्धौ तत्कोपबडबाग्निना। शकाद्याः शरणं जग्मुः शङ्कातङ्केन सात्यकिम्।।प्रवालपल्लवास्तीर्णां रत्नपुष्पौघकर्बुराम्।विहारपदवीं मेने वेलामपरवारिधेः।।प्रचेतसापि दुष्प्रापैः प्रवालमणिमौक्तिकैः। तं पोतवणिजस्तत्र प्रभूतैः पर्यतोषयन्।।निर्धूतनिगमांस्तत्र नैगमान् अपरान्तजान्। स वैद्य इव दुर्व्याधीन् दुर्जयान् अजयद्विभुः।।विहरन् वारुणीभाजा स वीरो विजयश्रिया।बभूव बर्बरस्त्रीणां परिदेवनदेशिकः।।उदनह्यन्त वार्ष्णेयाः कुन्तलान् समरश्लथान्।प्रवालैरपराम्भोधेरान्त्रैरिव समुद्धृतैः।।ततो विलुलितम्लेच्छः पश्चिमोदधिवेलया। अनुलप्रेयसीमाशाममनुष्यपदं ययौ।।हीरीतहरितैस्तत्र महार्घैर्मणिराशिभिः।गृहीतैरन्वगृह्यन्त तेन पोतोपजीविनः।।पश्चिमां दिशमाक्रम्य प्राङ्मुखं रथमास्थितम्।विपरीतगतिं सूर्यमुदीच्यास्तमजानत।।स कृष्णवर्त्मविहृतिर्युगान्त इव संयुगे। अमुत्रलोकमदहत् दीप्तहेतिगणोल्बणः।।अनभ्रविद्युत्प्रतिमाः सायकास्तस्य धन्विनः।अभवन् हूणनारीणामश्रुवर्षपुरस्सराः।।द्विषतो देवदृश्येषु रणरङ्गेषु दीव्यतः। ताण्डवं ग्राहयामास निपातितशिरोधरान्।।अपरस्परसापेक्षान् अतूणीरप्रकाशकान्। अशंसत् प्रतियोधानप्यवधीरितजीवितान्।।महान्तो मण्डलं चेरुर्मध्येप्रतिबलं द्विपाः। प्रलयोदन्वदावर्ते भ्रमन्त इव पर्वताः।।तत्र सैन्यरजश्चक्रे प्रतीचीरपि वाहिनीः। असमाहितबूद्धीनां चित्तवृत्तीरिवाविलाः।।त्रासमुक्तं पुनस्तत्र सिन्धुकाम्भोजयोषिताम्। अश्रुबिन्दुभिराबन्धि मौक्तिकस्तनमण्डनम्।।अकृष्टपच्यघुसृणामच्छिन्नौघमहापगाम्।अघर्मग्लपितारण्यामनघां भुवमन्वभूत्।।अश्वीयखुरनिष्पिष्टभूधरक्षोदभूयसा।राजवीधीसमां चक्रे रजसा वालुकां नदीम् ।।ग्रामणोरिव तैस्तस्य सैनिकैरवरोधिताः।स्त्रियः पुरुषधर्माणः स्त्रीत्वमेवोपलम्भिताः।।बलेन महतास्कन्द्य मैनाकपितरं गिरिम् । प्रलयोदन्वदारोहमाकालिकमलम्भयत्।।समाजमिव शैलानां विश्वरूपमिव प्रभुम् । उत्तम्भनमिव व्योम्नः स निदध्सौ सकौतुकम्।।श्वशुरं भूतनाथस्य स्कन्दमातामहं गिरिम्।प्रसूतिं सर्वरत्नानां पृथिवीधेनुतर्णकम् ।।गृहीतास्त्याजितत्रासा मेनापतिवनौकसः।मार्गमादिदिशुस्तस्य वह्नेरिव समीरणाः।।तमारुह्य निरैक्षन्त जिघृक्षन्त इवान्धकाः। विकल्पितरवीन्द्वग्नीन् मेरुकैलासमन्दरान्।।ददृशे गगनं तत्र दिवापि व्यक्ततारकम् । गौरीहारमणिप्रख्यैर्गङ्गानिर्झरशीकरैः।।सुभगां किन्नरीणां च स्वगुणामोदमेदुराम्।गीतिं निशामयामासुः गजशार्दूलकर्षणीम्।।गुहासु यमिनां मेने सैन्यघोषमशृण्वताम् । शृण्वतामपि सिंहानां समं सामिनिमीलनम्।।अपश्यत् तत्र दूरस्थमन्तिकस्थमिवोन्मुखः। कैलासं किन्नरेन्द्रस्य कीर्तिकन्दमिवोत्थितम्।।चमरान् सिंहशाबांश्च गन्धनाभिमृगानपि। जगृहुस्तत्र वार्ष्णेयाः प्रियासम्प्रीणनार्थिनः।।गुञ्जाहारभृतः श्यामा बर्होल्लासितकुन्तलाः।प्रवालवसनाः प्रेक्ष्य जहसुः शबराङ्गनाः।।शिखरांसपरिष्कारैः सैन्यद्विपमदैर्बभौ।कल्कितः क्ष्माभृतां नाथः कस्तूरीस्थासकैरिव।।श्रुत्वा गिरिगुहानूक्तं तत्सैन्यगजगर्जितम्।अपि सिंहाः पलायन्त वन्यद्विरदभेदिनः।।प्रदीप्तरत्नशिरसं प्रालेयपरिपाण्डरम्। प्रदक्षिणं व्यतीताय शेषयित्वा महीधरम् ।।अथ कस्तूरिकामोदैरधिवासितभूधरान्।यशसावास्य नेपालान् यदुवीरः स्वदेशयत्।।पर्वतेन्द्रप्रतिनिधीन् प्रागुत्तरमहीधरान्। सुप्रतीकविषाणाग्रैरवैक्षत गवाक्षितान् ।।द्वीपपर्वतदुर्गेषु द्विपसिंहनिभान् द्विषः।सङ्ग्राममृगयास्थायी जग्राह च जघान च ।।प्रभञ्जन इवाम्भोदान् पक्षीन्द्र इव पन्नगान्।प्राच्यान् प्रच्यावयामास पञ्चवक्त्र इव द्विपान्।।शोषितप्राच्यजलधिः शौर्यबाडववह्निना। ससर्ज तद्वधूचित्तेष्वशोष्यं शोकवाधिम्।।यदूनां हेतयस्तत्र शत्रुशोणितपाटलाः।प्रतापज्वलनज्वालासम्पदं प्रतिपेदिरे ।।कृपाणिकाभिः कुकुराः कम्पताभिरकम्पयन्।द्विषतां तद्वधूनां च चित्तदक्षिणलोचने।।विजह्रुर्यादवास्तत्र विबुधस्त्रीवपप्रदाः। शराणां लक्षदातारः शत्रुसंमतविक्रमाः।।विक्रमप्रभवे तेषां विजयश्रीस्वयंवरे।वन्दिकृत्यं द्विषश्चक्रुरप्सरोभिः स्वयंवृताः।।रमापतिपदोत्पन्नां रत्नाकरपतिंवराम्।पुण्यां सरितमासीदत् पुरभिन्मौलिमालिकाम्।।स मेने जाह्नवीं यान्तीमर्थमेकमिवार्णवम्।प्रवाहैर्बहुधा भिन्नैर्भाषाभिरिव भारतीम् ।।कृपाणधारातीर्थेन शोधयित्वा कृतागसः।त्रिदिवं प्रापयामास वङ्गांस्त्रिपथगान्तरे ।।विक्षिपन् भुवि निस्त्रिंशो वक्त्रपुष्पाणि वैरिणाम्।रणरङ्गटस्यास्य सूत्रधार इवाभवत्।।सैन्यदन्तिमदोपेतैः शत्रुस्त्रीबाष्पकज्जलैः।गङ्गां रविसुतां चक्रे यशसा तां च तन्मयीम्।।आत्तसारा द्विषस्तत्र मुक्तास्तेन महीयसा। अदृश्यन्त यथापूर्वं दन्तिभुक्तकपित्थवत्।।पृथुवीचिगणां तीर्त्वा पृथिवीसहजां नदीम्।बाधिताशेषगौडेन बलेनार्णवमाद्रवत् ।।अलभन्त महीपालाः पुरतस्तस्य निर्भयाः। नतेन धनुषा नाकं वपुषा च वस्न्धराम्।।विशन्तो वाहिनीं तस्य त्रिस्रोतसमिवापराम् ।त्रिदिवं प्रत्यपद्यन्त प्रतियोधा निरागसः।।कुटिलान् प्रगुणीकृत्य स्वनामाक्षरभूषितान् । जङ्मान् दर्शयामास जयस्तम्भान् महीतले।।शालीनिव सतस्त्रातुं तत्र तत्र प्ररोहतः।यवसौघनिभान् याप्यान् उज्जहार यदूद्वहः।।प्रतापाग्निं पुरस्कृत्य भुवस्सागरवाससः।वेलावलयसम्पन्नं करं जग्राह तत्र सः।।पुरन्दरसमः पूर्वं जित्वा पौरन्दरीं दिशम्।दीक्षितःसत्परित्राणे दक्षिणाभिमुखोभवत्।।उपदीकृत्य सर्वस्वमुपसन्नयदूद्वहाः। प्राचीमविकलामृद्धिमुत्कलाः प्रतिपेदिरे।।प्रहितानथ कालिङ्गैः पन्थानमुपरुन्धतः।रुरोध सिंहनादेन यदुसिंहः स सिन्धुरान्।।स तान् गैरिकरक्ताङ्गान् सप्तधा स्रुतनिर्झरान्।जङ्गमानिव विन्ध्यादीन् जगृहे गन्धहस्तिनः।।प्रतियुध्य परिश्रान्तान् गृहीत्वा गजयोधिनः। चक्रलिङ्गधरांश्चक्रे कालिङ्गान् किङ्करीकृतान्।।स तेषामपि सामन्तान् आहूतान् विन्ध्यदुर्गतः। दक्षान् द्विरदशिक्षायां चक्रे निजनिषादिसात्।।वैरिवारणमूर्धन्यैर्मौक्तिकैर्लाजतां गतैः।रणाग्निर्दर्शयामास व्यूढां तेन जयश्रियम् ।।दारितद्विरदांस्तत्र सिंहानिव महाजवान्। ननन्द स्वभटान् दृष्ट्वा नखरश्रितमौक्तिकान्।।विपक्षान् भूभृतस्तत्र कुर्वता निर्विचेष्टितान्।देवो हरिहयस्तेन द्विरूपत्वमिवान्वभूत्।।अपर्युषितपानायामनघस्रोतसं शुभाम्।गङ्गामिव विभक्ताङ्गीं प्राप गोदावरीं ततः।।अशालीनमनस्त्वेपि स्वाश्रितत्राणमिच्छताम्। आन्ध्राणामात्मदातृणां ददावभयदक्षिणाम्।।पतिरक्षणतुष्टानां स्वगुणग्रथिताक्षरैः।आन्ध्रेश्वरपुरन्ध्रीणां सङ्गीतैः प्रत्यनन्दत।।आद्यं द्रमिडदेशानां तुण्डीरमथ मण्डलम्। विवेश भूषितं यूपैर्वेधसो वाजिमेधिकैः।।क्षिप्ततदोषः स तं देशं क्षीरसिन्धुगुणाधिकम्।शुद्धधर्मपरिष्कारं श्वेतद्वीपममन्यत।।परित्यक्तपथांस्तत्र स काञिचीकटकत्यजः।आहूय स्थापयामास धर्म्यान् धर्मधुरन्धरः।।प्रलोभयन्तीं ललितैस्ततः प्रथमलक्षितैः।दर्शनीयेषु चोलेषु दिदृक्षामन्ववर्तत।।अथ कन्यां कवेरस्य ददर्श कनकाश्रिताम्। अपदिष्टनदीरूपाममृतस्येव देवताम्।।उदारलहरीलास्यां ललितावर्तरासिकाम्। रसिकः प्रैक्षत नदीं रङ्गपर्यन्तनर्तकीम्।।रथसेतुनिरुद्धा सा रत्नाकरमनोरथात्। अवरुह्य जगामेव सह्यस्य पितुरन्तिकम्।।दक्षिणापथगङ्गायाः स तस्या दिव्यसम्पदः।ददौ रविसुताश्लेषं दानवर्षेण दन्तिनाम्।।जननीमुव तां लक्ष्म्याः पाथोनिधिपतिव्रताम्। नियमैरुचितैर्भेजे निगमख्यातवैभवाम् ।।यशोभिस्सह चोलानामिक्षुनिष्यन्दसंमितम्।पयः सह्यपयस्विन्याः पपुर्यादवयूथपाः।।जहसुर्जागरूकास्ते जङ्घालगुणशालिनाम्।दृष्ट्वा द्रमिडयोधानामवस्कन्दमनोरथम्।।त्रिविष्टपनिभांस्तत्र दृष्ट्वा जनपदान् बहून्। अचमत्कारमन्येषु भूमिभागेष्वधत्त सः।।तत्र दर्पममित्राणां मित्राणामपि साध्वसम्।अखण्डयदपर्यायात् अत्याखण्डलविक्रमः।।रङ्गमात्मभुवस्तत्र रम्यनिर्माणमातृकाम्। अनन्तपीठिकारूढमभ्यर्च्य मुदितो ययौ।।दिवापि दीपसापेक्षं गहनं संश्रितान् गजैः। स चोरांश्चूर्णयामास चोलपाण्ड्योपघातिनः।।रम्यपत्तनसम्बाधां रत्नसैकतशोभिनीम्। व्यलोकयत संप्रीतो वेलाविपिनपद्धतिम्।।मैनाकमहसा दीप्तं सेतुसीमन्तितोदकम्।दमितं रघुवीरेण ददर्शाब्धिं स दक्षिणंम्।।परिखां प्रेक्ष्य लङ्कायाः पयोधिं प्रजहर्ष सः।ताराभूषितदेहस्य त्रिदिवस्येव दर्पणम्।।सहसोत्पततां तत्र धन्विनो लघुविक्रमाः।उदधिं दन्तिनक्राणां कुम्भरत्नैरपूरयन्।।गगनं च निरालम्बमगाधं च महोदधिम्। वीक्ष्य ते बह्वमन्यन्त हनूमन्तं गतागतम्।।स भेजे सरितां पत्युः पुलिनं वृष्णिपुङ्गवः। आसीदविधवा गङ्गा प्रसन्ने यत्र राघवे ।।व्यलोकत च विसमेरो लङ्कागोपुरमुत्तरम्।रघुवीरशरव्रातपरिकल्पितजालकम्।।परिभूतरवस्तस्य सैन्यघोषेण सागरः।अधिकं क्षोभमापन्नस्रासभिन्न इवाभवत्।।तमालान् प्रतिमातङ्गत्रासादालानमण्डलान्।ममृदुर्ननमावार्य मदान्धा गन्धसिन्धुराः।।नलसेतुं ततो नीत्वा दृष्टमुक्तानदीमुखः।वीरो विश्रमयामास दुर्निवारां वरूथिनीम्।।कृतव्यावर्तनास्तत्र केतकीरेणुरूषिताः। द्विषः स्कन्धांश्च दुधुवुर्हयास्तुमुलहेषिताः।।धनुषा शार्ङ्गभीमेन सामिविष्पारितेन सः सज्जितोदधिगोषेण लङ्काद्वीपमकम्पयत्।।प्रतापदूतवशगाः प्राज्यरत्नोपहारिणः।अजीवन् यदुसिंहस्य पादमाश्रित्य सिंहलाः।।महतीमुपदां तेषां द्विपरत्नादिशालिनीम्।स संगृह्य पुनश्चक्रे न मनः सेतुबन्धने।।द्विरदान् सिंहलेन्द्रस्य द्विचतुर्दन्तशोभिनः।पोतभूतांस्त्रिकूटस्य पोतानीतान् अमन्यत।।यशोरत्नाकरस्तस्य बभौ पाण्ड्यसमर्पितैः।सैन्यकञ्चुकपर्याप्तैर्मुक्तापुलिनमण्डलैः।।सोमवंशभुवां तत्र भूभृतां यदुपुङ्गवः। सयूथ्यभावमुद्भाव्य शङ्काज्वरमपानुदत्।।स मारुतिपदन्यासादञ्चिताग्रामधित्यकाम्।प्रभुः प्रदक्षिणीचक्रे महेन्द्रस्य महीभृतः।।उपभुक्ता बभौ तेन मलयस्य वनस्थली।सैन्यसम्मर्दसम्भूतैरेलाचन्दनसौरभैः।।पदगेन्द्रध्वजत्रासात् भ्रष्टकुण्डलितात्मनाम्।जगृहुर्यादवास्तत्र फणारत्नानि भोगिनाम्।।पृतनां तस्य संप्रेक्ष्य पृषद्भावितसागराम्।मानमात्मनु तत्याज मलयाश्रमतापसः।।मरुतस्तत्र नागानां मृदितैलासुगन्धयः। चन्दनद्रुमसक्तानां प्रीतिकोपकृतोभवन्।।पटीरस्कन्धविषयास्तत्र तेषां भुजङ्गमाः।अभजन्त फणारत्नैरवातक्षोभदीपताम्।।मुक्ताभरमभूयिष्ठा रत्नचन्दनरञ्जिता।चकाशे यादवी सेना सतारेव पितृप्रसूः।।निदाघमिव पर्जन्यो निरासे सात्यकिः परम्।प्रयुक्तैरग्रतो नागैः प्रावृषेण्यैरिवाम्बुदैः।।युगपत् प्रत्यविध्यन्त युद्धे तस्य शरैर्द्विषः। अपाङ्गैश्च सुरस्त्रीणामसितोत्पलमेचकैः।।शस्त्रकेलिं परित्यज्य स्वकान्ताकेशभङ्गुराम्।जगृहुः केरलास्तत्र जैत्रमस्त्रमिवाञ्जलिम्।।अदूरावस्थितो रामस्तत्र वृष्णिवरूथिनीम्।शशङ्के विस्मयाविद्धः सप्तार्णवसमाहृतिम्।।भुग्नभागस्ततः सह्यस्तदाक्रमणयन्त्रितः।प्रणिनंसुरिवाबोधि पर्यस्तशकटोपमः।।अग्रस्कन्धेन गोकर्णं महेन्द्रमपि मूलतः।अवस्कन्द्य युदुश्रेष्ठः स्कन्धावारं न्यवीविशत्।।जित्वा सह्याश्रितं वीरो जामदग्न्य इवापरः।दूरमुत्सारयामास द्विषद्बलमहार्णवम्।।चारुचन्दनसम्पन्नशैलस्तनमनोहराम्।बुभुजे दक्षिणामाशां मौक्तिकाकरमेखलाम्।।तत्र वेलानिलोद्धूतराजतालरवान्वितम्।स्वर्गीतं स्वादु शुश्राव भुजङ्गस्त्रीमुखोदितम्।।चोलकेरलपाण्ड्यानां पश्यन् अनुगतिं प्रभूः।चकार पुनराधानं धर्म्यं हुतभुजामिव।।कालदृष्टिकरालाभिरुल्काभिरिव हेतिभिः।दुर्मदद्विरदोदग्रान् त्रासयामास तौलुवान्।।खेटकर्परगूढाङ्गान् कीलयित्वा शरैर्द्विषः। स्थलकूर्मैरिवाकीर्णं चकार रणभूतलम्।।शरैरभ्यर्चितास्तेन कोङ्कणाः समराङ्कणे।पुष्पवृष्टिभिरानर्चुस्तमेव त्रिदशीकृताः।।कुपिताः कोङ्कणस्त्रीणां गण्डूषमधुगर्भितान्।बभञ्जुरमितामोदान् वकुलान् वृष्णिकुञ्जराः।।प्रमादानिव तान् सप्त देशान् अतिपतन् प्रभुः।स ममर्द महाराष्ट्रं सैन्यदक्षिणभागतः।।अपश्यदृश्यमूकान्ते शेषमौलिमणिप्रभाम्।रामसायकरन्ध्रेण निस्सरन्तीं नभस्स्पृशम्।।कामक्रोधाविवास्कन्द्य सह्यविन्ध्यौ समाहितः।विजिग्ये विषमांस्तत्र विषयान् सत्त्वमास्थितः।।चापघोषेण निर्भिन्नचक्रवालाद्रिसन्धिना।कुञ्जलीनान् द्विषस्तत्र दिवाभीतान् अभेषयत्।।अवन्ध्यतपसा विन्ध्यः स्तम्भितः कुम्भजन्मना। यदुपुङ्गवमातङ्गैर्वर्धमान इवाभवत्।।सूर्यरोधितरुच्छन्नाम् असूर्यंपश्यवीचिकाम्।सोमवंश्याः सुधां तत्र पपुः सोमसमुद्भवाम्।।तेषां विहरतां तत्र शिञ्जिनीबद्धरावणाम्।कार्तवीर्यजलक्रीडां कथयन्ति स्म तापसाः।।नगरीं हेहयेन्द्रस्य कारार्पितदशाननाम्।नालदीनां च शिथिलां सनिर्वेदमदर्शयन्।।थवाजिपदक्षुण्णविन्ध्यमस्तकरेणुभिः।रेवामाचामयामास रिपुस्त्रीबाष्पवर्धिताम्।।ववृधे समरस्तत्र सुभगस्वर्गसङ्क्रमः।सिद्धगन्धर्वयूथानां चित्तताण्डवदेशिकः।।स्फुलिङ्गैः खड्गनिष्पिष्टदन्तदम्भोलिसम्भवैः।आसीत् द्विरदमेघानामचिरद्युतिकल्पना।।सव्यालमृगसङ्कीर्णा रम्यतुङ्गरथद्रुमा।विससर्प चमूस्तत्र विन्ध्यवन्येव जङ्गमा।।तालद्वयसजङ्घाग्र्याः कुम्भैरुत्तम्भिताम्बराः।गर्जितैस्त्रासयामासुर्गजा वनमतङ्गजान्।।बलयन्त्रणया तत्र गृहीतैर्विपिनद्विपैः।व्यवर्धयत तां सेनां विन्ध्यपादैरिवोन्नतैः।।यूथैर्द्विरदशैलानां कनत्कदलिकावनैः। अनन्तरं पूरयामास विन्ध्यनीहारभूभृतोः।।अरातिवनितानेत्रैरश्रुधाराधरैरिमाम्।वीरो वसुमतीमित्थं विदधे देवमातृकाम्।।धर्मयूपनिभैस्तस्य जयस्तम्भैः समन्ततः।प्ररूढाद्भुतरोमाञ्चा प्रत्यभासत मेदिनी।।जिताशेषविपक्षस्य बद्धमुक्तावभासिनी।अभवत् ककुभां तस्य कीर्तिः श्रवणभूषणम्।।इति ग्राह्यकराश्चक्रे हरितो हरितोषकृत्।वीरः सुरभिणा स्वेन यशसावासिताम्बराः।।हृतसर्वस्वदीनानां व्रीडामपनुदन्निव। अदिशत् क्षौममाशानां यशोभिर्हंसलक्षणैः।।स चक्रवत् परिक्रम्य क्षमाचक्रमरिन्दमः।क्षपयित्वा रिपून् सर्वान् शौरिपार्श्वं पुनर्ययौ।।सैन्यसिन्धुपथस्तस्य स्थलीशेषितकण्टकः। विदधे विस्मयोन्निद्रप्रीतिकण्टकितां भुवम्।।तमेवमखिलामाशां परिक्रम्योदयस्थितम्।प्रद्यौतनसमे पौराः प्रहृष्टाः प्रत्युपासत।।सैन्यघोषसमाहूतौ ततो हरिहलायुधौ। तमभ्याजग्मतुर्दूरादुग्रसेनपुरोगमौ।।ददृशे सात्यकिस्तत्र राममुख्यैः सराजकः।अन्यैः सह दिशापालैराखण्डल इवापरः।।अभिवन्द्य स तान् वन्द्यान् अभिव्यक्तपराक्रमः।तदनुप्लवभावेन प्राविशत् द्वारकां पुरीम्।।प्रस्थितौ परिमेयानि पश्चादुपचितानि सा ।जग्रसे यदुसैन्यानि जगन्तीव हरेस्तनुः।अष्टासु दिक्षु विभवैरुपसङ्गृहीतैः यक्षास्पदप्रहसनी यदुराजधानी।   
-सत्यानुभाववसुदेवसुतप्रसत्त्यै सम्भूतदिक्पतिविभूतिरिवावभासे।।अभ्यर्च्य पूर्वविभवादधिकैः प्रदिष्टैः नाकाधिपानिव नवोपहृतान् नरेन्द्रान्।   
-धर्मानुपालननियोगनिरूढचित्तान् प्रास्थापयत् प्रतिदिशं प्रथमो यदूनाम्।।मणिमकुटसहस्रैर्वासुदेवस्य भूपाः पदसविधनिषण्णां पादुकामर्चयित्वा।   
-प्रतिययुरुपलब्धैः पारिजातप्रसूनैः सुरभयितुमुपेत्य स्वावरोधान् प्रसाद्यान्।।
+अथ देवानिवाहूतान् नरदेवान् अभाषत। देवदानवसामान्यदैवतं देवकीसुतः॥
+
+एष वः क्ष्मापतिः शास्ति विधातेव प्रजापतीन्। महेन्द्रः हव धर्मेण सुधर्मामास्थितः स्वयम्॥
+
+शेखरीकृतभूभारः शेषत्वेन विभोः स्थितः। वेदयत्ययमार्योपि मित्रभूतान् अमित्रजित् ॥
+
+वयं भवन्तो ये चान्ये महान्तः सर्व एव ते । विश्वगुप्तौ जगत्कर्त्रा विनियुक्ता विभूतयः॥
+
+तदस्माभिरवस्थेयं धर्मवर्त्मनि शाश्वते।बिभ्यद्भिरनघादेशात् वज्रादिव समुद्यतात् ॥
+
+द्विषन्तः ख्यातनामानो नामशेषास्तथाप्यसौ।समुद्रवसना विष्वक् तामसैरवकुण्ठिता ॥
+
+अंसकस्तूरिका भूमिर्भवतां बीहुशालिनाम् । अजुगुप्सापदं न स्यादसद्वृत्तिमलीमसा ॥
+
+शङ्कितप्रचयः शेषः शत्रूणां शुष्मणामिव।आयतौ सुखमिच्छद्भिर्न युक्तः क्षन्तुमीश्वरः॥
+
+अतस्त्राणाय साधूनां दुष्कृतां दमनं क्षमम् । कडङ्करीयरोधो हि कलमोत्सेधकारणम्॥
+
+पुष्यतां पाण्डरं छत्रं पुण्डरीकमुव श्रियः। धर्मोधर्मश्च नान्योस्ति रक्षणोपेक्षणे भुवः॥
+
+पूर्वपूर्वनरेन्द्राणामुच्छिष्टमपि मेदिनी । सोमपीथिनयात् ग्राह्या स्वधर्माध्वरमास्थितैः॥
+
+अविवेकविभावर्यां धर्ममार्गमपङ्किलम्।द्रष्टुं दीप इव न्यस्तो नायकेन नयागमः॥
+
+अवलम्ब्य जगद्धातुर्हस्तमागमविग्रहम् । स्वयमुद्धरतात्मानं स्वैरं पातालपातिनम् ॥
+
+व्यसनासारवेगानां वारणं न प्रकल्पते।उपदेशैरनार्याणामुत्तानच्छत्रसन्निभैः॥
+
+पण्डितप्रहतेनैव सत्पथेन सदोदिताः।विषमेषु स्खलन्तोपि न दुर्गतिमवाप्स्यथ॥
+
+भूपरिक्रमणादन्या भवतामतिभास्वताम् । तमसामिव शत्रूणां निरासे कीदृशी क्रिया ॥
+
+जिगीषूणां च युष्माकं न जेतव्यपदे स्थितम् । कौरवैरनुकूलानां विपाकैरिव कर्मणाम्॥
+
+अवरोध्याः स्वयं दक्षैरक्षिपद्भिरनेहसम्।करिणां कर्णडोलाभिः कम्पिता इव सम्पदः॥
+
+नीतिपद्धतिरक्षोभ्या भवद्भिरधिगम्यताम् । नियता स्वर्गसौधस्य निश्श्रेणिरिव शाश्वती॥
+
+खलत्यागः सुहृत्प्राप्तिरितीदं कवचद्वयम् । वहध्वं मन्त्रदेहस्य भेदं परिजिहीर्षवः॥
+
+धातुनामिव कोपेषु प्रकृतीनामचेतसाम् । पातुमर्हथ पर्याप्तं प्रसादनरसायनम् ॥
+
+अनीतिमदिरां त्यक्त्वा लोभादिविषदूषिताम् । अगदङ्कारमादद्ध्वं प्रज्ञामृतमनुत्तमम्॥
+
+लुलिताशेषसन्मार्गं लोकवेदविरोधिनम्। परित्यजत दुर्मानं पाषण्डमतजीवितम् ॥
+
+गुणशैलाग्रमारोप्य शनैरात्मानमात्नमा। नित्यशङ्कितविभ्रंशं निध्यायत शुभंयवः॥
+
+त्रिविधानु विधेयानि सम्पत्सु च विपत्सु च । करणानीव मित्राणि गोपायत गुणग्रहात्॥
+
+अप्रशान्तेषु विस्रम्भमतिशङ्कां सुहृत्सु च। नीतिसंद्शिना ऋद्धेः समुद्धरत कण्टकौ॥
+
+सपञ्चाङ्गेन मन्त्रेणच नीतिमाहात्म्यनिर्विषाम्। नियच्छत निजाङ्गेषु भुजङ्गीमिव सम्पदम् ॥
+
+अवधीरयताधर्म्यामर्थकामैकसाधिकाम्। नृशंसप्रेयसीं नीतिं नारीहृदयदारुणाम्॥
+
+प्रमादसप्तकं त्यक्त्वा प्रबुध्योपायसप्तकम् । अङ्गसप्तकसम्पत्त्या जयत द्वीपसप्तकम्।अरातिगणकूटस्थान् आदौ जयत दुर्जयान्। अपदक्रोधलोभादीन् अशेषार्थविरोधिनः॥
+
+आन्तरेण बलेनैव द्विविधां वहत क्षमाम्। यस्य सत्वेप्यसत्त्वेपि गतार्थं षड्विधं बलम्॥
+
+न शापो नाभिचरणं न वह्निर्न विषं तथा ।नास्त्राणि न च शस्त्राणि यथा तीक्ष्णतमा क्षमा॥
+
+विपक्षजातिभाजोपि क्षुद्रान् अनपकुर्वतः।सुपर्ण इव भूनागान् उपेक्षध्वं तरस्विनः॥
+
+कृपणान् क्षममाणेपि महासत्त्वो न दैन्यभाक् । मृगेन्द्र इव भिन्नेभः स्वदंष्ट्रालेहिनः खगान्॥
+
+देवान् अतिशयानानां दैत्यदानवरक्षसाम्। विनिपादनिदानानि स्वयमन्वीक्ष्य सुख्यत॥
+
+यशः प्राणहरान् घोरान् व्यामोहविषपादपान्। समीक्षाशाणघृष्टेन द्यत शास्त्रेण शस्त्रिणः॥
+
+श्रुतशीलिभिरुक्तानि दुरुत्सेकज्वरातुराः।अप्रियाण्यपि पथ्यानि मा जिहासत जातुचित् ॥
+
+कलिसन्धिसमाघ्रातं त्यजन्तः कर्म कर्बुरम्।सदसत्प्रेक्षणे स्यात सर्वतो दत्तदृष्टयः॥
+
+पल्लवोपमकौमारे प्रसूनोपमयौवने। स्थिरं फलमुपादद्ध्वं जङ्गमे जीवितद्रुमे ॥
+
+मिषतां मीलतां वापि द्रुतं धावति जीविते। अनघं तनुत क्षेम्यमान्तरं धनमक्षयम् ॥
+
+अकालनियतोच्छ्रायमतिसूर्येन्दुपावकम्।क्षात्त्रं क्षपितजाड्यं वः क्षमं तेजः समेधितुम्॥
+
+असम्पलावितसप्ताब्धिरत्रिलोकीतमोपहा।अदिक्सूतसुधालिप्तिर्यस्य कीर्तिः स किंप्रभुः॥
+
+सुधां सुमनसे यस्य स्वादयन्ति यशोमयीम् । स राजा वृद्धिमाप्नोति क्षीयते न च कालतः॥
+
+त्यक्तसान्त्वेन कठिनान् विद्रावयत तेजसा।अयसस्तापसेकाभ्यामवस्था कीदृशी भवेत्॥
+
+प्रसातधितदिशो युष्मान् विमुक्तान्यमहीभृतः।सम्पदः प्रतिपत्स्यन्ते सरितः सागरानिव॥
+
+स एष पुरतो याता प्राज्ञः परिमृशन् पथः। सङ्कल्प इव युष्माकं सात्यकिः सत्यविक्रमः॥
+
+परिवारेण सम्पन्नस्त्यक्तकोशश्च कार्यतः।नन्दकोयमनिस्त्रिंशः सम्मतो मम शत्रुजित् ॥
+
+जैत्रं ध्वजमिवोदग्रमेनमाहितलक्षणम्।अनुयात दिशो जेतुमस्त्रवेदमिवापरम् ॥
+
+वनसिंहनयाद् गुप्तिर्मानतर्कक्रमादपि। परस्परपुरस्कारात् भवित्री भवतामिह॥
+
+अपि युष्माभिरेतावदहङ्कारग्रहोज्झितैः।अङगीकृतममुह्यद्भिरातुरैरिव भेषजम् ॥
+
+इति सूक्तिसुधां पीत्वा शौरिवक्त्रेन्दुनिस्सृताम्।सहसा नरदेवास्ते सौमनस्यं प्रपेदिरे॥
+
+तदुक्तिं शुकवत् सर्वे सॅल्लपन्तः परस्परम्।प्रहर्षमदधुस्तस्य प्रविष्टा नीतिपञ्जरम्॥
+
+तृषितैरिव तं श्रोत्रैः संभृतश्रुतिसौरभाम्। पपुः प्रियहितां तस्य परिशुद्धां सरस्वतीम्॥
+
+असन्देहविपर्यासामसङ्कीर्णहिताहिताम्। त्रयीमिव गिरं तस्य मानयन्ति स्म ते नृपाः॥
+
+अथ यादवयूथेन सहितः संयुगप्रियः।सात्यकिः प्रचितोत्तंसः प्रतस्थे भर्तुराज्ञया॥
+
+धर्मगुप्तिकृताद्शः स मेने मधुवैरिणा । अपृथक्त्वामिवापन्नमन्यदायुधपञ्चकम्॥
+
+सवकेतुकल्पनापूर्वं नियुक्तं हरिणा स्वयम्। तमेव तादृशाकारं तममन्यन्त यादवाः॥
+
+स वीरः शासनं भर्तुः शिरस्त्राणमिवोद्वहन्।अमन्यत जितप्रायाः सह दिक्पतिभिर्दिशः॥
+
+पयोधिं तर्णकपदं पर्वतं सिकतामयम्।पातालं च स्थलीपृष्ठं प्रैक्षतामितविक्रमः॥
+
+प्रयाणपटहस्तस्य प्रलयाम्बुदडम्बरः। नूनमानर्तयामास भुवं सह पयोधिभिः॥
+
+प्रयान्ती पृतना सद्यः प्रणादैर्द्यामपूरयत्।वैरिवासकसज्जानां गणैरप्सरसामपि॥
+
+अधिरुह्य रथं जैत्रं स बभौ तार्क्ष्यसन्निभम्। जिगीषितदिशाचक्रश्चक्रपाणिरिवापरः॥
+
+दिव्यदुन्दुभिघोषेण पुष्पवर्षेण भूयसा।अशरीरिजयोक्त्या च तेन जज्ञे जितं जगत्॥
+
+स विष्णुरिव विक्रान्त्या बलिध्वंसोद्यतो बली।सुषुवे त्रिषु लोकेषु कीर्तिं त्रिपथगामिव॥
+
+ततो बुद्बुदफेनाभैः प्रचितां छत्त्रचामरैः।निनाय पृतनां प्राचीं गङ्गामिव भगीरथः॥
+
+पृतनासागरौघेन पालयन् सागराम्बराम्।वीरो वेतसवृत्तीनां न भङ्गमभिसन्दधे॥
+
+महद्भिरपि तत्सैन्ये सम्पतद्भिः सुहृद्बलैः।न वृद्धिरभवद् दृश्या वर्षतोयैरिवाम्बुधौ॥
+
+अशोभत पताकाग्रैरग्रहस्तैरनीकिनी। निर्दिश्य गणयन्तीव जेतव्यविषयान् निजैः॥
+
+तमीदिवसयोस्तत्र पृथिव्याकाशयोरपि। समपद्यत तादात्म्यं सैन्यरेणुसमुत्थितम् ॥
+
+असूचीमुखभेद्यं तत् अचन्द्रार्कप्रतिक्रियम्। रुरोध द्विषतां दृष्टिं रजसा जनितं तमः॥
+
+अप्रतापमरुत्क्षिप्तः परागः प्रसरन् पुरः। आसन्नविनिपातानां वैवर्ण्यमदिशत् द्विषाम्॥
+
+धूमकम्बलसान्द्रेण रेणुना गगनस्थली।नमन्तीं सैन्यभारेण शनैरनुजगाम गाम्॥
+
+पृथिवीं वर्धयनातीव पृतना खण्डयन्त्यपि । परागैः पूरयामास खातं सगरजन्मनाम्॥
+
+ध्वजपल्लविता सेना शस्त्रपुष्पा परागिणी। बभौ चञ्चूर्यमाणेन मृत्योरुपवनस्थली॥
+
+सा नूनमनुकुर्वाणा सिन्धुपत्न्यौ सितासिते। कुटिलप्रतिकूलर्द्धिः कूलङ्कषगतिर्ययौ॥
+
+विश्वतःप्रसृतिस्तस्या बभूव बहुपद्धतेः। वाहबन्धनकीलानामपर्याप्तवनद्रुमा ॥
+
+अविच्छिन्नगुणांश्चक्रे निस्त्रासान्निजसेनया। हारानिव भुवः शुद्धान् अग्रहारान् परार्पितान्॥
+
+अनाश्रमपदासन्नामभीषितकृषीवलाम्। अनैषीन्महतीं सेनामविरुन्धानगोपनीम्॥
+
+स्वद्शादविशेषेण स्वीकृते शत्रुमण्डले। न योधा जगृहुस्तत्र किञ्चिदस्वामिसम्मतम्॥
+
+विहारास्तस्य जन्येषु विमतानेव निघ्नतः। समं ददृशिरे देवैस्तत्तज्जानपदैरपि॥
+
+अदीनसत्त्वः शत्रूणां दीनसंरक्षणव्रती। अन्वकम्पत धात्रीभिरुपनीतान् स्तनन्धयान्॥
+
+अदृष्टसैन्यरजसामबाणस्पर्शवेदिनाम्।पश्यन् क्वचिदमित्राणां स जिह्राय पलायनम्॥
+
+स मिथश्शौर्यसङ्घर्षादरातीन् अभिनिघ्नतः। पुनरुद्दीपयामास सत्कारेण गरीयसा॥
+
+क्रोधपावकदीप्तानां हेतीनां यदुपुङ्गवाः। विदधुस्तत्र वैरिस्त्रीबाष्पतोयेन सेचनम्॥
+
+निहतप्रतिमातङ्गदन्तत्सरुपरिष्कृतान्। द्विषतां मौलिशाणेषु खड्गान् मुहुरशातयन्॥
+
+शस्त्रधाराधरैस्तत्र विक्रमारण्यबर्हिणीम्। विपुले भुजशैलाग्रे वीरश्रियमनर्तयन्॥
+
+नियतं हेतयस्तेषां निपीते वह्निवारिणी।निदधुः शत्रुनारीणां चित्तेषु नयनेषु च ॥
+
+अलभन्त क्षणात् तेषां पुरतः परिपन्थिनः। धनुषा नमता स्वर्गं वपुषा तु वसुन्धराम् ॥
+
+घूर्जरान् पारशीकांश्च प्रागेव भृतकीकृतान्।अपश्चात्पदविन्यासान् अकरोदग्रयायिनः॥
+
+मध्यदेशं वशीकृत्य योगीव प्रथमं मनः। प्रत्यन्तबहिरक्षाणि त्याजितायथाकरोत्॥
+
+गृहीतचरमाम्भोधीन् गरुत्मानिव जग्रसे। धन्विनस्तुरगोपेतान् विमुखान् भुजगानिव॥
+
+यदवस्तत्र निस्त्रासा यवनैः स्तनयित्नुभिः। शैला इव दधुर्भीमां शरवृष्टिमुदीरिताम्॥
+
+रक्तचन्दनदिग्धास्ते यशोभिः स्रग्वणस्तदा।जयश्रीपरिरम्भार्थं नैपथ्यमिव भेजिरे॥
+
+कपिचूषिततालाभैः कृत्तैर्यवनमूर्धभिः।ददृशे कालभृत्यानां दत्तपिण्डेव मादिनी॥
+
+पीते यवनसैन्याब्धौ तत्कोपबडबाग्निना। शकाद्याः शरणं जग्मुः शङ्कातङ्केन सात्यकिम्॥
+
+प्रवालपल्लवास्तीर्णां रत्नपुष्पौघकर्बुराम्।विहारपदवीं मेने वेलामपरवारिधेः॥
+
+प्रचेतसापि दुष्प्रापैः प्रवालमणिमौक्तिकैः। तं पोतवणिजस्तत्र प्रभूतैः पर्यतोषयन्॥
+
+निर्धूतनिगमांस्तत्र नैगमान् अपरान्तजान्। स वैद्य इव दुर्व्याधीन् दुर्जयान् अजयद्विभुः॥
+
+विहरन् वारुणीभाजा स वीरो विजयश्रिया।बभूव बर्बरस्त्रीणां परिदेवनदेशिकः॥
+
+उदनह्यन्त वार्ष्णेयाः कुन्तलान् समरश्लथान्।प्रवालैरपराम्भोधेरान्त्रैरिव समुद्धृतैः॥
+
+ततो विलुलितम्लेच्छः पश्चिमोदधिवेलया। अनुलप्रेयसीमाशाममनुष्यपदं ययौ॥
+
+हीरीतहरितैस्तत्र महार्घैर्मणिराशिभिः।गृहीतैरन्वगृह्यन्त तेन पोतोपजीविनः॥
+
+पश्चिमां दिशमाक्रम्य प्राङ्मुखं रथमास्थितम्।विपरीतगतिं सूर्यमुदीच्यास्तमजानत॥
+
+स कृष्णवर्त्मविहृतिर्युगान्त इव संयुगे। अमुत्रलोकमदहत् दीप्तहेतिगणोल्बणः॥
+
+अनभ्रविद्युत्प्रतिमाः सायकास्तस्य धन्विनः।अभवन् हूणनारीणामश्रुवर्षपुरस्सराः॥
+
+द्विषतो देवदृश्येषु रणरङ्गेषु दीव्यतः। ताण्डवं ग्राहयामास निपातितशिरोधरान्॥
+
+अपरस्परसापेक्षान् अतूणीरप्रकाशकान्। अशंसत् प्रतियोधानप्यवधीरितजीवितान्॥
+
+महान्तो मण्डलं चेरुर्मध्येप्रतिबलं द्विपाः। प्रलयोदन्वदावर्ते भ्रमन्त इव पर्वताः॥
+
+तत्र सैन्यरजश्चक्रे प्रतीचीरपि वाहिनीः। असमाहितबूद्धीनां चित्तवृत्तीरिवाविलाः॥
+
+त्रासमुक्तं पुनस्तत्र सिन्धुकाम्भोजयोषिताम्। अश्रुबिन्दुभिराबन्धि मौक्तिकस्तनमण्डनम्॥
+
+अकृष्टपच्यघुसृणामच्छिन्नौघमहापगाम्।अघर्मग्लपितारण्यामनघां भुवमन्वभूत्॥
+
+अश्वीयखुरनिष्पिष्टभूधरक्षोदभूयसा।राजवीधीसमां चक्रे रजसा वालुकां नदीम् ॥
+
+ग्रामणोरिव तैस्तस्य सैनिकैरवरोधिताः।स्त्रियः पुरुषधर्माणः स्त्रीत्वमेवोपलम्भिताः॥
+
+बलेन महतास्कन्द्य मैनाकपितरं गिरिम् । प्रलयोदन्वदारोहमाकालिकमलम्भयत्॥
+
+समाजमिव शैलानां विश्वरूपमिव प्रभुम् । उत्तम्भनमिव व्योम्नः स निदध्सौ सकौतुकम्॥
+
+श्वशुरं भूतनाथस्य स्कन्दमातामहं गिरिम्।प्रसूतिं सर्वरत्नानां पृथिवीधेनुतर्णकम् ॥
+
+गृहीतास्त्याजितत्रासा मेनापतिवनौकसः।मार्गमादिदिशुस्तस्य वह्नेरिव समीरणाः॥
+
+तमारुह्य निरैक्षन्त जिघृक्षन्त इवान्धकाः। विकल्पितरवीन्द्वग्नीन् मेरुकैलासमन्दरान्॥
+
+ददृशे गगनं तत्र दिवापि व्यक्ततारकम् । गौरीहारमणिप्रख्यैर्गङ्गानिर्झरशीकरैः॥
+
+सुभगां किन्नरीणां च स्वगुणामोदमेदुराम्।गीतिं निशामयामासुः गजशार्दूलकर्षणीम्॥
+
+गुहासु यमिनां मेने सैन्यघोषमशृण्वताम् । शृण्वतामपि सिंहानां समं सामिनिमीलनम्॥
+
+अपश्यत् तत्र दूरस्थमन्तिकस्थमिवोन्मुखः। कैलासं किन्नरेन्द्रस्य कीर्तिकन्दमिवोत्थितम्॥
+
+चमरान् सिंहशाबांश्च गन्धनाभिमृगानपि। जगृहुस्तत्र वार्ष्णेयाः प्रियासम्प्रीणनार्थिनः॥
+
+गुञ्जाहारभृतः श्यामा बर्होल्लासितकुन्तलाः।प्रवालवसनाः प्रेक्ष्य जहसुः शबराङ्गनाः॥
+
+शिखरांसपरिष्कारैः सैन्यद्विपमदैर्बभौ।कल्कितः क्ष्माभृतां नाथः कस्तूरीस्थासकैरिव॥
+
+श्रुत्वा गिरिगुहानूक्तं तत्सैन्यगजगर्जितम्।अपि सिंहाः पलायन्त वन्यद्विरदभेदिनः॥
+
+प्रदीप्तरत्नशिरसं प्रालेयपरिपाण्डरम्। प्रदक्षिणं व्यतीताय शेषयित्वा महीधरम् ॥
+
+अथ कस्तूरिकामोदैरधिवासितभूधरान्।यशसावास्य नेपालान् यदुवीरः स्वदेशयत्॥
+
+पर्वतेन्द्रप्रतिनिधीन् प्रागुत्तरमहीधरान्। सुप्रतीकविषाणाग्रैरवैक्षत गवाक्षितान् ॥
+
+द्वीपपर्वतदुर्गेषु द्विपसिंहनिभान् द्विषः।सङ्ग्राममृगयास्थायी जग्राह च जघान च ॥
+
+प्रभञ्जन इवाम्भोदान् पक्षीन्द्र इव पन्नगान्।प्राच्यान् प्रच्यावयामास पञ्चवक्त्र इव द्विपान्॥
+
+शोषितप्राच्यजलधिः शौर्यबाडववह्निना। ससर्ज तद्वधूचित्तेष्वशोष्यं शोकवाधिम्॥
+
+यदूनां हेतयस्तत्र शत्रुशोणितपाटलाः।प्रतापज्वलनज्वालासम्पदं प्रतिपेदिरे ॥
+
+कृपाणिकाभिः कुकुराः कम्पताभिरकम्पयन्।द्विषतां तद्वधूनां च चित्तदक्षिणलोचने॥
+
+विजह्रुर्यादवास्तत्र विबुधस्त्रीवपप्रदाः। शराणां लक्षदातारः शत्रुसंमतविक्रमाः॥
+
+विक्रमप्रभवे तेषां विजयश्रीस्वयंवरे।वन्दिकृत्यं द्विषश्चक्रुरप्सरोभिः स्वयंवृताः॥
+
+रमापतिपदोत्पन्नां रत्नाकरपतिंवराम्।पुण्यां सरितमासीदत् पुरभिन्मौलिमालिकाम्॥
+
+स मेने जाह्नवीं यान्तीमर्थमेकमिवार्णवम्।प्रवाहैर्बहुधा भिन्नैर्भाषाभिरिव भारतीम् ॥
+
+कृपाणधारातीर्थेन शोधयित्वा कृतागसः।त्रिदिवं प्रापयामास वङ्गांस्त्रिपथगान्तरे ॥
+
+विक्षिपन् भुवि निस्त्रिंशो वक्त्रपुष्पाणि वैरिणाम्।रणरङ्गटस्यास्य सूत्रधार इवाभवत्॥
+
+सैन्यदन्तिमदोपेतैः शत्रुस्त्रीबाष्पकज्जलैः।गङ्गां रविसुतां चक्रे यशसा तां च तन्मयीम्॥
+
+आत्तसारा द्विषस्तत्र मुक्तास्तेन महीयसा। अदृश्यन्त यथापूर्वं दन्तिभुक्तकपित्थवत्॥
+
+पृथुवीचिगणां तीर्त्वा पृथिवीसहजां नदीम्।बाधिताशेषगौडेन बलेनार्णवमाद्रवत् ॥
+
+अलभन्त महीपालाः पुरतस्तस्य निर्भयाः। नतेन धनुषा नाकं वपुषा च वस्न्धराम्॥
+
+विशन्तो वाहिनीं तस्य त्रिस्रोतसमिवापराम् ।त्रिदिवं प्रत्यपद्यन्त प्रतियोधा निरागसः॥
+
+कुटिलान् प्रगुणीकृत्य स्वनामाक्षरभूषितान् । जङ्मान् दर्शयामास जयस्तम्भान् महीतले॥
+
+शालीनिव सतस्त्रातुं तत्र तत्र प्ररोहतः।यवसौघनिभान् याप्यान् उज्जहार यदूद्वहः॥
+
+प्रतापाग्निं पुरस्कृत्य भुवस्सागरवाससः।वेलावलयसम्पन्नं करं जग्राह तत्र सः॥
+
+पुरन्दरसमः पूर्वं जित्वा पौरन्दरीं दिशम्।दीक्षितःसत्परित्राणे दक्षिणाभिमुखोभवत्॥
+
+उपदीकृत्य सर्वस्वमुपसन्नयदूद्वहाः। प्राचीमविकलामृद्धिमुत्कलाः प्रतिपेदिरे॥
+
+प्रहितानथ कालिङ्गैः पन्थानमुपरुन्धतः।रुरोध सिंहनादेन यदुसिंहः स सिन्धुरान्॥
+
+स तान् गैरिकरक्ताङ्गान् सप्तधा स्रुतनिर्झरान्।जङ्गमानिव विन्ध्यादीन् जगृहे गन्धहस्तिनः॥
+
+प्रतियुध्य परिश्रान्तान् गृहीत्वा गजयोधिनः। चक्रलिङ्गधरांश्चक्रे कालिङ्गान् किङ्करीकृतान्॥
+
+स तेषामपि सामन्तान् आहूतान् विन्ध्यदुर्गतः। दक्षान् द्विरदशिक्षायां चक्रे निजनिषादिसात्॥
+
+वैरिवारणमूर्धन्यैर्मौक्तिकैर्लाजतां गतैः।रणाग्निर्दर्शयामास व्यूढां तेन जयश्रियम् ॥
+
+दारितद्विरदांस्तत्र सिंहानिव महाजवान्। ननन्द स्वभटान् दृष्ट्वा नखरश्रितमौक्तिकान्॥
+
+विपक्षान् भूभृतस्तत्र कुर्वता निर्विचेष्टितान्।देवो हरिहयस्तेन द्विरूपत्वमिवान्वभूत्॥
+
+अपर्युषितपानायामनघस्रोतसं शुभाम्।गङ्गामिव विभक्ताङ्गीं प्राप गोदावरीं ततः॥
+
+अशालीनमनस्त्वेपि स्वाश्रितत्राणमिच्छताम्। आन्ध्राणामात्मदातृणां ददावभयदक्षिणाम्॥
+
+पतिरक्षणतुष्टानां स्वगुणग्रथिताक्षरैः।आन्ध्रेश्वरपुरन्ध्रीणां सङ्गीतैः प्रत्यनन्दत॥
+
+आद्यं द्रमिडदेशानां तुण्डीरमथ मण्डलम्। विवेश भूषितं यूपैर्वेधसो वाजिमेधिकैः॥
+
+क्षिप्ततदोषः स तं देशं क्षीरसिन्धुगुणाधिकम्।शुद्धधर्मपरिष्कारं श्वेतद्वीपममन्यत॥
+
+परित्यक्तपथांस्तत्र स काञिचीकटकत्यजः।आहूय स्थापयामास धर्म्यान् धर्मधुरन्धरः॥
+
+प्रलोभयन्तीं ललितैस्ततः प्रथमलक्षितैः।दर्शनीयेषु चोलेषु दिदृक्षामन्ववर्तत॥
+
+अथ कन्यां कवेरस्य ददर्श कनकाश्रिताम्। अपदिष्टनदीरूपाममृतस्येव देवताम्॥
+
+उदारलहरीलास्यां ललितावर्तरासिकाम्। रसिकः प्रैक्षत नदीं रङ्गपर्यन्तनर्तकीम्॥
+
+रथसेतुनिरुद्धा सा रत्नाकरमनोरथात्। अवरुह्य जगामेव सह्यस्य पितुरन्तिकम्॥
+
+दक्षिणापथगङ्गायाः स तस्या दिव्यसम्पदः।ददौ रविसुताश्लेषं दानवर्षेण दन्तिनाम्॥
+
+जननीमुव तां लक्ष्म्याः पाथोनिधिपतिव्रताम्। नियमैरुचितैर्भेजे निगमख्यातवैभवाम् ॥
+
+यशोभिस्सह चोलानामिक्षुनिष्यन्दसंमितम्।पयः सह्यपयस्विन्याः पपुर्यादवयूथपाः॥
+
+जहसुर्जागरूकास्ते जङ्घालगुणशालिनाम्।दृष्ट्वा द्रमिडयोधानामवस्कन्दमनोरथम्॥
+
+त्रिविष्टपनिभांस्तत्र दृष्ट्वा जनपदान् बहून्। अचमत्कारमन्येषु भूमिभागेष्वधत्त सः॥
+
+तत्र दर्पममित्राणां मित्राणामपि साध्वसम्।अखण्डयदपर्यायात् अत्याखण्डलविक्रमः॥
+
+रङ्गमात्मभुवस्तत्र रम्यनिर्माणमातृकाम्। अनन्तपीठिकारूढमभ्यर्च्य मुदितो ययौ॥
+
+दिवापि दीपसापेक्षं गहनं संश्रितान् गजैः। स चोरांश्चूर्णयामास चोलपाण्ड्योपघातिनः॥
+
+रम्यपत्तनसम्बाधां रत्नसैकतशोभिनीम्। व्यलोकयत संप्रीतो वेलाविपिनपद्धतिम्॥
+
+मैनाकमहसा दीप्तं सेतुसीमन्तितोदकम्।दमितं रघुवीरेण ददर्शाब्धिं स दक्षिणंम्॥
+
+परिखां प्रेक्ष्य लङ्कायाः पयोधिं प्रजहर्ष सः।ताराभूषितदेहस्य त्रिदिवस्येव दर्पणम्॥
+
+सहसोत्पततां तत्र धन्विनो लघुविक्रमाः।उदधिं दन्तिनक्राणां कुम्भरत्नैरपूरयन्॥
+
+गगनं च निरालम्बमगाधं च महोदधिम्। वीक्ष्य ते बह्वमन्यन्त हनूमन्तं गतागतम्॥
+
+स भेजे सरितां पत्युः पुलिनं वृष्णिपुङ्गवः। आसीदविधवा गङ्गा प्रसन्ने यत्र राघवे ॥
+
+व्यलोकत च विसमेरो लङ्कागोपुरमुत्तरम्।रघुवीरशरव्रातपरिकल्पितजालकम्॥
+
+परिभूतरवस्तस्य सैन्यघोषेण सागरः।अधिकं क्षोभमापन्नस्रासभिन्न इवाभवत्॥
+
+तमालान् प्रतिमातङ्गत्रासादालानमण्डलान्।ममृदुर्ननमावार्य मदान्धा गन्धसिन्धुराः॥
+
+नलसेतुं ततो नीत्वा दृष्टमुक्तानदीमुखः।वीरो विश्रमयामास दुर्निवारां वरूथिनीम्॥
+
+कृतव्यावर्तनास्तत्र केतकीरेणुरूषिताः। द्विषः स्कन्धांश्च दुधुवुर्हयास्तुमुलहेषिताः॥
+
+धनुषा शार्ङ्गभीमेन सामिविष्पारितेन सः सज्जितोदधिगोषेण लङ्काद्वीपमकम्पयत्॥
+
+प्रतापदूतवशगाः प्राज्यरत्नोपहारिणः।अजीवन् यदुसिंहस्य पादमाश्रित्य सिंहलाः॥
+
+महतीमुपदां तेषां द्विपरत्नादिशालिनीम्।स संगृह्य पुनश्चक्रे न मनः सेतुबन्धने॥
+
+द्विरदान् सिंहलेन्द्रस्य द्विचतुर्दन्तशोभिनः।पोतभूतांस्त्रिकूटस्य पोतानीतान् अमन्यत॥
+
+यशोरत्नाकरस्तस्य बभौ पाण्ड्यसमर्पितैः।सैन्यकञ्चुकपर्याप्तैर्मुक्तापुलिनमण्डलैः॥
+
+सोमवंशभुवां तत्र भूभृतां यदुपुङ्गवः। सयूथ्यभावमुद्भाव्य शङ्काज्वरमपानुदत्॥
+
+स मारुतिपदन्यासादञ्चिताग्रामधित्यकाम्।प्रभुः प्रदक्षिणीचक्रे महेन्द्रस्य महीभृतः॥
+
+उपभुक्ता बभौ तेन मलयस्य वनस्थली।सैन्यसम्मर्दसम्भूतैरेलाचन्दनसौरभैः॥
+
+पदगेन्द्रध्वजत्रासात् भ्रष्टकुण्डलितात्मनाम्।जगृहुर्यादवास्तत्र फणारत्नानि भोगिनाम्॥
+
+पृतनां तस्य संप्रेक्ष्य पृषद्भावितसागराम्।मानमात्मनु तत्याज मलयाश्रमतापसः॥
+
+मरुतस्तत्र नागानां मृदितैलासुगन्धयः। चन्दनद्रुमसक्तानां प्रीतिकोपकृतोभवन्॥
+
+पटीरस्कन्धविषयास्तत्र तेषां भुजङ्गमाः।अभजन्त फणारत्नैरवातक्षोभदीपताम्॥
+
+मुक्ताभरमभूयिष्ठा रत्नचन्दनरञ्जिता।चकाशे यादवी सेना सतारेव पितृप्रसूः॥
+
+निदाघमिव पर्जन्यो निरासे सात्यकिः परम्।प्रयुक्तैरग्रतो नागैः प्रावृषेण्यैरिवाम्बुदैः॥
+
+युगपत् प्रत्यविध्यन्त युद्धे तस्य शरैर्द्विषः। अपाङ्गैश्च सुरस्त्रीणामसितोत्पलमेचकैः॥
+
+शस्त्रकेलिं परित्यज्य स्वकान्ताकेशभङ्गुराम्।जगृहुः केरलास्तत्र जैत्रमस्त्रमिवाञ्जलिम्॥
+
+अदूरावस्थितो रामस्तत्र वृष्णिवरूथिनीम्।शशङ्के विस्मयाविद्धः सप्तार्णवसमाहृतिम्॥
+
+भुग्नभागस्ततः सह्यस्तदाक्रमणयन्त्रितः।प्रणिनंसुरिवाबोधि पर्यस्तशकटोपमः॥
+
+अग्रस्कन्धेन गोकर्णं महेन्द्रमपि मूलतः।अवस्कन्द्य युदुश्रेष्ठः स्कन्धावारं न्यवीविशत्॥
+
+जित्वा सह्याश्रितं वीरो जामदग्न्य इवापरः।दूरमुत्सारयामास द्विषद्बलमहार्णवम्॥
+
+चारुचन्दनसम्पन्नशैलस्तनमनोहराम्।बुभुजे दक्षिणामाशां मौक्तिकाकरमेखलाम्॥
+
+तत्र वेलानिलोद्धूतराजतालरवान्वितम्।स्वर्गीतं स्वादु शुश्राव भुजङ्गस्त्रीमुखोदितम्॥
+
+चोलकेरलपाण्ड्यानां पश्यन् अनुगतिं प्रभूः।चकार पुनराधानं धर्म्यं हुतभुजामिव॥
+
+कालदृष्टिकरालाभिरुल्काभिरिव हेतिभिः।दुर्मदद्विरदोदग्रान् त्रासयामास तौलुवान्॥
+
+खेटकर्परगूढाङ्गान् कीलयित्वा शरैर्द्विषः। स्थलकूर्मैरिवाकीर्णं चकार रणभूतलम्॥
+
+शरैरभ्यर्चितास्तेन कोङ्कणाः समराङ्कणे।पुष्पवृष्टिभिरानर्चुस्तमेव त्रिदशीकृताः॥
+
+कुपिताः कोङ्कणस्त्रीणां गण्डूषमधुगर्भितान्।बभञ्जुरमितामोदान् वकुलान् वृष्णिकुञ्जराः॥
+
+प्रमादानिव तान् सप्त देशान् अतिपतन् प्रभुः।स ममर्द महाराष्ट्रं सैन्यदक्षिणभागतः॥
+
+अपश्यदृश्यमूकान्ते शेषमौलिमणिप्रभाम्।रामसायकरन्ध्रेण निस्सरन्तीं नभस्स्पृशम्॥
+
+कामक्रोधाविवास्कन्द्य सह्यविन्ध्यौ समाहितः।विजिग्ये विषमांस्तत्र विषयान् सत्त्वमास्थितः॥
+
+चापघोषेण निर्भिन्नचक्रवालाद्रिसन्धिना।कुञ्जलीनान् द्विषस्तत्र दिवाभीतान् अभेषयत्॥
+
+अवन्ध्यतपसा विन्ध्यः स्तम्भितः कुम्भजन्मना। यदुपुङ्गवमातङ्गैर्वर्धमान इवाभवत्॥
+
+सूर्यरोधितरुच्छन्नाम् असूर्यंपश्यवीचिकाम्।सोमवंश्याः सुधां तत्र पपुः सोमसमुद्भवाम्॥
+
+तेषां विहरतां तत्र शिञ्जिनीबद्धरावणाम्।कार्तवीर्यजलक्रीडां कथयन्ति स्म तापसाः॥
+
+नगरीं हेहयेन्द्रस्य कारार्पितदशाननाम्।नालदीनां च शिथिलां सनिर्वेदमदर्शयन्॥
+
+थवाजिपदक्षुण्णविन्ध्यमस्तकरेणुभिः।रेवामाचामयामास रिपुस्त्रीबाष्पवर्धिताम्॥
+
+ववृधे समरस्तत्र सुभगस्वर्गसङ्क्रमः।सिद्धगन्धर्वयूथानां चित्तताण्डवदेशिकः॥
+
+स्फुलिङ्गैः खड्गनिष्पिष्टदन्तदम्भोलिसम्भवैः।आसीत् द्विरदमेघानामचिरद्युतिकल्पना॥
+
+सव्यालमृगसङ्कीर्णा रम्यतुङ्गरथद्रुमा।विससर्प चमूस्तत्र विन्ध्यवन्येव जङ्गमा॥
+
+तालद्वयसजङ्घाग्र्याः कुम्भैरुत्तम्भिताम्बराः।गर्जितैस्त्रासयामासुर्गजा वनमतङ्गजान्॥
+
+बलयन्त्रणया तत्र गृहीतैर्विपिनद्विपैः।व्यवर्धयत तां सेनां विन्ध्यपादैरिवोन्नतैः॥
+
+यूथैर्द्विरदशैलानां कनत्कदलिकावनैः। अनन्तरं पूरयामास विन्ध्यनीहारभूभृतोः॥
+
+अरातिवनितानेत्रैरश्रुधाराधरैरिमाम्।वीरो वसुमतीमित्थं विदधे देवमातृकाम्॥
+
+धर्मयूपनिभैस्तस्य जयस्तम्भैः समन्ततः।प्ररूढाद्भुतरोमाञ्चा प्रत्यभासत मेदिनी॥
+
+जिताशेषविपक्षस्य बद्धमुक्तावभासिनी।अभवत् ककुभां तस्य कीर्तिः श्रवणभूषणम्॥
+
+इति ग्राह्यकराश्चक्रे हरितो हरितोषकृत्।वीरः सुरभिणा स्वेन यशसावासिताम्बराः॥
+
+हृतसर्वस्वदीनानां व्रीडामपनुदन्निव। अदिशत् क्षौममाशानां यशोभिर्हंसलक्षणैः॥
+
+स चक्रवत् परिक्रम्य क्षमाचक्रमरिन्दमः।क्षपयित्वा रिपून् सर्वान् शौरिपार्श्वं पुनर्ययौ॥
+
+सैन्यसिन्धुपथस्तस्य स्थलीशेषितकण्टकः। विदधे विस्मयोन्निद्रप्रीतिकण्टकितां भुवम्॥
+
+तमेवमखिलामाशां परिक्रम्योदयस्थितम्।प्रद्यौतनसमे पौराः प्रहृष्टाः प्रत्युपासत॥
+
+सैन्यघोषसमाहूतौ ततो हरिहलायुधौ। तमभ्याजग्मतुर्दूरादुग्रसेनपुरोगमौ॥
+
+ददृशे सात्यकिस्तत्र राममुख्यैः सराजकः।अन्यैः सह दिशापालैराखण्डल इवापरः॥
+
+अभिवन्द्य स तान् वन्द्यान् अभिव्यक्तपराक्रमः।तदनुप्लवभावेन प्राविशत् द्वारकां पुरीम्॥
+
+प्रस्थितौ परिमेयानि पश्चादुपचितानि सा ।जग्रसे यदुसैन्यानि जगन्तीव हरेस्तनुः।अष्टासु दिक्षु विभवैरुपसङ्गृहीतैः यक्षास्पदप्रहसनी यदुराजधानी।   
+सत्यानुभाववसुदेवसुतप्रसत्त्यै सम्भूतदिक्पतिविभूतिरिवावभासे॥
+
+अभ्यर्च्य पूर्वविभवादधिकैः प्रदिष्टैः नाकाधिपानिव नवोपहृतान् नरेन्द्रान्।   
+धर्मानुपालननियोगनिरूढचित्तान् प्रास्थापयत् प्रतिदिशं प्रथमो यदूनाम्॥
+
+मणिमकुटसहस्रैर्वासुदेवस्य भूपाः पदसविधनिषण्णां पादुकामर्चयित्वा।   
+प्रतिययुरुपलब्धैः पारिजातप्रसूनैः सुरभयितुमुपेत्य स्वावरोधान् प्रसाद्यान्॥
+
